--- a/Embedding/Schizophrenia_Spectrum_out/Brief_Psychotic_Disorder.html
+++ b/Embedding/Schizophrenia_Spectrum_out/Brief_Psychotic_Disorder.html
@@ -41,30 +41,6 @@
       cursor: pointer;
     }
     button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +65,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -138,10 +89,7 @@
 <!-- Critère A -->
 <fieldset id="critereA">
   <legend>Critère A – Présence de symptômes psychotiques</legend>
-  <p class="subtitle">Présence d'un (ou plusieurs) des symptômes suivants. Au moins un de ceux-ci doit être (1), (2) ou (3)</p>
-  <div class="warning-box">
-    ⚠️ Au moins 1 symptôme requis, et au moins un doit être délires (1), hallucinations (2) ou discours désorganisé (3)
-  </div>
+  <p class="subtitle">Présence d'un (ou plusieurs) des symptômes suivants. Au moins un de ceux-ci doit être (1), (2) ou (3). Note: Ne pas inclure un symptôme s'il s'agit d'une réponse culturellement sanctionnée</p>
   
   <label><input type="checkbox" name="critereA" value="1. Délires"/> <strong>1.</strong> Délires</label>
   
@@ -150,29 +98,19 @@
   <label><input type="checkbox" name="critereA" value="3. Discours désorganisé (déraillement fréquent ou incohérence)"/> <strong>3.</strong> Discours désorganisé (ex: déraillement fréquent ou incohérence)</label>
   
   <label><input type="checkbox" name="critereA" value="4. Comportement grossièrement désorganisé ou catatonique"/> <strong>4.</strong> Comportement grossièrement désorganisé ou catatonique</label>
-  
-  <div class="note-box">
-    <strong>Note :</strong> Ne pas inclure un symptôme s'il s'agit d'une réponse culturellement sanctionnée.
-  </div>
-  
-  <button type="button" onclick="validerCritereA()">✔️ Valider le critère A</button>
 </fieldset>
 
 <!-- Critère B -->
-<fieldset id="critereB" class="hidden">
+<fieldset id="critereB">
   <legend>Critère B – Durée de l'épisode</legend>
-  <p class="subtitle">La durée d'un épisode de la perturbation est d'au moins 1 jour mais moins de 1 mois, avec retour complet éventuel au niveau de fonctionnement prémorbide</p>
-  <div class="warning-box">
-    ⚠️ Durée : ≥1 jour et <1 mois
-  </div>
+  <p class="subtitle">La durée d'un épisode de la perturbation est d'au moins 1 jour mais moins de 1 mois, avec retour complet éventuel au niveau de fonctionnement prémorbide (Durée : ≥1 jour et <1 mois)</p>
   <label><input type="checkbox" name="critereB" value="Durée au moins 1 jour"/> Durée d'au moins 1 jour</label>
   <label><input type="checkbox" name="critereB" value="Durée moins de 1 mois"/> Durée de moins de 1 mois</label>
   <label><input type="checkbox" name="critereB" value="Retour complet éventuel au niveau de fonctionnement prémorbide"/> Retour complet éventuel au niveau de fonctionnement prémorbide</label>
-  <button type="button" onclick="validerCritereB()">✔️ Valider le critère B</button>
 </fieldset>
 
 <!-- Critère C -->
-<fieldset id="critereC" class="hidden">
+<fieldset id="critereC">
   <legend>Critère C – Exclusion d'autres troubles</legend>
   <p class="subtitle">La perturbation n'est pas mieux expliquée par d'autres troubles et n'est pas attribuable aux effets physiologiques d'une substance ou d'une autre condition médicale</p>
   <label><input type="checkbox" name="critereC" value="Non mieux expliqué par trouble dépressif majeur avec caractéristiques psychotiques"/> Non mieux expliqué par trouble dépressif majeur avec caractéristiques psychotiques</label>
@@ -180,11 +118,10 @@
   <label><input type="checkbox" name="critereC" value="Non mieux expliqué par autre trouble psychotique (schizophrénie, catatonie)"/> Non mieux expliqué par autre trouble psychotique (schizophrénie, catatonie)</label>
   <label><input type="checkbox" name="critereC" value="Non attribuable aux effets physiologiques d'une substance"/> Non attribuable aux effets physiologiques d'une substance (drogue, médicament)</label>
   <label><input type="checkbox" name="critereC" value="Non attribuable aux effets physiologiques d'une autre condition médicale"/> Non attribuable aux effets physiologiques d'une autre condition médicale</label>
-  <button type="button" onclick="validerCritereC()">✔️ Valider le critère C</button>
 </fieldset>
 
 <!-- Spécificateurs -->
-<fieldset id="specificateurs" class="hidden">
+<fieldset id="specificateurs">
   <legend>Spécificateurs</legend>
   
   <p style="margin-top: 10px;"><strong>Relation avec facteurs de stress :</strong></p>
@@ -196,120 +133,41 @@
   <label><input type="checkbox" name="peripartum" value="Avec début péripartum"/> <strong>Avec début péripartum</strong> : Si début durant la grossesse ou dans les 4 semaines post-partum</label>
   
   <p style="margin-top: 15px;"><strong>Catatonie :</strong></p>
-  <label><input type="checkbox" name="catatonie" value="Avec catatonie"/> <strong>Avec catatonie</strong></label>
-  <div class="note-box">
-    <strong>Note de codage :</strong> Utiliser code additionnel F06.1 catatonie associée au trouble psychotique bref pour indiquer la présence de catatonie comorbide.
-  </div>
-  
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
+  <label><input type="checkbox" name="catatonie" value="Avec catatonie"/> <strong>Avec catatonie</strong> (Note de codage: Utiliser code additionnel F06.1 catatonie associée au trouble psychotique bref pour indiquer la présence de catatonie comorbide)</label>
 </fieldset>
 
+<!-- Diagnostic différentiel -->
+<fieldset>
+  <legend>Diagnostic différentiel</legend>
+  <label><input type="checkbox" name="diff_diag" value="Schizophrénie"/> Schizophrénie</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble schizophréniforme"/> Trouble schizophréniforme</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble schizoaffectif"/> Trouble schizoaffectif</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble dépressif/bipolaire avec caractéristiques psychotiques"/> Trouble dépressif/bipolaire avec caractéristiques psychotiques</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble psychotique induit par une substance"/> Trouble psychotique induit par une substance</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble psychotique dû à une autre condition médicale"/> Trouble psychotique dû à une autre condition médicale</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble délirant"/> Trouble délirant</label>
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset>
+  <legend>Comorbidité</legend>
+  <label><input type="checkbox" name="comorbidite" value="Trouble de stress post-traumatique"/> Trouble de stress post-traumatique</label>
+  <label><input type="checkbox" name="comorbidite" value="Trouble de la personnalité"/> Trouble de la personnalité</label>
+  <label><input type="checkbox" name="comorbidite" value="Trouble lié à l'usage de substances"/> Trouble lié à l'usage de substances</label>
+</fieldset>
+
+<!-- Boutons de validation -->
+<div class='boutons-validation'>
+  <button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button>
+  <button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button>
+</div>
+
 </form>
-
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:[],critereB:[],critereC:[],stresseur:"",peripartum:false,catatonie:false};
-
-function validerCritereA(){
-  const c=Array.from(document.querySelectorAll("input[name='critereA']:checked")).map(e=>e.value);
-  const hasCore=c.some(s=>s.startsWith("1.")||s.startsWith("2.")||s.startsWith("3."));
-  if(c.length>0&&hasCore){
-    choix.critereA=c;
-    document.getElementById("critereB").classList.remove("hidden");
-  }else if(c.length>0&&!hasCore){
-    Swal.fire({icon: "warning", title: "Attention", text: "Au moins un symptôme doit être délires (1), hallucinations (2) ou discours désorganisé (3)", confirmButtonColor: "#667eea"});
-  }else{
-    Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins un symptôme du critère A", confirmButtonColor: "#667eea"});
-  }
-}
-
-function validerCritereB(){
-  const c=Array.from(document.querySelectorAll("input[name='critereB']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereB=c;
-    document.getElementById("critereC").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère B", confirmButtonColor: "#667eea"});
-}
-
-function validerCritereC(){
-  const c=Array.from(document.querySelectorAll("input[name='critereC']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereC=c;
-    document.getElementById("specificateurs").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère C", confirmButtonColor: "#667eea"});
-}
-
-function afficherResume(){
-  const s=document.querySelector("input[name='stresseur']:checked");
-  if(!s){
-    Swal.fire({icon: "warning", title: "Attention", text: "Sélectionnez une option concernant les facteurs de stress", confirmButtonColor: "#667eea"});
-    return;
-  }
-  choix.stresseur=s.value;
-  choix.peripartum=document.querySelector("input[name='peripartum']:checked")!==null;
-  choix.catatonie=document.querySelector("input[name='catatonie']:checked")!==null;
-  genererResume();
-}
-
-function genererResume(){
-  let code="F23";
-  let diag=code+" Trouble Psychotique Bref";
-  if(choix.stresseur)diag+=", "+choix.stresseur.toLowerCase();
-  if(choix.peripartum)diag+=", avec début péripartum";
-  if(choix.catatonie)diag+=", avec catatonie (F06.1)";
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Critère A – Présence de symptômes psychotiques</h4><ul class='choix-list'>";
-  choix.critereA.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère B – Durée de l'épisode (≥1 jour et <1 mois)</h4><ul class='choix-list'>";
-  choix.critereB.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère C – Exclusion d'autres troubles</h4><ul class='choix-list'>";
-  choix.critereC.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Spécificateurs</h4><ul class='choix-list'>";
-  h+="<li>✓ "+choix.stresseur+"</li>";
-  if(choix.peripartum)h+="<li>✓ Avec début péripartum (durant grossesse ou ≤4 semaines post-partum)</li>";
-  if(choix.catatonie)h+="<li>✓ Avec catatonie (code additionnel F06.1)</li>";
-  h+="</ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code;
-  if(choix.catatonie)h+=" + F06.1 (catatonie associée)";
-  h+="<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Présence d'un ou plusieurs symptômes psychotiques. Au moins un doit être délires, hallucinations ou discours désorganisé.";
-  h+="<br/><br/><strong>Critère A - Symptômes (au moins 1, dont 1/2/3 requis) :</strong>";
-  h+="<br/>1. Délires";
-  h+="<br/>2. Hallucinations";
-  h+="<br/>3. Discours désorganisé";
-  h+="<br/>4. Comportement grossièrement désorganisé ou catatonique";
-  h+="<br/><br/><strong>Critère B - Durée :</strong> ≥1 jour et <1 mois, avec retour complet éventuel au niveau de fonctionnement prémorbide.";
-  h+="<br/><br/><strong>Critère C :</strong> Non mieux expliqué par trouble dépressif/bipolaire avec caractéristiques psychotiques, autre trouble psychotique, substance ou condition médicale.";
-  h+="<br/><br/><strong>Spécificateurs :</strong>";
-  h+="<br/>• Avec/sans facteur(s) de stress marqué(s)";
-  h+="<br/>• Avec début péripartum (durant grossesse ou ≤4 semaines post-partum)";
-  h+="<br/>• Avec catatonie (code additionnel F06.1)";
-  h+="<br/><br/><strong>Note :</strong> Ne pas inclure symptôme s'il s'agit d'une réponse culturellement sanctionnée.";
-  h+="<br/><br/><strong>Sévérité :</strong> Peut être évaluée sur échelle 0-4 pour délires, hallucinations, discours désorganisé, comportement psychomoteur anormal, symptômes négatifs (optionnel).";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 16/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
