--- a/Embedding/Personality_Disorders_out/Section1_Cluster A Personality Disorders/Schizoid_Personality_Disorder.html
+++ b/Embedding/Personality_Disorders_out/Section1_Cluster A Personality Disorders/Schizoid_Personality_Disorder.html
@@ -41,30 +41,6 @@
       cursor: pointer;
     }
     button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +65,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -138,10 +89,7 @@
 <!-- Critère A -->
 <fieldset id="critereA">
   <legend>Critère A – Pattern envahissant de détachement et restriction émotionnelle</legend>
-  <p class="subtitle">Pattern envahissant de détachement des relations sociales et gamme restreinte d'expression des émotions dans les contextes interpersonnels, débutant au début de l'âge adulte et présent dans divers contextes</p>
-  <div class="warning-box">
-    ⚠️ Au moins 4 des 7 critères suivants sont requis
-  </div>
+  <p class="subtitle">Pattern envahissant de détachement des relations sociales et gamme restreinte d'expression des émotions dans les contextes interpersonnels, débutant au début de l'âge adulte et présent dans divers contextes (au moins 4 des 7 critères suivants sont requis)</p>
   
   <label><input type="checkbox" name="critereA" value="1. Ne désire ni n'apprécie relations proches, y compris faire partie d'une famille"/> <strong>1.</strong> Ne désire ni n'apprécie les relations proches, y compris faire partie d'une famille</label>
   
@@ -156,14 +104,12 @@
   <label><input type="checkbox" name="critereA" value="6. Apparaît indifférent aux éloges ou critiques des autres"/> <strong>6.</strong> Apparaît indifférent aux éloges ou aux critiques des autres</label>
   
   <label><input type="checkbox" name="critereA" value="7. Montre froideur émotionnelle, détachement ou affectivité aplatie"/> <strong>7.</strong> Montre froideur émotionnelle, détachement ou affectivité aplatie</label>
-  
-  <button type="button" onclick="validerCritereA()">✔️ Valider le critère A</button>
 </fieldset>
 
 <!-- Critère B -->
-<fieldset id="critereB" class="hidden">
+<fieldset id="critereB">
   <legend>Critère B – Exclusion d'autres troubles</legend>
-  <p class="subtitle">Ne survient pas exclusivement durant le cours d'autres troubles et n'est pas attribuable aux effets physiologiques d'une autre condition médicale</p>
+  <p class="subtitle">Ne survient pas exclusivement durant le cours d'autres troubles et n'est pas attribuable aux effets physiologiques d'une autre condition médicale. Note: Si critères remplis avant début de schizophrénie, ajouter "prémorbide"</p>
   
   <label><input type="checkbox" name="critereB" value="Ne survient pas exclusivement durant cours de schizophrénie"/> Ne survient pas exclusivement durant le cours de la schizophrénie</label>
   <label><input type="checkbox" name="critereB" value="Ne survient pas exclusivement durant trouble bipolaire avec caractéristiques psychotiques"/> Ne survient pas exclusivement durant un trouble bipolaire avec caractéristiques psychotiques</label>
@@ -171,99 +117,47 @@
   <label><input type="checkbox" name="critereB" value="Ne survient pas exclusivement durant autre trouble psychotique"/> Ne survient pas exclusivement durant un autre trouble psychotique</label>
   <label><input type="checkbox" name="critereB" value="Ne survient pas exclusivement durant trouble du spectre de l'autisme"/> Ne survient pas exclusivement durant un trouble du spectre de l'autisme</label>
   <label><input type="checkbox" name="critereB" value="Non attribuable aux effets physiologiques d'une autre condition médicale"/> Non attribuable aux effets physiologiques d'une autre condition médicale</label>
-  
-  <div class="note-box">
-    <strong>Note :</strong> Si les critères sont remplis avant le début de la schizophrénie, ajouter "prémorbide", c'est-à-dire "trouble de la personnalité schizoïde (prémorbide)".
-  </div>
-  
-  <button type="button" onclick="validerCritereB()">✔️ Valider le critère B</button>
 </fieldset>
 
 <!-- Spécificateur -->
-<fieldset id="specificateur" class="hidden">
+<fieldset id="specificateur">
   <legend>Spécificateur</legend>
   
   <p style="margin-top: 10px;"><strong>Relation avec schizophrénie :</strong></p>
   <label><input type="checkbox" name="premorbide" value="Prémorbide"/> Prémorbide (critères remplis avant début de schizophrénie)</label>
-  
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
 </fieldset>
 
+<!-- Diagnostic différentiel -->
+<fieldset>
+  <legend>Diagnostic différentiel</legend>
+  <label><input type="checkbox" name="diff_diag" value="Trouble du spectre de l'autisme"/> Trouble du spectre de l'autisme</label>
+  <label><input type="checkbox" name="diff_diag" value="Schizophrénie"/> Schizophrénie</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble de l'humeur avec caractéristiques psychotiques"/> Trouble de l'humeur avec caractéristiques psychotiques</label>
+  <label><input type="checkbox" name="diff_diag" value="Changement de personnalité dû à une autre condition médicale"/> Changement de personnalité dû à une autre condition médicale</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble lié à l'usage de substances"/> Trouble lié à l'usage de substances</label>
+  <label><input type="checkbox" name="diff_diag" value="Autres troubles de la personnalité"/> Autres troubles de la personnalité (schizotypique, paranoïaque, évitante)</label>
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset>
+  <legend>Comorbidité</legend>
+  <label><input type="checkbox" name="comorbidite" value="Trouble dépressif majeur"/> Trouble dépressif majeur</label>
+  <label><input type="checkbox" name="comorbidite" value="Autres troubles de la personnalité"/> Autres troubles de la personnalité (schizotypique, paranoïaque, évitante)</label>
+  <label><input type="checkbox" name="comorbidite" value="Trouble du spectre de l'autisme"/> Trouble du spectre de l'autisme (diagnostic différé)</label>
+</fieldset>
+
+<!-- Boutons de validation -->
+<div class='boutons-validation'>
+  <button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button>
+  <button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button>
+</div>
+
 </form>
-
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:[],critereB:[],premorbide:false};
-
-function validerCritereA(){
-  const c=Array.from(document.querySelectorAll("input[name='critereA']:checked")).map(e=>e.value);
-  if(c.length>=4){
-    choix.critereA=c;
-    document.getElementById("critereB").classList.remove("hidden");
-  }else alert("Au moins 4 des 7 critères du critère A sont requis (actuellement: "+c.length+")");
-}
-
-function validerCritereB(){
-  const c=Array.from(document.querySelectorAll("input[name='critereB']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereB=c;
-    document.getElementById("specificateur").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère B", confirmButtonColor: "#667eea"});
-}
-
-function afficherResume(){
-  choix.premorbide=document.querySelector("input[name='premorbide']:checked")!==null;
-  genererResume();
-}
-
-function genererResume(){
-  const code="F60.1";
-  let diag=code+" Trouble de la Personnalité Schizoïde";
-  if(choix.premorbide)diag+=" (prémorbide)";
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Critère A – Pattern envahissant de détachement et restriction émotionnelle ("+choix.critereA.length+"/7, minimum 4 requis)</h4><ul class='choix-list'>";
-  choix.critereA.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère B – Exclusion d'autres troubles</h4><ul class='choix-list'>";
-  choix.critereB.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  if(choix.premorbide){
-    h+="<h4>Spécificateur</h4><ul class='choix-list'><li>✓ Prémorbide (critères remplis avant début de schizophrénie)</li></ul>";
-  }
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Pattern envahissant de détachement des relations sociales et gamme restreinte d'expression des émotions dans les contextes interpersonnels, débutant au début de l'âge adulte et présent dans divers contextes. Au moins 4 des 7 critères requis.";
-  h+="<br/><br/><strong>Critères A ("+choix.critereA.length+"/7) :</strong>";
-  h+="<br/>1. Ne désire ni n'apprécie relations proches (y compris famille)";
-  h+="<br/>2. Choisit presque toujours activités solitaires";
-  h+="<br/>3. Peu/pas d'intérêt pour expériences sexuelles";
-  h+="<br/>4. Prend plaisir dans peu/aucune activité";
-  h+="<br/>5. Manque d'amis proches/confidents (sauf parents 1er degré)";
-  h+="<br/>6. Indifférent aux éloges ou critiques";
-  h+="<br/>7. Froideur émotionnelle, détachement, affectivité aplatie";
-  h+="<br/><br/><strong>Critère B :</strong> Ne survient pas exclusivement durant schizophrénie, trouble bipolaire/dépressif avec caractéristiques psychotiques, autre trouble psychotique, trouble du spectre de l'autisme. Non attribuable aux effets physiologiques d'une condition médicale.";
-  if(choix.premorbide){
-    h+="<br/><br/><strong>Spécificateur prémorbide :</strong> Critères remplis avant le début de la schizophrénie.";
-  }
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 15/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
