--- a/Embedding/Personality_Disorders_out/Section1_Cluster A Personality Disorders/Schizotypal_Personality_Disorder.html
+++ b/Embedding/Personality_Disorders_out/Section1_Cluster A Personality Disorders/Schizotypal_Personality_Disorder.html
@@ -41,30 +41,6 @@
       cursor: pointer;
     }
     button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +65,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -138,10 +89,7 @@
 <!-- Critère A -->
 <fieldset id="critereA">
   <legend>Critère A – Pattern envahissant de déficits sociaux et interpersonnels</legend>
-  <p class="subtitle">Pattern envahissant de déficits sociaux et interpersonnels marqués par malaise aigu avec et capacité réduite pour relations proches, ainsi que distorsions cognitives ou perceptuelles et excentricités comportementales, débutant au début de l'âge adulte et présent dans divers contextes</p>
-  <div class="warning-box">
-    ⚠️ Au moins 5 des 9 critères suivants sont requis
-  </div>
+  <p class="subtitle">Pattern envahissant de déficits sociaux et interpersonnels marqués par malaise aigu avec et capacité réduite pour relations proches, ainsi que distorsions cognitives ou perceptuelles et excentricités comportementales, débutant au début de l'âge adulte et présent dans divers contextes (au moins 5 des 9 critères suivants sont requis)</p>
   
   <label><input type="checkbox" name="critereA" value="1. Idées de référence (excluant délires de référence)"/> <strong>1.</strong> Idées de référence (excluant délires de référence)</label>
   
@@ -160,115 +108,60 @@
   <label><input type="checkbox" name="critereA" value="8. Manque d'amis proches ou confidents autres que parents au premier degré"/> <strong>8.</strong> Manque d'amis proches ou de confidents autres que les parents au premier degré</label>
   
   <label><input type="checkbox" name="critereA" value="9. Anxiété sociale excessive ne diminuant pas avec familiarité et associée à craintes paranoïdes plutôt que jugements négatifs sur soi"/> <strong>9.</strong> Anxiété sociale excessive qui ne diminue pas avec la familiarité et tend à être associée à des craintes paranoïdes plutôt qu'à des jugements négatifs sur soi</label>
-  
-  <button type="button" onclick="validerCritereA()">✔️ Valider le critère A</button>
 </fieldset>
 
 <!-- Critère B -->
-<fieldset id="critereB" class="hidden">
+<fieldset id="critereB">
   <legend>Critère B – Exclusion d'autres troubles</legend>
-  <p class="subtitle">Ne survient pas exclusivement durant le cours d'autres troubles</p>
+  <p class="subtitle">Ne survient pas exclusivement durant le cours d'autres troubles. Note: Si critères remplis avant début de schizophrénie, ajouter "prémorbide"</p>
   
   <label><input type="checkbox" name="critereB" value="Ne survient pas exclusivement durant cours de schizophrénie"/> Ne survient pas exclusivement durant le cours de la schizophrénie</label>
   <label><input type="checkbox" name="critereB" value="Ne survient pas exclusivement durant trouble bipolaire avec caractéristiques psychotiques"/> Ne survient pas exclusivement durant un trouble bipolaire avec caractéristiques psychotiques</label>
   <label><input type="checkbox" name="critereB" value="Ne survient pas exclusivement durant trouble dépressif avec caractéristiques psychotiques"/> Ne survient pas exclusivement durant un trouble dépressif avec caractéristiques psychotiques</label>
   <label><input type="checkbox" name="critereB" value="Ne survient pas exclusivement durant autre trouble psychotique"/> Ne survient pas exclusivement durant un autre trouble psychotique</label>
   <label><input type="checkbox" name="critereB" value="Ne survient pas exclusivement durant trouble du spectre de l'autisme"/> Ne survient pas exclusivement durant un trouble du spectre de l'autisme</label>
-  
-  <div class="note-box">
-    <strong>Note :</strong> Si les critères sont remplis avant le début de la schizophrénie, ajouter "prémorbide", par exemple "trouble de la personnalité schizotypique (prémorbide)".
-  </div>
-  
-  <button type="button" onclick="validerCritereB()">✔️ Valider le critère B</button>
 </fieldset>
 
 <!-- Spécificateur -->
-<fieldset id="specificateur" class="hidden">
+<fieldset id="specificateur">
   <legend>Spécificateur</legend>
   
   <p style="margin-top: 10px;"><strong>Relation avec schizophrénie :</strong></p>
   <label><input type="checkbox" name="premorbide" value="Prémorbide"/> Prémorbide (critères remplis avant début de schizophrénie)</label>
-  
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
 </fieldset>
 
+<!-- Diagnostic différentiel -->
+<fieldset>
+  <legend>Diagnostic différentiel</legend>
+  <label><input type="checkbox" name="diff_diag" value="Trouble du spectre de l'autisme"/> Trouble du spectre de l'autisme</label>
+  <label><input type="checkbox" name="diff_diag" value="Schizophrénie"/> Schizophrénie</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble de l'humeur avec caractéristiques psychotiques"/> Trouble de l'humeur avec caractéristiques psychotiques</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble délirant"/> Trouble délirant</label>
+  <label><input type="checkbox" name="diff_diag" value="Changement de personnalité dû à une autre condition médicale"/> Changement de personnalité dû à une autre condition médicale</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble lié à l'usage de substances"/> Trouble lié à l'usage de substances</label>
+  <label><input type="checkbox" name="diff_diag" value="Autres troubles de la personnalité"/> Autres troubles de la personnalité (paranoïaque, schizoïde, évitante, borderline, narcissique)</label>
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset>
+  <legend>Comorbidité</legend>
+  <label><input type="checkbox" name="comorbidite" value="Trouble dépressif majeur"/> Trouble dépressif majeur</label>
+  <label><input type="checkbox" name="comorbidite" value="Trouble dysthymique"/> Trouble dysthymique</label>
+  <label><input type="checkbox" name="comorbidite" value="Autres troubles de la personnalité"/> Autres troubles de la personnalité (paranoïaque, schizoïde, évitante, borderline, narcissique)</label>
+</fieldset>
+
+<!-- Boutons de validation -->
+<div class='boutons-validation'>
+  <button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button>
+  <button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button>
+</div>
+
 </form>
-
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:[],critereB:[],premorbide:false};
-
-function validerCritereA(){
-  const c=Array.from(document.querySelectorAll("input[name='critereA']:checked")).map(e=>e.value);
-  if(c.length>=5){
-    choix.critereA=c;
-    document.getElementById("critereB").classList.remove("hidden");
-  }else alert("Au moins 5 des 9 critères du critère A sont requis (actuellement: "+c.length+")");
-}
-
-function validerCritereB(){
-  const c=Array.from(document.querySelectorAll("input[name='critereB']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereB=c;
-    document.getElementById("specificateur").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère B", confirmButtonColor: "#667eea"});
-}
-
-function afficherResume(){
-  choix.premorbide=document.querySelector("input[name='premorbide']:checked")!==null;
-  genererResume();
-}
-
-function genererResume(){
-  const code="F21";
-  let diag=code+" Trouble de la Personnalité Schizotypique";
-  if(choix.premorbide)diag+=" (prémorbide)";
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Critère A – Pattern envahissant de déficits sociaux et interpersonnels ("+choix.critereA.length+"/9, minimum 5 requis)</h4><ul class='choix-list'>";
-  choix.critereA.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère B – Exclusion d'autres troubles</h4><ul class='choix-list'>";
-  choix.critereB.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  if(choix.premorbide){
-    h+="<h4>Spécificateur</h4><ul class='choix-list'><li>✓ Prémorbide (critères remplis avant début de schizophrénie)</li></ul>";
-  }
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Pattern envahissant de déficits sociaux et interpersonnels marqués par malaise aigu avec et capacité réduite pour relations proches, ainsi que distorsions cognitives ou perceptuelles et excentricités comportementales, débutant au début de l'âge adulte et présent dans divers contextes. Au moins 5 des 9 critères requis.";
-  h+="<br/><br/><strong>Critères A ("+choix.critereA.length+"/9) :</strong>";
-  h+="<br/>1. Idées de référence (excluant délires)";
-  h+="<br/>2. Croyances bizarres ou pensée magique";
-  h+="<br/>3. Expériences perceptuelles inhabituelles";
-  h+="<br/>4. Pensée et discours bizarres";
-  h+="<br/>5. Méfiance ou idéation paranoïde";
-  h+="<br/>6. Affect inapproprié ou restreint";
-  h+="<br/>7. Comportement/apparence bizarre, excentrique";
-  h+="<br/>8. Manque d'amis proches (sauf parents 1er degré)";
-  h+="<br/>9. Anxiété sociale excessive avec craintes paranoïdes";
-  h+="<br/><br/><strong>Critère B :</strong> Ne survient pas exclusivement durant schizophrénie, trouble bipolaire/dépressif avec caractéristiques psychotiques, autre trouble psychotique, trouble du spectre de l'autisme.";
-  if(choix.premorbide){
-    h+="<br/><br/><strong>Spécificateur prémorbide :</strong> Critères remplis avant le début de la schizophrénie.";
-  }
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 15/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
