--- a/Embedding/Personality_Disorders_out/Section2_Cluster B Personality Disorders/Antisocial_Personality_Disorder.html
+++ b/Embedding/Personality_Disorders_out/Section2_Cluster B Personality Disorders/Antisocial_Personality_Disorder.html
@@ -41,30 +41,6 @@
       cursor: pointer;
     }
     button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +65,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -138,10 +89,7 @@
 <!-- Critère A -->
 <fieldset id="critereA">
   <legend>Critère A – Pattern envahissant de mépris et violation des droits d'autrui</legend>
-  <p class="subtitle">Pattern envahissant de mépris et de violation des droits d'autrui, survenant depuis l'âge de 15 ans</p>
-  <div class="warning-box">
-    ⚠️ Au moins 3 des 7 critères suivants sont requis
-  </div>
+  <p class="subtitle">Pattern envahissant de mépris et de violation des droits d'autrui, survenant depuis l'âge de 15 ans (au moins 3 des 7 critères suivants sont requis)</p>
   
   <label><input type="checkbox" name="critereA" value="1. Échec à se conformer aux normes sociales concernant comportements légaux (actes justifiant arrestation)"/> <strong>1.</strong> Échec à se conformer aux normes sociales concernant les comportements légaux, indiqué par accomplissement répété d'actes justifiant une arrestation</label>
   
@@ -156,119 +104,64 @@
   <label><input type="checkbox" name="critereA" value="6. Irresponsabilité constante (échec répété à maintenir comportement professionnel ou honorer obligations financières)"/> <strong>6.</strong> Irresponsabilité constante, indiquée par échec répété à maintenir un comportement professionnel cohérent ou à honorer les obligations financières</label>
   
   <label><input type="checkbox" name="critereA" value="7. Absence de remords (indifférence ou rationalisation d'avoir blessé, maltraité ou volé autrui)"/> <strong>7.</strong> Absence de remords, indiquée par indifférence ou rationalisation d'avoir blessé, maltraité ou volé autrui</label>
-  
-  <button type="button" onclick="validerCritereA()">✔️ Valider le critère A</button>
 </fieldset>
 
 <!-- Critère B -->
-<fieldset id="critereB" class="hidden">
+<fieldset id="critereB">
   <legend>Critère B – Âge de l'individu</legend>
   <p class="subtitle">L'individu a au moins 18 ans</p>
   <label><input type="checkbox" name="critereB" value="Individu a au moins 18 ans"/> L'individu a au moins 18 ans</label>
-  <button type="button" onclick="validerCritereB()">✔️ Valider le critère B</button>
 </fieldset>
 
 <!-- Critère C -->
-<fieldset id="critereC" class="hidden">
+<fieldset id="critereC">
   <legend>Critère C – Évidence de trouble des conduites</legend>
   <p class="subtitle">Il existe des preuves de trouble des conduites avec début avant l'âge de 15 ans</p>
   <label><input type="checkbox" name="critereC" value="Preuves de trouble des conduites avec début avant âge de 15 ans"/> Il existe des preuves de trouble des conduites avec début avant l'âge de 15 ans</label>
-  <button type="button" onclick="validerCritereC()">✔️ Valider le critère C</button>
 </fieldset>
 
 <!-- Critère D -->
-<fieldset id="critereD" class="hidden">
+<fieldset id="critereD">
   <legend>Critère D – Exclusion d'autres troubles</legend>
   <p class="subtitle">La survenue du comportement antisocial n'est pas exclusivement durant le cours de la schizophrénie ou du trouble bipolaire</p>
   <label><input type="checkbox" name="critereD" value="Ne survient pas exclusivement durant cours de schizophrénie"/> Ne survient pas exclusivement durant le cours de la schizophrénie</label>
   <label><input type="checkbox" name="critereD" value="Ne survient pas exclusivement durant cours de trouble bipolaire"/> Ne survient pas exclusivement durant le cours du trouble bipolaire</label>
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
 </fieldset>
 
+<!-- Diagnostic différentiel -->
+<fieldset>
+  <legend>Diagnostic différentiel</legend>
+  <label><input type="checkbox" name="diff_diag" value="Trouble des conduites"/> Trouble des conduites (si <18 ans)</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble lié à l'usage de substances"/> Trouble lié à l'usage de substances</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble de la personnalité narcissique"/> Trouble de la personnalité narcissique</label>
+  <label><input type="checkbox" name="diff_diag" value="Changement de personnalité dû à une autre condition médicale"/> Changement de personnalité dû à une autre condition médicale</label>
+  <label><input type="checkbox" name="diff_diag" value="Comportement criminel adulte"/> Comportement criminel adulte (sans trouble de la personnalité)</label>
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset>
+  <legend>Comorbidité</legend>
+  <label><input type="checkbox" name="comorbidite" value="Trouble lié à l'usage de substances"/> Trouble lié à l'usage de substances</label>
+  <label><input type="checkbox" name="comorbidite" value="Trouble dépressif"/> Trouble dépressif</label>
+  <label><input type="checkbox" name="comorbidite" value="Trouble anxieux"/> Trouble anxieux</label>
+  <label><input type="checkbox" name="comorbidite" value="TDAH"/> TDAH</label>
+  <label><input type="checkbox" name="comorbidite" value="Trouble de la personnalité borderline"/> Trouble de la personnalité borderline</label>
+  <label><input type="checkbox" name="comorbidite" value="Trouble de la personnalité narcissique"/> Trouble de la personnalité narcissique</label>
+  <label><input type="checkbox" name="comorbidite" value="Trouble de la personnalité histrionique"/> Trouble de la personnalité histrionique</label>
+</fieldset>
+
+<!-- Boutons de validation -->
+<div class='boutons-validation'>
+  <button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button>
+  <button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button>
+</div>
+
 </form>
-
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:[],critereB:"",critereC:"",critereD:[]};
-
-function validerCritereA(){
-  const c=Array.from(document.querySelectorAll("input[name='critereA']:checked")).map(e=>e.value);
-  if(c.length>=3){
-    choix.critereA=c;
-    document.getElementById("critereB").classList.remove("hidden");
-  }else alert("Au moins 3 des 7 critères du critère A sont requis (actuellement: "+c.length+")");
-}
-
-function validerCritereB(){
-  const c=document.querySelector("input[name='critereB']:checked");
-  if(c){
-    choix.critereB=c.value;
-    document.getElementById("critereC").classList.remove("hidden");
-  }else alert("Cochez l'option du critère B");
-}
-
-function validerCritereC(){
-  const c=document.querySelector("input[name='critereC']:checked");
-  if(c){
-    choix.critereC=c.value;
-    document.getElementById("critereD").classList.remove("hidden");
-  }else alert("Cochez l'option du critère C");
-}
-
-function afficherResume(){
-  const c=Array.from(document.querySelectorAll("input[name='critereD']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereD=c;
-    genererResume();
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère D", confirmButtonColor: "#667eea"});
-}
-
-function genererResume(){
-  const code="F60.2";
-  const diag=code+" Trouble de la Personnalité Antisociale";
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Critère A – Pattern envahissant de mépris et violation des droits d'autrui ("+choix.critereA.length+"/7, minimum 3 requis)</h4><ul class='choix-list'>";
-  choix.critereA.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère B – Âge de l'individu</h4><ul class='choix-list'><li>✓ "+choix.critereB+"</li></ul>";
-  
-  h+="<h4>Critère C – Évidence de trouble des conduites</h4><ul class='choix-list'><li>✓ "+choix.critereC+"</li></ul>";
-  
-  h+="<h4>Critère D – Exclusion d'autres troubles</h4><ul class='choix-list'>";
-  choix.critereD.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Pattern envahissant de mépris et de violation des droits d'autrui, survenant depuis l'âge de 15 ans. Au moins 3 des 7 critères requis.";
-  h+="<br/><br/><strong>Critères A ("+choix.critereA.length+"/7) :</strong>";
-  h+="<br/>1. Échec à se conformer aux normes sociales (actes justifiant arrestation)";
-  h+="<br/>2. Tromperie (mensonges, alias, escroquerie)";
-  h+="<br/>3. Impulsivité ou échec à planifier";
-  h+="<br/>4. Irritabilité et agressivité (bagarres/agressions)";
-  h+="<br/>5. Mépris imprudent pour sécurité";
-  h+="<br/>6. Irresponsabilité constante (travail, finances)";
-  h+="<br/>7. Absence de remords";
-  h+="<br/><br/><strong>Critère B :</strong> Individu a au moins 18 ans.";
-  h+="<br/><br/><strong>Critère C :</strong> Preuves de trouble des conduites avec début avant âge de 15 ans.";
-  h+="<br/><br/><strong>Critère D :</strong> Comportement antisocial ne survient pas exclusivement durant schizophrénie ou trouble bipolaire.";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 15/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
