--- a/Embedding/Personality_Disorders_out/Section2_Cluster B Personality Disorders/Histrionic_Personality_Disorder.html
+++ b/Embedding/Personality_Disorders_out/Section2_Cluster B Personality Disorders/Histrionic_Personality_Disorder.html
@@ -41,30 +41,6 @@
       cursor: pointer;
     }
     button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +65,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -138,10 +89,7 @@
 <!-- Critère A -->
 <fieldset id="critereA">
   <legend>Pattern envahissant d'émotivité excessive et de recherche d'attention</legend>
-  <p class="subtitle">Pattern envahissant d'émotivité excessive et de recherche d'attention, débutant au début de l'âge adulte et présent dans divers contextes</p>
-  <div class="warning-box">
-    ⚠️ Au moins 5 des 8 critères suivants sont requis
-  </div>
+  <p class="subtitle">Pattern envahissant d'émotivité excessive et de recherche d'attention, débutant au début de l'âge adulte et présent dans divers contextes (au moins 5 des 8 critères suivants sont requis)</p>
   
   <label><input type="checkbox" name="critereA" value="1. Mal à l'aise dans situations où n'est pas centre d'attention"/> <strong>1.</strong> Mal à l'aise dans les situations où il/elle n'est pas le centre d'attention</label>
   
@@ -158,66 +106,41 @@
   <label><input type="checkbox" name="critereA" value="7. Est suggestible (facilement influencé par autres ou circonstances)"/> <strong>7.</strong> Est suggestible (c'est-à-dire facilement influencé par les autres ou les circonstances)</label>
   
   <label><input type="checkbox" name="critereA" value="8. Considère relations comme plus intimes qu'elles ne le sont réellement"/> <strong>8.</strong> Considère les relations comme plus intimes qu'elles ne le sont réellement</label>
-  
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
 </fieldset>
 
+<!-- Diagnostic différentiel -->
+<fieldset>
+  <legend>Diagnostic différentiel</legend>
+  <label><input type="checkbox" name="diff_diag" value="Trouble de la personnalité borderline"/> Trouble de la personnalité borderline</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble de la personnalité antisociale"/> Trouble de la personnalité antisociale</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble de la personnalité narcissique"/> Trouble de la personnalité narcissique</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble de la personnalité dépendante"/> Trouble de la personnalité dépendante</label>
+  <label><input type="checkbox" name="diff_diag" value="Changement de personnalité dû à une autre condition médicale"/> Changement de personnalité dû à une autre condition médicale</label>
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset>
+  <legend>Comorbidité</legend>
+  <label><input type="checkbox" name="comorbidite" value="Trouble dépressif"/> Trouble dépressif</label>
+  <label><input type="checkbox" name="comorbidite" value="Troubles anxieux"/> Troubles anxieux</label>
+  <label><input type="checkbox" name="comorbidite" value="Trouble lié à l'usage de substances"/> Trouble lié à l'usage de substances</label>
+  <label><input type="checkbox" name="comorbidite" value="Trouble de conversion"/> Trouble de conversion</label>
+  <label><input type="checkbox" name="comorbidite" value="Trouble somatique"/> Trouble somatique</label>
+  <label><input type="checkbox" name="comorbidite" value="Autres troubles de la personnalité"/> Autres troubles de la personnalité (borderline, narcissique, antisociale, dépendante)</label>
+</fieldset>
+
+<!-- Boutons de validation -->
+<div class='boutons-validation'>
+  <button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button>
+  <button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button>
+</div>
+
 </form>
-
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:[]};
-
-function afficherResume(){
-  const c=Array.from(document.querySelectorAll("input[name='critereA']:checked")).map(e=>e.value);
-  if(c.length>=5){
-    choix.critereA=c;
-    genererResume();
-  }else alert("Au moins 5 des 8 critères sont requis (actuellement: "+c.length+")");
-}
-
-function genererResume(){
-  const code="F60.4";
-  const diag=code+" Trouble de la Personnalité Histrionique";
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Pattern envahissant d'émotivité excessive et de recherche d'attention ("+choix.critereA.length+"/8, minimum 5 requis)</h4><ul class='choix-list'>";
-  choix.critereA.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Pattern envahissant d'émotivité excessive et de recherche d'attention, débutant au début de l'âge adulte et présent dans divers contextes. Au moins 5 des 8 critères requis.";
-  h+="<br/><br/><strong>Critères ("+choix.critereA.length+"/8) :</strong>";
-  h+="<br/>1. Mal à l'aise si pas centre d'attention";
-  h+="<br/>2. Comportement sexuellement séducteur/provocateur inapproprié";
-  h+="<br/>3. Expression émotions rapidement changeante et superficielle";
-  h+="<br/>4. Utilise apparence physique pour attirer attention";
-  h+="<br/>5. Discours excessivement impressionniste, manquant détails";
-  h+="<br/>6. Autodramatisation, théâtralité, expression exagérée";
-  h+="<br/>7. Suggestible (facilement influencé)";
-  h+="<br/>8. Considère relations plus intimes qu'elles ne sont";
-  h+="<br/><br/><strong>Thèmes principaux :</strong>";
-  h+="<br/>• Émotivité excessive";
-  h+="<br/>• Recherche constante d'attention";
-  h+="<br/>• Expression émotionnelle superficielle et changeante";
-  h+="<br/>• Comportement théâtral et dramatique";
-  h+="<br/>• Suggestibilité";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 15/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
