--- a/Embedding/Personality_Disorders_out/Section2_Cluster B Personality Disorders/Narcissistic_Personality_Disorder.html
+++ b/Embedding/Personality_Disorders_out/Section2_Cluster B Personality Disorders/Narcissistic_Personality_Disorder.html
@@ -41,30 +41,6 @@
       cursor: pointer;
     }
     button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +65,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -138,10 +89,7 @@
 <!-- Critère A -->
 <fieldset id="critereA">
   <legend>Pattern envahissant de grandiosité, besoin d'admiration et manque d'empathie</legend>
-  <p class="subtitle">Pattern envahissant de grandiosité (dans fantasme ou comportement), besoin d'admiration et manque d'empathie, débutant au début de l'âge adulte et présent dans divers contextes</p>
-  <div class="warning-box">
-    ⚠️ Au moins 5 des 9 critères suivants sont requis
-  </div>
+  <p class="subtitle">Pattern envahissant de grandiosité (dans fantasme ou comportement), besoin d'admiration et manque d'empathie, débutant au début de l'âge adulte et présent dans divers contextes (au moins 5 des 9 critères suivants sont requis)</p>
   
   <label><input type="checkbox" name="critereA" value="1. A sens grandiose de sa propre importance (exagère réalisations et talents, s'attend à être reconnu comme supérieur sans réalisations correspondantes)"/> <strong>1.</strong> A un sens grandiose de sa propre importance (ex: exagère réalisations et talents, s'attend à être reconnu comme supérieur sans réalisations correspondantes)</label>
   
@@ -160,65 +108,40 @@
   <label><input type="checkbox" name="critereA" value="8. Est souvent envieux des autres ou croit que autres sont envieux de lui/elle"/> <strong>8.</strong> Est souvent envieux des autres ou croit que les autres sont envieux de lui/elle</label>
   
   <label><input type="checkbox" name="critereA" value="9. Montre comportements ou attitudes arrogants et hautains"/> <strong>9.</strong> Montre des comportements ou attitudes arrogants et hautains</label>
-  
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
 </fieldset>
 
+<!-- Diagnostic différentiel -->
+<fieldset>
+  <legend>Diagnostic différentiel</legend>
+  <label><input type="checkbox" name="diff_diag" value="Trouble bipolaire (manie)"/> Trouble bipolaire (manie)</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble lié à l'usage de substances"/> Trouble lié à l'usage de substances</label>
+  <label><input type="checkbox" name="diff_diag" value="Autres troubles de la personnalité"/> Autres troubles de la personnalité (antisociale, histrionique, borderline, paranoïaque)</label>
+  <label><input type="checkbox" name="diff_diag" value="Changement de personnalité dû à une autre condition médicale"/> Changement de personnalité dû à une autre condition médicale</label>
+  <label><input type="checkbox" name="diff_diag" value="Traits narcissiques"/> Traits narcissiques (pas un trouble de la personnalité)</label>
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset>
+  <legend>Comorbidité</legend>
+  <label><input type="checkbox" name="comorbidite" value="Trouble dépressif"/> Trouble dépressif</label>
+  <label><input type="checkbox" name="comorbidite" value="Trouble bipolaire"/> Trouble bipolaire</label>
+  <label><input type="checkbox" name="comorbidite" value="Anorexie mentale"/> Anorexie mentale</label>
+  <label><input type="checkbox" name="comorbidite" value="Trouble lié à l'usage de substances"/> Trouble lié à l'usage de substances</label>
+  <label><input type="checkbox" name="comorbidite" value="Autres troubles de la personnalité"/> Autres troubles de la personnalité (histrionique, borderline, antisociale, paranoïaque)</label>
+</fieldset>
+
+<!-- Boutons de validation -->
+<div class='boutons-validation'>
+  <button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button>
+  <button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button>
+</div>
+
 </form>
-
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:[]};
-
-function afficherResume(){
-  const c=Array.from(document.querySelectorAll("input[name='critereA']:checked")).map(e=>e.value);
-  if(c.length>=5){
-    choix.critereA=c;
-    genererResume();
-  }else alert("Au moins 5 des 9 critères sont requis (actuellement: "+c.length+")");
-}
-
-function genererResume(){
-  const code="F60.81";
-  const diag=code+" Trouble de la Personnalité Narcissique";
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Pattern envahissant de grandiosité, besoin d'admiration et manque d'empathie ("+choix.critereA.length+"/9, minimum 5 requis)</h4><ul class='choix-list'>";
-  choix.critereA.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Pattern envahissant de grandiosité (dans fantasme ou comportement), besoin d'admiration et manque d'empathie, débutant au début de l'âge adulte et présent dans divers contextes. Au moins 5 des 9 critères requis.";
-  h+="<br/><br/><strong>Critères ("+choix.critereA.length+"/9) :</strong>";
-  h+="<br/>1. Sens grandiose de sa propre importance";
-  h+="<br/>2. Préoccupé par fantasmes de succès illimité, pouvoir, brillance, beauté, amour idéal";
-  h+="<br/>3. Croit être spécial et unique";
-  h+="<br/>4. Requiert admiration excessive";
-  h+="<br/>5. Sens du droit (attentes déraisonnables)";
-  h+="<br/>6. Exploiteur sur le plan interpersonnel";
-  h+="<br/>7. Manque d'empathie";
-  h+="<br/>8. Envieux des autres ou croit que autres sont envieux";
-  h+="<br/>9. Comportements/attitudes arrogants et hautains";
-  h+="<br/><br/><strong>Triade caractéristique :</strong>";
-  h+="<br/>• <strong>Grandiosité</strong> (fantasme ou comportement)";
-  h+="<br/>• <strong>Besoin d'admiration</strong>";
-  h+="<br/>• <strong>Manque d'empathie</strong>";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 16/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
