--- a/Embedding/Personality_Disorders_out/Section3_Cluster C Personality Disorders/Avoidant_Personality_Disorder.html
+++ b/Embedding/Personality_Disorders_out/Section3_Cluster C Personality Disorders/Avoidant_Personality_Disorder.html
@@ -41,30 +41,6 @@
       cursor: pointer;
     }
     button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +65,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -138,10 +89,7 @@
 <!-- Critère A -->
 <fieldset id="critereA">
   <legend>Pattern envahissant d'inhibition sociale, sentiments d'inadéquation et hypersensibilité</legend>
-  <p class="subtitle">Pattern envahissant d'inhibition sociale, sentiments d'inadéquation et hypersensibilité à l'évaluation négative, débutant au début de l'âge adulte et présent dans divers contextes</p>
-  <div class="warning-box">
-    ⚠️ Au moins 4 des 7 critères suivants sont requis
-  </div>
+  <p class="subtitle">Pattern envahissant d'inhibition sociale, sentiments d'inadéquation et hypersensibilité à l'évaluation négative, débutant au début de l'âge adulte et présent dans divers contextes (au moins 4 des 7 critères suivants sont requis)</p>
   
   <label><input type="checkbox" name="critereA" value="1. Évite activités professionnelles impliquant contact interpersonnel significatif par crainte de critique, désapprobation ou rejet"/> <strong>1.</strong> Évite les activités professionnelles impliquant un contact interpersonnel significatif par crainte de critique, désapprobation ou rejet</label>
   
@@ -156,68 +104,41 @@
   <label><input type="checkbox" name="critereA" value="6. Se voit comme socialement incompétent, personnellement sans attrait ou inférieur aux autres"/> <strong>6.</strong> Se voit comme socialement incompétent, personnellement sans attrait ou inférieur aux autres</label>
   
   <label><input type="checkbox" name="critereA" value="7. Inhabituellement réticent à prendre risques personnels ou s'engager dans nouvelles activités car peuvent s'avérer embarrassantes"/> <strong>7.</strong> Inhabituellement réticent à prendre des risques personnels ou à s'engager dans de nouvelles activités car elles peuvent s'avérer embarrassantes</label>
-  
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
 </fieldset>
 
+<!-- Diagnostic différentiel -->
+<fieldset>
+  <legend>Diagnostic différentiel</legend>
+  <label><input type="checkbox" name="diff_diag" value="Trouble d'anxiété sociale (phobie sociale)"/> Trouble d'anxiété sociale (phobie sociale)</label>
+  <label><input type="checkbox" name="diff_diag" value="Agoraphobie"/> Agoraphobie</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble de la personnalité dépendante"/> Trouble de la personnalité dépendante</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble de la personnalité schizoïde"/> Trouble de la personnalité schizoïde</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble de la personnalité schizotypique"/> Trouble de la personnalité schizotypique</label>
+  <label><input type="checkbox" name="diff_diag" value="Changement de personnalité dû à une autre condition médicale"/> Changement de personnalité dû à une autre condition médicale</label>
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset>
+  <legend>Comorbidité</legend>
+  <label><input type="checkbox" name="comorbidite" value="Trouble d'anxiété sociale"/> Trouble d'anxiété sociale</label>
+  <label><input type="checkbox" name="comorbidite" value="Trouble de la personnalité dépendante"/> Trouble de la personnalité dépendante</label>
+  <label><input type="checkbox" name="comorbidite" value="Trouble de la personnalité borderline"/> Trouble de la personnalité borderline</label>
+  <label><input type="checkbox" name="comorbidite" value="Troubles dépressifs"/> Troubles dépressifs</label>
+  <label><input type="checkbox" name="comorbidite" value="Autres troubles anxieux"/> Autres troubles anxieux</label>
+</fieldset>
+
+<!-- Boutons de validation -->
+<div class='boutons-validation'>
+  <button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button>
+  <button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button>
+</div>
+
 </form>
-
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:[]};
-
-function afficherResume(){
-  const c=Array.from(document.querySelectorAll("input[name='critereA']:checked")).map(e=>e.value);
-  if(c.length>=4){
-    choix.critereA=c;
-    genererResume();
-  }else alert("Au moins 4 des 7 critères sont requis (actuellement: "+c.length+")");
-}
-
-function genererResume(){
-  const code="F60.6";
-  const diag=code+" Trouble de la Personnalité Évitante";
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Pattern envahissant d'inhibition sociale, sentiments d'inadéquation et hypersensibilité ("+choix.critereA.length+"/7, minimum 4 requis)</h4><ul class='choix-list'>";
-  choix.critereA.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Pattern envahissant d'inhibition sociale, sentiments d'inadéquation et hypersensibilité à l'évaluation négative, débutant au début de l'âge adulte et présent dans divers contextes. Au moins 4 des 7 critères requis.";
-  h+="<br/><br/><strong>Critères ("+choix.critereA.length+"/7) :</strong>";
-  h+="<br/>1. Évite activités professionnelles avec contact interpersonnel (crainte critique/rejet)";
-  h+="<br/>2. Réticent à s'impliquer sauf si certain d'être aimé";
-  h+="<br/>3. Retenue dans relations intimes (crainte humiliation/ridicule)";
-  h+="<br/>4. Préoccupé par critique ou rejet dans situations sociales";
-  h+="<br/>5. Inhibé dans nouvelles situations (sentiments d'inadéquation)";
-  h+="<br/>6. Se voit comme incompétent, sans attrait ou inférieur";
-  h+="<br/>7. Réticent à prendre risques ou nouvelles activités (embarrassantes)";
-  h+="<br/><br/><strong>Triade caractéristique :</strong>";
-  h+="<br/>• <strong>Inhibition sociale</strong>";
-  h+="<br/>• <strong>Sentiments d'inadéquation</strong>";
-  h+="<br/>• <strong>Hypersensibilité à l'évaluation négative</strong>";
-  h+="<br/><br/><strong>Thèmes principaux :</strong>";
-  h+="<br/>• Crainte de la critique, désapprobation, rejet";
-  h+="<br/>• Évitement des situations sociales et professionnelles";
-  h+="<br/>• Image de soi négative";
-  h+="<br/>• Réticence à prendre des risques";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 16/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
