--- a/Embedding/Personality_Disorders_out/Section3_Cluster C Personality Disorders/Dependent_Personality_Disorder.html
+++ b/Embedding/Personality_Disorders_out/Section3_Cluster C Personality Disorders/Dependent_Personality_Disorder.html
@@ -41,30 +41,6 @@
       cursor: pointer;
     }
     button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +65,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -138,19 +89,13 @@
 <!-- Critère A -->
 <fieldset id="critereA">
   <legend>Besoin envahissant et excessif d'être pris en charge</legend>
-  <p class="subtitle">Besoin envahissant et excessif d'être pris en charge qui conduit à un comportement soumis et collant et à des craintes de séparation, débutant au début de l'âge adulte et présent dans divers contextes</p>
-  <div class="warning-box">
-    ⚠️ Au moins 5 des 8 critères suivants sont requis
-  </div>
+  <p class="subtitle">Besoin envahissant et excessif d'être pris en charge qui conduit à un comportement soumis et collant et à des craintes de séparation, débutant au début de l'âge adulte et présent dans divers contextes (au moins 5 des 8 critères suivants sont requis)</p>
   
   <label><input type="checkbox" name="critereA" value="1. A difficulté à prendre décisions quotidiennes sans quantité excessive de conseils et réassurance d'autrui"/> <strong>1.</strong> A de la difficulté à prendre des décisions quotidiennes sans une quantité excessive de conseils et de réassurance d'autrui</label>
   
   <label><input type="checkbox" name="critereA" value="2. A besoin que autres assument responsabilité pour la plupart des domaines majeurs de sa vie"/> <strong>2.</strong> A besoin que les autres assument la responsabilité pour la plupart des domaines majeurs de sa vie</label>
   
-  <label><input type="checkbox" name="critereA" value="3. A difficulté à exprimer désaccord avec autres par crainte de perte de soutien ou approbation"/> <strong>3.</strong> A de la difficulté à exprimer son désaccord avec les autres par crainte de perte de soutien ou d'approbation</label>
-  <div class="note-box">
-    Note: Ne pas inclure les craintes réalistes de représailles.
-  </div>
+  <label><input type="checkbox" name="critereA" value="3. A difficulté à exprimer désaccord avec autres par crainte de perte de soutien ou approbation"/> <strong>3.</strong> A de la difficulté à exprimer son désaccord avec les autres par crainte de perte de soutien ou d'approbation (Note: Ne pas inclure les craintes réalistes de représailles)</label>
   
   <label><input type="checkbox" name="critereA" value="4. A difficulté à initier projets ou faire choses seul (par manque de confiance en jugement ou capacités plutôt que manque de motivation ou énergie)"/> <strong>4.</strong> A de la difficulté à initier des projets ou à faire des choses seul (en raison d'un manque de confiance en son jugement ou ses capacités plutôt qu'un manque de motivation ou d'énergie)</label>
   
@@ -161,70 +106,41 @@
   <label><input type="checkbox" name="critereA" value="7. Cherche de manière urgente autre relation comme source de soins et soutien quand relation proche se termine"/> <strong>7.</strong> Cherche de manière urgente une autre relation comme source de soins et de soutien quand une relation proche se termine</label>
   
   <label><input type="checkbox" name="critereA" value="8. Est préoccupé de manière irréaliste par craintes d'être laissé à prendre soin de soi"/> <strong>8.</strong> Est préoccupé de manière irréaliste par des craintes d'être laissé à prendre soin de soi</label>
-  
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
 </fieldset>
 
+<!-- Diagnostic différentiel -->
+<fieldset>
+  <legend>Diagnostic différentiel</legend>
+  <label><input type="checkbox" name="diff_diag" value="Trouble de la personnalité borderline"/> Trouble de la personnalité borderline</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble de la personnalité histrionique"/> Trouble de la personnalité histrionique</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble de la personnalité évitante"/> Trouble de la personnalité évitante</label>
+  <label><input type="checkbox" name="diff_diag" value="Agoraphobie"/> Agoraphobie</label>
+  <label><input type="checkbox" name="diff_diag" value="Changement de personnalité dû à une autre condition médicale"/> Changement de personnalité dû à une autre condition médicale</label>
+  <label><input type="checkbox" name="diff_diag" value="Troubles liés à l'usage de substances"/> Troubles liés à l'usage de substances</label>
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset>
+  <legend>Comorbidité</legend>
+  <label><input type="checkbox" name="comorbidite" value="Troubles dépressifs"/> Troubles dépressifs</label>
+  <label><input type="checkbox" name="comorbidite" value="Troubles anxieux"/> Troubles anxieux</label>
+  <label><input type="checkbox" name="comorbidite" value="Trouble de la personnalité borderline"/> Trouble de la personnalité borderline</label>
+  <label><input type="checkbox" name="comorbidite" value="Trouble de la personnalité histrionique"/> Trouble de la personnalité histrionique</label>
+  <label><input type="checkbox" name="comorbidite" value="Trouble de la personnalité évitante"/> Trouble de la personnalité évitante</label>
+</fieldset>
+
+<!-- Boutons de validation -->
+<div class='boutons-validation'>
+  <button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button>
+  <button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button>
+</div>
+
 </form>
-
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:[]};
-
-function afficherResume(){
-  const c=Array.from(document.querySelectorAll("input[name='critereA']:checked")).map(e=>e.value);
-  if(c.length>=5){
-    choix.critereA=c;
-    genererResume();
-  }else alert("Au moins 5 des 8 critères sont requis (actuellement: "+c.length+")");
-}
-
-function genererResume(){
-  const code="F60.7";
-  const diag=code+" Trouble de la Personnalité Dépendante";
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Besoin envahissant et excessif d'être pris en charge ("+choix.critereA.length+"/8, minimum 5 requis)</h4><ul class='choix-list'>";
-  choix.critereA.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Besoin envahissant et excessif d'être pris en charge qui conduit à un comportement soumis et collant et à des craintes de séparation, débutant au début de l'âge adulte et présent dans divers contextes. Au moins 5 des 8 critères requis.";
-  h+="<br/><br/><strong>Critères ("+choix.critereA.length+"/8) :</strong>";
-  h+="<br/>1. Difficulté à prendre décisions quotidiennes (besoin excessif de conseils/réassurance)";
-  h+="<br/>2. Besoin que autres assument responsabilité pour domaines majeurs de vie";
-  h+="<br/>3. Difficulté à exprimer désaccord (crainte perte soutien/approbation)";
-  h+="<br/>4. Difficulté à initier projets/faire choses seul (manque confiance)";
-  h+="<br/>5. Va à extrêmes excessifs pour obtenir soutien (choses désagréables)";
-  h+="<br/>6. Mal à l'aise/impuissant quand seul (crainte incapacité prendre soin de soi)";
-  h+="<br/>7. Cherche urgence autre relation quand relation proche se termine";
-  h+="<br/>8. Préoccupé de manière irréaliste par craintes d'être laissé seul";
-  h+="<br/><br/><strong>Caractéristiques principales :</strong>";
-  h+="<br/>• <strong>Besoin excessif d'être pris en charge</strong>";
-  h+="<br/>• <strong>Comportement soumis et collant</strong>";
-  h+="<br/>• <strong>Craintes de séparation</strong>";
-  h+="<br/><br/><strong>Thèmes principaux :</strong>";
-  h+="<br/>• Difficulté à prendre décisions et assumer responsabilités";
-  h+="<br/>• Manque de confiance en soi";
-  h+="<br/>• Crainte d'être abandonné ou seul";
-  h+="<br/>• Comportement soumis pour maintenir relations";
-  h+="<br/><br/><strong>Note :</strong> Critère 3 - Ne pas inclure les craintes réalistes de représailles.";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 16/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
