--- a/Embedding/Personality_Disorders_out/Section3_Cluster C Personality Disorders/Obsessive_Compulsive_Personality_Disorder.html
+++ b/Embedding/Personality_Disorders_out/Section3_Cluster C Personality Disorders/Obsessive_Compulsive_Personality_Disorder.html
@@ -41,30 +41,6 @@
       cursor: pointer;
     }
     button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +65,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -138,10 +89,7 @@
 <!-- Critère A -->
 <fieldset id="critereA">
   <legend>Pattern envahissant de préoccupation par l'ordre, le perfectionnisme et le contrôle</legend>
-  <p class="subtitle">Pattern envahissant de préoccupation par l'ordre, le perfectionnisme et le contrôle mental et interpersonnel, au détriment de la flexibilité, de l'ouverture et de l'efficacité, débutant au début de l'âge adulte et présent dans divers contextes</p>
-  <div class="warning-box">
-    ⚠️ Au moins 4 des 8 critères suivants sont requis
-  </div>
+  <p class="subtitle">Pattern envahissant de préoccupation par l'ordre, le perfectionnisme et le contrôle mental et interpersonnel, au détriment de la flexibilité, de l'ouverture et de l'efficacité, débutant au début de l'âge adulte et présent dans divers contextes (au moins 4 des 8 critères suivants sont requis)</p>
   
   <label><input type="checkbox" name="critereA" value="1. Préoccupé par détails, règles, listes, ordre, organisation ou horaires au point que but majeur de l'activité est perdu"/> <strong>1.</strong> Préoccupé par les détails, règles, listes, ordre, organisation ou horaires au point que le but majeur de l'activité est perdu</label>
   
@@ -158,77 +106,39 @@
   <label><input type="checkbox" name="critereA" value="7. Adopte style de dépenses avare envers soi et autres; argent vu comme chose à thésauriser pour catastrophes futures"/> <strong>7.</strong> Adopte un style de dépenses avare envers soi et les autres; l'argent est vu comme quelque chose à thésauriser pour les catastrophes futures</label>
   
   <label><input type="checkbox" name="critereA" value="8. Montre rigidité et entêtement"/> <strong>8.</strong> Montre de la rigidité et de l'entêtement</label>
-  
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
 </fieldset>
 
+<!-- Diagnostic différentiel -->
+<fieldset>
+  <legend>Diagnostic différentiel</legend>
+  <label><input type="checkbox" name="diff_diag" value="Trouble obsessionnel-compulsif"/> Trouble obsessionnel-compulsif (TOC)</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble du spectre de l'autisme"/> Trouble du spectre de l'autisme</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble de la personnalité narcissique"/> Trouble de la personnalité narcissique</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble de la personnalité schizotypique"/> Trouble de la personnalité schizotypique</label>
+  <label><input type="checkbox" name="diff_diag" value="Changement de personnalité dû à une autre condition médicale"/> Changement de personnalité dû à une autre condition médicale</label>
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset>
+  <legend>Comorbidité</legend>
+  <label><input type="checkbox" name="comorbidite" value="Trouble obsessionnel-compulsif"/> Trouble obsessionnel-compulsif</label>
+  <label><input type="checkbox" name="comorbidite" value="Troubles anxieux"/> Troubles anxieux</label>
+  <label><input type="checkbox" name="comorbidite" value="Troubles dépressifs"/> Troubles dépressifs</label>
+  <label><input type="checkbox" name="comorbidite" value="Troubles des conduites alimentaires"/> Troubles des conduites alimentaires</label>
+</fieldset>
+
+<!-- Boutons de validation -->
+<div class='boutons-validation'>
+  <button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button>
+  <button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button>
+</div>
+
 </form>
-
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:[]};
-
-function afficherResume(){
-  const c=Array.from(document.querySelectorAll("input[name='critereA']:checked")).map(e=>e.value);
-  if(c.length>=4){
-    choix.critereA=c;
-    genererResume();
-  }else alert("Au moins 4 des 8 critères sont requis (actuellement: "+c.length+")");
-}
-
-function genererResume(){
-  const code="F60.5";
-  const diag=code+" Trouble de la Personnalité Obsessionnelle-Compulsive";
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Pattern envahissant de préoccupation par l'ordre, le perfectionnisme et le contrôle ("+choix.critereA.length+"/8, minimum 4 requis)</h4><ul class='choix-list'>";
-  choix.critereA.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Pattern envahissant de préoccupation par l'ordre, le perfectionnisme et le contrôle mental et interpersonnel, au détriment de la flexibilité, de l'ouverture et de l'efficacité, débutant au début de l'âge adulte et présent dans divers contextes. Au moins 4 des 8 critères requis.";
-  h+="<br/><br/><strong>Critères ("+choix.critereA.length+"/8) :</strong>";
-  h+="<br/>1. Préoccupé par détails, règles, listes, ordre (but majeur perdu)";
-  h+="<br/>2. Perfectionnisme interfère avec achèvement tâches";
-  h+="<br/>3. Excessivement dévoué au travail (exclusion loisirs/amitiés)";
-  h+="<br/>4. Trop consciencieux, inflexible sur moralité/éthique/valeurs";
-  h+="<br/>5. Incapable de jeter objets usés/sans valeur";
-  h+="<br/>6. Réticent à déléguer (sauf soumission exacte à sa façon)";
-  h+="<br/>7. Style de dépenses avare (thésaurisation pour catastrophes)";
-  h+="<br/>8. Rigidité et entêtement";
-  h+="<br/><br/><strong>Triade caractéristique :</strong>";
-  h+="<br/>• <strong>Préoccupation par l'ordre</strong>";
-  h+="<br/>• <strong>Perfectionnisme</strong>";
-  h+="<br/>• <strong>Contrôle mental et interpersonnel</strong>";
-  h+="<br/><br/><strong>Au détriment de :</strong>";
-  h+="<br/>• Flexibilité";
-  h+="<br/>• Ouverture";
-  h+="<br/>• Efficacité";
-  h+="<br/><br/><strong>Thèmes principaux :</strong>";
-  h+="<br/>• Perfectionnisme excessif";
-  h+="<br/>• Préoccupation par détails et règles";
-  h+="<br/>• Rigidité et inflexibilité";
-  h+="<br/>• Difficulté à déléguer";
-  h+="<br/>• Dévouement excessif au travail";
-  h+="<br/><br/><strong>Notes :</strong>";
-  h+="<br/>• Critère 3: Non expliqué par nécessité économique";
-  h+="<br/>• Critère 4: Non expliqué par identification culturelle/religieuse";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 16/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
