--- a/Embedding/Schizophrenia_Spectrum_out/Catatonia_Associated_With_Another_Mental_Disorder.html
+++ b/Embedding/Schizophrenia_Spectrum_out/Catatonia_Associated_With_Another_Mental_Disorder.html
@@ -41,30 +41,6 @@
       cursor: pointer;
     }
     button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +65,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -138,10 +89,7 @@
 <!-- Critère A -->
 <fieldset id="critereA">
   <legend>Critère A – Tableau clinique dominé par symptômes catatoniques</legend>
-  <p class="subtitle">Le tableau clinique est dominé par trois (ou plus) des symptômes suivants</p>
-  <div class="warning-box">
-    ⚠️ Au moins 3 des 12 symptômes suivants sont requis
-  </div>
+  <p class="subtitle">Le tableau clinique est dominé par trois (ou plus) des symptômes suivants (au moins 3 des 12 symptômes suivants sont requis)</p>
   
   <label><input type="checkbox" name="critereA" value="1. Stupeur (aucune activité psychomotrice; ne se rapporte pas activement à l'environnement)"/> <strong>1.</strong> Stupeur (c'est-à-dire aucune activité psychomotrice; ne se rapporte pas activement à l'environnement)</label>
   
@@ -166,76 +114,52 @@
   <label><input type="checkbox" name="critereA" value="11. Écholalie (imitation du discours d'autrui)"/> <strong>11.</strong> Écholalie (c'est-à-dire imitation du discours d'autrui)</label>
   
   <label><input type="checkbox" name="critereA" value="12. Échopraxie (imitation des mouvements d'autrui)"/> <strong>12.</strong> Échopraxie (c'est-à-dire imitation des mouvements d'autrui)</label>
-  
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
 </fieldset>
 
+<!-- Troubles mentaux pouvant être associés -->
+<fieldset>
+  <legend>Troubles mentaux pouvant être associés</legend>
+  <p class="subtitle">Note de codage: Indiquer le nom du trouble mental associé lors de l'enregistrement du diagnostic (ex: F06.1 catatonie associée au trouble dépressif majeur). Coder d'abord le trouble mental associé</p>
+  <label><input type="checkbox" name="trouble_associe" value="Trouble neurodéveloppemental"/> Trouble neurodéveloppemental</label>
+  <label><input type="checkbox" name="trouble_associe" value="Trouble psychotique bref"/> Trouble psychotique bref</label>
+  <label><input type="checkbox" name="trouble_associe" value="Trouble schizophréniforme"/> Trouble schizophréniforme</label>
+  <label><input type="checkbox" name="trouble_associe" value="Schizophrénie"/> Schizophrénie</label>
+  <label><input type="checkbox" name="trouble_associe" value="Trouble schizoaffectif"/> Trouble schizoaffectif</label>
+  <label><input type="checkbox" name="trouble_associe" value="Trouble bipolaire"/> Trouble bipolaire</label>
+  <label><input type="checkbox" name="trouble_associe" value="Trouble dépressif majeur"/> Trouble dépressif majeur</label>
+  <label><input type="checkbox" name="trouble_associe" value="Autre trouble mental"/> Autre trouble mental</label>
+</fieldset>
+
+<!-- Diagnostic différentiel -->
+<fieldset>
+  <legend>Diagnostic différentiel</legend>
+  <label><input type="checkbox" name="diff_diag" value="Catatonie due à une autre condition médicale"/> Catatonie due à une autre condition médicale</label>
+  <label><input type="checkbox" name="diff_diag" value="Syndrome malin des neuroleptiques"/> Syndrome malin des neuroleptiques</label>
+  <label><input type="checkbox" name="diff_diag" value="Troubles des mouvements induits par la médication"/> Troubles des mouvements induits par la médication</label>
+  <label><input type="checkbox" name="diff_diag" value="Symptômes négatifs de schizophrénie"/> Symptômes négatifs de schizophrénie</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble du spectre de l'autisme"/> Trouble du spectre de l'autisme</label>
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset>
+  <legend>Comorbidité</legend>
+  <p class="subtitle">La catatonie est par définition associée à un autre trouble mental</p>
+  <label><input type="checkbox" name="comorbidite" value="Trouble mental associé (trouble de base)"/> Trouble mental associé (trouble de base)</label>
+  <label><input type="checkbox" name="comorbidite" value="Complications médicales"/> Complications médicales (déshydratation, pneumonie, etc.)</label>
+</fieldset>
+
+<!-- Boutons de validation -->
+<div class='boutons-validation'>
+  <button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button>
+  <button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button>
+</div>
+
 </form>
-
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:[]};
-
-function afficherResume(){
-  const c=Array.from(document.querySelectorAll("input[name='critereA']:checked")).map(e=>e.value);
-  if(c.length>=3){
-    choix.critereA=c;
-    genererResume();
-  }else alert("Au moins 3 des 12 symptômes sont requis (actuellement: "+c.length+")");
-}
-
-function genererResume(){
-  const code="F06.1";
-  const diag=code+" Catatonie Associée à un Autre Trouble Mental (Spécificateur de Catatonie)";
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Critère A – Tableau clinique dominé par symptômes catatoniques ("+choix.critereA.length+"/12, minimum 3 requis)</h4><ul class='choix-list'>";
-  choix.critereA.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Le tableau clinique est dominé par trois (ou plus) symptômes catatoniques. Au moins 3 des 12 symptômes requis.";
-  h+="<br/><br/><strong>Symptômes catatoniques ("+choix.critereA.length+"/12) :</strong>";
-  h+="<br/>1. Stupeur (aucune activité psychomotrice)";
-  h+="<br/>2. Catalepsie (posture passive maintenue contre gravité)";
-  h+="<br/>3. Flexibilité cireuse (résistance légère au positionnement)";
-  h+="<br/>4. Mutisme (exclure si aphasie connue)";
-  h+="<br/>5. Négativisme (opposition ou aucune réponse)";
-  h+="<br/>6. Posture (maintien spontané contre gravité)";
-  h+="<br/>7. Maniérisme (caricature bizarre d'actions normales)";
-  h+="<br/>8. Stéréotypie (mouvements répétitifs sans but)";
-  h+="<br/>9. Agitation non influencée par stimuli externes";
-  h+="<br/>10. Grimaces";
-  h+="<br/>11. Écholalie (imitation du discours)";
-  h+="<br/>12. Échopraxie (imitation des mouvements)";
-  h+="<br/><br/><strong>Note de codage :</strong> Indiquer le nom du trouble mental associé lors de l'enregistrement du diagnostic (ex: F06.1 catatonie associée au trouble dépressif majeur).";
-  h+="<br/><br/><strong>Coder d'abord</strong> le trouble mental associé (ex: trouble neurodéveloppemental, trouble psychotique bref, trouble schizophréniforme, schizophrénie, trouble schizoaffectif, trouble bipolaire, trouble dépressif majeur, ou autre trouble mental).";
-  h+="<br/><br/><strong>Exemple de codage :</strong> F25.1 trouble schizoaffectif, type dépressif; F06.1 catatonie associée au trouble schizoaffectif.";
-  h+="<br/><br/><strong>Troubles mentaux pouvant être associés :</strong>";
-  h+="<br/>• Trouble neurodéveloppemental";
-  h+="<br/>• Trouble psychotique bref";
-  h+="<br/>• Trouble schizophréniforme";
-  h+="<br/>• Schizophrénie";
-  h+="<br/>• Trouble schizoaffectif";
-  h+="<br/>• Trouble bipolaire";
-  h+="<br/>• Trouble dépressif majeur";
-  h+="<br/>• Autre trouble mental";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 16/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
