--- a/Embedding/Schizophrenia_Spectrum_out/Catatonic_Disorder_Due_to_Medical_Condition.html
+++ b/Embedding/Schizophrenia_Spectrum_out/Catatonic_Disorder_Due_to_Medical_Condition.html
@@ -41,30 +41,6 @@
       cursor: pointer;
     }
     button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +65,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -138,10 +89,7 @@
 <!-- Critère A -->
 <fieldset id="critereA">
   <legend>Critère A – Tableau clinique dominé par symptômes catatoniques</legend>
-  <p class="subtitle">Le tableau clinique est dominé par trois (ou plus) des symptômes suivants</p>
-  <div class="warning-box">
-    ⚠️ Au moins 3 des 12 symptômes suivants sont requis
-  </div>
+  <p class="subtitle">Le tableau clinique est dominé par trois (ou plus) des symptômes suivants (au moins 3 des 12 symptômes suivants sont requis)</p>
   
   <label><input type="checkbox" name="critereA" value="1. Stupeur (aucune activité psychomotrice; ne se rapporte pas activement à l'environnement)"/> <strong>1.</strong> Stupeur (c'est-à-dire aucune activité psychomotrice; ne se rapporte pas activement à l'environnement)</label>
   
@@ -166,151 +114,71 @@
   <label><input type="checkbox" name="critereA" value="11. Écholalie (imitation du discours d'autrui)"/> <strong>11.</strong> Écholalie (c'est-à-dire imitation du discours d'autrui)</label>
   
   <label><input type="checkbox" name="critereA" value="12. Échopraxie (imitation des mouvements d'autrui)"/> <strong>12.</strong> Échopraxie (c'est-à-dire imitation des mouvements d'autrui)</label>
-  
-  <button type="button" onclick="validerCritereA()">✔️ Valider le critère A</button>
 </fieldset>
 
 <!-- Critère B -->
-<fieldset id="critereB" class="hidden">
+<fieldset id="critereB">
   <legend>Critère B – Évidence d'une condition médicale</legend>
   <p class="subtitle">Il existe des preuves provenant de l'histoire, de l'examen physique ou des résultats de laboratoire que la perturbation est la conséquence physiopathologique directe d'une autre condition médicale</p>
   <label><input type="checkbox" name="critereB" value="Preuves de l'histoire que perturbation est conséquence directe d'une condition médicale"/> Preuves de l'histoire que la perturbation est la conséquence directe d'une condition médicale</label>
   <label><input type="checkbox" name="critereB" value="Preuves de l'examen physique que perturbation est conséquence directe d'une condition médicale"/> Preuves de l'examen physique que la perturbation est la conséquence directe d'une condition médicale</label>
   <label><input type="checkbox" name="critereB" value="Preuves des résultats de laboratoire que perturbation est conséquence directe d'une condition médicale"/> Preuves des résultats de laboratoire que la perturbation est la conséquence directe d'une condition médicale</label>
-  <button type="button" onclick="validerCritereB()">✔️ Valider le critère B</button>
 </fieldset>
 
 <!-- Critère C -->
-<fieldset id="critereC" class="hidden">
+<fieldset id="critereC">
   <legend>Critère C – Non mieux expliqué par un autre trouble mental</legend>
   <p class="subtitle">La perturbation n'est pas mieux expliquée par un autre trouble mental (ex: épisode maniaque)</p>
   <label><input type="checkbox" name="critereC" value="Perturbation non mieux expliquée par autre trouble mental"/> La perturbation n'est pas mieux expliquée par un autre trouble mental (ex: épisode maniaque)</label>
-  <button type="button" onclick="validerCritereC()">✔️ Valider le critère C</button>
 </fieldset>
 
 <!-- Critère D -->
-<fieldset id="critereD" class="hidden">
+<fieldset id="critereD">
   <legend>Critère D – Ne survient pas exclusivement durant un delirium</legend>
   <p class="subtitle">La perturbation ne survient pas exclusivement durant le cours d'un delirium</p>
   <label><input type="checkbox" name="critereD" value="Perturbation ne survient pas exclusivement durant cours d'un delirium"/> La perturbation ne survient pas exclusivement durant le cours d'un delirium</label>
-  <button type="button" onclick="validerCritereD()">✔️ Valider le critère D</button>
 </fieldset>
 
 <!-- Critère E -->
-<fieldset id="critereE" class="hidden">
+<fieldset id="critereE">
   <legend>Critère E – Détresse ou altération cliniquement significative</legend>
   <p class="subtitle">La perturbation cause détresse ou altération cliniquement significative dans le fonctionnement social, professionnel ou autres domaines importants</p>
   <label><input type="checkbox" name="critereE" value="Détresse cliniquement significative"/> Détresse cliniquement significative</label>
   <label><input type="checkbox" name="critereE" value="Altération dans fonctionnement social"/> Altération dans le fonctionnement social</label>
   <label><input type="checkbox" name="critereE" value="Altération dans fonctionnement professionnel"/> Altération dans le fonctionnement professionnel</label>
   <label><input type="checkbox" name="critereE" value="Altération dans autres domaines importants du fonctionnement"/> Altération dans autres domaines importants du fonctionnement</label>
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
 </fieldset>
 
+<!-- Diagnostic différentiel -->
+<fieldset>
+  <legend>Diagnostic différentiel</legend>
+  <label><input type="checkbox" name="diff_diag" value="Catatonie associée à un autre trouble mental"/> Catatonie associée à un autre trouble mental</label>
+  <label><input type="checkbox" name="diff_diag" value="Syndrome malin des neuroleptiques"/> Syndrome malin des neuroleptiques</label>
+  <label><input type="checkbox" name="diff_diag" value="Delirium"/> Delirium</label>
+  <label><input type="checkbox" name="diff_diag" value="Stupeur dépressive"/> Stupeur dépressive</label>
+  <label><input type="checkbox" name="diff_diag" value="Mutisme akinétique"/> Mutisme akinétique</label>
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset>
+  <legend>Comorbidité</legend>
+  <label><input type="checkbox" name="comorbidite" value="Condition médicale causale"/> Condition médicale causale (obligatoire)</label>
+  <label><input type="checkbox" name="comorbidite" value="Troubles neurocognitifs"/> Troubles neurocognitifs</label>
+  <label><input type="checkbox" name="comorbidite" value="Complications médicales"/> Complications médicales (déshydratation, pneumonie, etc.)</label>
+</fieldset>
+
+<!-- Boutons de validation -->
+<div class='boutons-validation'>
+  <button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button>
+  <button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button>
+</div>
+
 </form>
-
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:[],critereB:[],critereC:"",critereD:"",critereE:[]};
-
-function validerCritereA(){
-  const c=Array.from(document.querySelectorAll("input[name='critereA']:checked")).map(e=>e.value);
-  if(c.length>=3){
-    choix.critereA=c;
-    document.getElementById("critereB").classList.remove("hidden");
-  }else alert("Au moins 3 des 12 symptômes sont requis (actuellement: "+c.length+")");
-}
-
-function validerCritereB(){
-  const c=Array.from(document.querySelectorAll("input[name='critereB']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereB=c;
-    document.getElementById("critereC").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère B", confirmButtonColor: "#667eea"});
-}
-
-function validerCritereC(){
-  const c=document.querySelector("input[name='critereC']:checked");
-  if(c){
-    choix.critereC=c.value;
-    document.getElementById("critereD").classList.remove("hidden");
-  }else alert("Cochez l'option du critère C");
-}
-
-function validerCritereD(){
-  const c=document.querySelector("input[name='critereD']:checked");
-  if(c){
-    choix.critereD=c.value;
-    document.getElementById("critereE").classList.remove("hidden");
-  }else alert("Cochez l'option du critère D");
-}
-
-function afficherResume(){
-  const c=Array.from(document.querySelectorAll("input[name='critereE']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereE=c;
-    genererResume();
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère E", confirmButtonColor: "#667eea"});
-}
-
-function genererResume(){
-  const code="F06.1";
-  const diag=code+" Trouble Catatonique dû à une Autre Condition Médicale";
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Critère A – Tableau clinique dominé par symptômes catatoniques ("+choix.critereA.length+"/12, minimum 3 requis)</h4><ul class='choix-list'>";
-  choix.critereA.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère B – Évidence d'une condition médicale</h4><ul class='choix-list'>";
-  choix.critereB.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère C – Non mieux expliqué par un autre trouble mental</h4><ul class='choix-list'><li>✓ "+choix.critereC+"</li></ul>";
-  
-  h+="<h4>Critère D – Ne survient pas exclusivement durant un delirium</h4><ul class='choix-list'><li>✓ "+choix.critereD+"</li></ul>";
-  
-  h+="<h4>Critère E – Détresse ou altération cliniquement significative</h4><ul class='choix-list'>";
-  choix.critereE.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Le tableau clinique est dominé par trois (ou plus) symptômes catatoniques. Au moins 3 des 12 symptômes requis.";
-  h+="<br/><br/><strong>Critère A - Symptômes catatoniques ("+choix.critereA.length+"/12) :</strong>";
-  h+="<br/>1. Stupeur (aucune activité psychomotrice)";
-  h+="<br/>2. Catalepsie (posture passive maintenue contre gravité)";
-  h+="<br/>3. Flexibilité cireuse (résistance légère au positionnement)";
-  h+="<br/>4. Mutisme (non applicable si aphasie établie)";
-  h+="<br/>5. Négativisme (opposition ou aucune réponse)";
-  h+="<br/>6. Posture (maintien spontané contre gravité)";
-  h+="<br/>7. Maniérisme (caricature bizarre d'actions normales)";
-  h+="<br/>8. Stéréotypie (mouvements répétitifs sans but)";
-  h+="<br/>9. Agitation non influencée par stimuli externes";
-  h+="<br/>10. Grimaces";
-  h+="<br/>11. Écholalie (imitation du discours)";
-  h+="<br/>12. Échopraxie (imitation des mouvements)";
-  h+="<br/><br/><strong>Critère B :</strong> Preuves (histoire, examen physique, laboratoire) que perturbation est conséquence physiopathologique directe d'une condition médicale.";
-  h+="<br/><br/><strong>Critère C :</strong> Non mieux expliqué par autre trouble mental (ex: épisode maniaque).";
-  h+="<br/><br/><strong>Critère D :</strong> Ne survient pas exclusivement durant delirium.";
-  h+="<br/><br/><strong>Critère E :</strong> Cause détresse ou altération cliniquement significative.";
-  h+="<br/><br/><strong>Note de codage :</strong> Inclure le nom de la condition médicale dans le nom du trouble mental (ex: F06.1 trouble catatonique dû à encéphalopathie hépatique).";
-  h+="<br/><br/><strong>L'autre condition médicale</strong> doit être codée et listée séparément immédiatement avant le trouble catatonique (ex: K72.90 encéphalopathie hépatique; F06.1 trouble catatonique dû à encéphalopathie hépatique).";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 16/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
