--- a/Embedding/Schizophrenia_Spectrum_out/Psychotic_Disorder_Due_to_Another_Medical_Condition.html
+++ b/Embedding/Schizophrenia_Spectrum_out/Psychotic_Disorder_Due_to_Another_Medical_Condition.html
@@ -41,30 +41,6 @@
       cursor: pointer;
     }
     button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +65,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -141,171 +92,81 @@
   <p class="subtitle">Hallucinations ou délires proéminents</p>
   <label><input type="checkbox" name="critereA" value="Hallucinations proéminentes"/> Hallucinations proéminentes</label>
   <label><input type="checkbox" name="critereA" value="Délires proéminents"/> Délires proéminents</label>
-  <button type="button" onclick="validerCritereA()">✔️ Valider le critère A</button>
 </fieldset>
 
 <!-- Critère B -->
-<fieldset id="critereB" class="hidden">
+<fieldset id="critereB">
   <legend>Critère B – Évidence d'une condition médicale</legend>
   <p class="subtitle">Il existe des preuves provenant de l'histoire, de l'examen physique ou des résultats de laboratoire que la perturbation est la conséquence physiopathologique directe d'une autre condition médicale</p>
   <label><input type="checkbox" name="critereB" value="Preuves de l'histoire que perturbation est conséquence directe d'une condition médicale"/> Preuves de l'histoire que la perturbation est la conséquence directe d'une condition médicale</label>
   <label><input type="checkbox" name="critereB" value="Preuves de l'examen physique que perturbation est conséquence directe d'une condition médicale"/> Preuves de l'examen physique que la perturbation est la conséquence directe d'une condition médicale</label>
   <label><input type="checkbox" name="critereB" value="Preuves des résultats de laboratoire que perturbation est conséquence directe d'une condition médicale"/> Preuves des résultats de laboratoire que la perturbation est la conséquence directe d'une condition médicale</label>
-  <button type="button" onclick="validerCritereB()">✔️ Valider le critère B</button>
 </fieldset>
 
 <!-- Critère C -->
-<fieldset id="critereC" class="hidden">
+<fieldset id="critereC">
   <legend>Critère C – Non mieux expliqué par un autre trouble mental</legend>
   <p class="subtitle">La perturbation n'est pas mieux expliquée par un autre trouble mental</p>
   <label><input type="checkbox" name="critereC" value="Perturbation non mieux expliquée par autre trouble mental"/> La perturbation n'est pas mieux expliquée par un autre trouble mental</label>
-  <button type="button" onclick="validerCritereC()">✔️ Valider le critère C</button>
 </fieldset>
 
 <!-- Critère D -->
-<fieldset id="critereD" class="hidden">
+<fieldset id="critereD">
   <legend>Critère D – Ne survient pas exclusivement durant un delirium</legend>
   <p class="subtitle">La perturbation ne survient pas exclusivement durant le cours d'un delirium</p>
   <label><input type="checkbox" name="critereD" value="Perturbation ne survient pas exclusivement durant cours d'un delirium"/> La perturbation ne survient pas exclusivement durant le cours d'un delirium</label>
-  <button type="button" onclick="validerCritereD()">✔️ Valider le critère D</button>
 </fieldset>
 
 <!-- Critère E -->
-<fieldset id="critereE" class="hidden">
+<fieldset id="critereE">
   <legend>Critère E – Détresse ou altération cliniquement significative</legend>
   <p class="subtitle">La perturbation cause détresse ou altération cliniquement significative dans le fonctionnement social, professionnel ou autres domaines importants</p>
   <label><input type="checkbox" name="critereE" value="Détresse cliniquement significative"/> Détresse cliniquement significative</label>
   <label><input type="checkbox" name="critereE" value="Altération dans fonctionnement social"/> Altération dans le fonctionnement social</label>
   <label><input type="checkbox" name="critereE" value="Altération dans fonctionnement professionnel"/> Altération dans le fonctionnement professionnel</label>
   <label><input type="checkbox" name="critereE" value="Altération dans autres domaines importants du fonctionnement"/> Altération dans autres domaines importants du fonctionnement</label>
-  <button type="button" onclick="validerCritereE()">✔️ Valider le critère E</button>
 </fieldset>
 
 <!-- Spécificateur -->
-<fieldset id="specificateur" class="hidden">
+<fieldset id="specificateur">
   <legend>Spécifier basé sur le symptôme prédominant</legend>
-  <p class="subtitle">Sélectionner le type basé sur le symptôme prédominant</p>
-  <div class="warning-box">
-    ⚠️ Le code ICD-10-CM dépend du symptôme prédominant
-  </div>
+  <p class="subtitle">Sélectionner le type basé sur le symptôme prédominant (Le code ICD-10-CM dépend du symptôme prédominant)</p>
   
   <label><input type="radio" name="type" value="Avec délires"/> <strong>Avec délires (F06.2) :</strong> Si les délires sont le symptôme prédominant</label>
   
   <label><input type="radio" name="type" value="Avec hallucinations"/> <strong>Avec hallucinations (F06.0) :</strong> Si les hallucinations sont le symptôme prédominant</label>
-  
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
 </fieldset>
 
+<!-- Diagnostic différentiel -->
+<fieldset>
+  <legend>Diagnostic différentiel</legend>
+  <label><input type="checkbox" name="diff_diag" value="Delirium"/> Delirium</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble neurocognitif majeur"/> Trouble neurocognitif majeur</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble psychotique induit par une substance"/> Trouble psychotique induit par une substance</label>
+  <label><input type="checkbox" name="diff_diag" value="Schizophrénie"/> Schizophrénie</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble délirant"/> Trouble délirant</label>
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset>
+  <legend>Comorbidité</legend>
+  <label><input type="checkbox" name="comorbidite" value="Condition médicale causale"/> Condition médicale causale (obligatoire)</label>
+  <label><input type="checkbox" name="comorbidite" value="Troubles neurocognitifs"/> Troubles neurocognitifs</label>
+  <label><input type="checkbox" name="comorbidite" value="Troubles dépressifs"/> Troubles dépressifs</label>
+</fieldset>
+
+<!-- Boutons de validation -->
+<div class='boutons-validation'>
+  <button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button>
+  <button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button>
+</div>
+
 </form>
-
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:[],critereB:[],critereC:"",critereD:"",critereE:[],type:""};
-
-function validerCritereA(){
-  const c=Array.from(document.querySelectorAll("input[name='critereA']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereA=c;
-    document.getElementById("critereB").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère A", confirmButtonColor: "#667eea"});
-}
-
-function validerCritereB(){
-  const c=Array.from(document.querySelectorAll("input[name='critereB']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereB=c;
-    document.getElementById("critereC").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère B", confirmButtonColor: "#667eea"});
-}
-
-function validerCritereC(){
-  const c=document.querySelector("input[name='critereC']:checked");
-  if(c){
-    choix.critereC=c.value;
-    document.getElementById("critereD").classList.remove("hidden");
-  }else alert("Cochez l'option du critère C");
-}
-
-function validerCritereD(){
-  const c=document.querySelector("input[name='critereD']:checked");
-  if(c){
-    choix.critereD=c.value;
-    document.getElementById("critereE").classList.remove("hidden");
-  }else alert("Cochez l'option du critère D");
-}
-
-function validerCritereE(){
-  const c=Array.from(document.querySelectorAll("input[name='critereE']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereE=c;
-    document.getElementById("specificateur").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère E", confirmButtonColor: "#667eea"});
-}
-
-function afficherResume(){
-  const t=document.querySelector("input[name='type']:checked");
-  if(t){
-    choix.type=t.value;
-    genererResume();
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Sélectionnez le type basé sur le symptôme prédominant", confirmButtonColor: "#667eea"});
-}
-
-function genererResume(){
-  let code="";
-  if(choix.type==="Avec délires")code="F06.2";
-  else if(choix.type==="Avec hallucinations")code="F06.0";
-  
-  let diag=code+" Trouble Psychotique dû à une Autre Condition Médicale, "+choix.type.toLowerCase();
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Critère A – Hallucinations ou délires proéminents</h4><ul class='choix-list'>";
-  choix.critereA.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère B – Évidence d'une condition médicale</h4><ul class='choix-list'>";
-  choix.critereB.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère C – Non mieux expliqué par un autre trouble mental</h4><ul class='choix-list'><li>✓ "+choix.critereC+"</li></ul>";
-  
-  h+="<h4>Critère D – Ne survient pas exclusivement durant un delirium</h4><ul class='choix-list'><li>✓ "+choix.critereD+"</li></ul>";
-  
-  h+="<h4>Critère E – Détresse ou altération cliniquement significative</h4><ul class='choix-list'>";
-  choix.critereE.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Spécificateur basé sur symptôme prédominant</h4><ul class='choix-list'><li>✓ "+choix.type+"</li></ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Hallucinations ou délires proéminents qui sont la conséquence physiopathologique directe d'une condition médicale.";
-  h+="<br/><br/><strong>Critère A :</strong> Hallucinations ou délires proéminents.";
-  h+="<br/><br/><strong>Critère B :</strong> Preuves (histoire, examen physique, laboratoire) que perturbation est conséquence physiopathologique directe d'une condition médicale.";
-  h+="<br/><br/><strong>Critère C :</strong> Non mieux expliqué par autre trouble mental.";
-  h+="<br/><br/><strong>Critère D :</strong> Ne survient pas exclusivement durant delirium.";
-  h+="<br/><br/><strong>Critère E :</strong> Cause détresse ou altération cliniquement significative.";
-  h+="<br/><br/><strong>Codage basé sur symptôme prédominant :</strong>";
-  h+="<br/>• F06.2 : Avec délires (si délires sont symptôme prédominant)";
-  h+="<br/>• F06.0 : Avec hallucinations (si hallucinations sont symptôme prédominant)";
-  h+="<br/><br/><strong>Note de codage :</strong> Inclure le nom de l'autre condition médicale dans le nom du trouble mental (ex: F06.2 trouble psychotique dû à néoplasme pulmonaire malin, avec délires).";
-  h+="<br/><br/><strong>L'autre condition médicale</strong> doit être codée et listée séparément immédiatement avant le trouble psychotique (ex: C34.90 néoplasme pulmonaire malin; F06.2 trouble psychotique dû à néoplasme pulmonaire malin, avec délires).";
-  h+="<br/><br/><strong>Sévérité :</strong> Peut être évaluée sur échelle 0-4 pour délires, hallucinations, comportement psychomoteur anormal, symptômes négatifs (optionnel).";
-  h+="<br/><br/><strong>Évaluation importante :</strong> En plus des domaines de symptômes identifiés dans les critères diagnostiques, l'évaluation de la cognition, de la dépression et des domaines de symptômes maniaques est vitale pour faire des distinctions critiques entre les divers troubles du spectre de la schizophrénie et autres troubles psychotiques.";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 16/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
