--- a/Embedding/Schizophrenia_Spectrum_out/Schizophreniform_Disorder.html
+++ b/Embedding/Schizophrenia_Spectrum_out/Schizophreniform_Disorder.html
@@ -41,30 +41,6 @@
       cursor: pointer;
     }
     button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +65,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -138,10 +89,7 @@
 <!-- Critère A -->
 <fieldset id="critereA">
   <legend>Critère A – Symptômes caractéristiques</legend>
-  <p class="subtitle">Deux (ou plus) des symptômes suivants, chacun présent pour une portion significative de temps durant une période de 1 mois (ou moins si traité avec succès). Au moins un de ceux-ci doit être (1), (2) ou (3)</p>
-  <div class="warning-box">
-    ⚠️ Au moins 2 symptômes requis, dont au moins 1 doit être délires (1), hallucinations (2) ou discours désorganisé (3)
-  </div>
+  <p class="subtitle">Deux (ou plus) des symptômes suivants, chacun présent pour une portion significative de temps durant une période de 1 mois (ou moins si traité avec succès). Au moins un de ceux-ci doit être (1), (2) ou (3). Au moins 2 symptômes requis, dont au moins 1 doit être délires (1), hallucinations (2) ou discours désorganisé (3)</p>
   
   <label><input type="checkbox" name="critereA" value="1. Délires"/> <strong>1.</strong> Délires</label>
   
@@ -152,46 +100,35 @@
   <label><input type="checkbox" name="critereA" value="4. Comportement grossièrement désorganisé ou catatonique"/> <strong>4.</strong> Comportement grossièrement désorganisé ou catatonique</label>
   
   <label><input type="checkbox" name="critereA" value="5. Symptômes négatifs (expression émotionnelle diminuée ou avolition)"/> <strong>5.</strong> Symptômes négatifs (c'est-à-dire expression émotionnelle diminuée ou avolition)</label>
-  
-  <button type="button" onclick="validerCritereA()">✔️ Valider le critère A</button>
 </fieldset>
 
 <!-- Critère B -->
-<fieldset id="critereB" class="hidden">
+<fieldset id="critereB">
   <legend>Critère B – Durée de l'épisode</legend>
-  <p class="subtitle">Un épisode du trouble dure au moins 1 mois mais moins de 6 mois</p>
-  <div class="warning-box">
-    ⚠️ Durée : ≥1 mois et <6 mois
-  </div>
+  <p class="subtitle">Un épisode du trouble dure au moins 1 mois mais moins de 6 mois (Durée : ≥1 mois et <6 mois. Note: Quand le diagnostic doit être posé sans attendre la guérison, il doit être qualifié de "provisoire")</p>
   <label><input type="checkbox" name="critereB" value="Épisode dure au moins 1 mois"/> Épisode dure au moins 1 mois</label>
   <label><input type="checkbox" name="critereB" value="Épisode dure moins de 6 mois"/> Épisode dure moins de 6 mois</label>
-  <div class="note-box">
-    <strong>Note :</strong> Quand le diagnostic doit être posé sans attendre la guérison, il doit être qualifié de "provisoire".
-  </div>
   <label><input type="checkbox" name="provisoire" value="Diagnostic provisoire"/> <strong>Diagnostic provisoire</strong> (si posé sans attendre la guérison)</label>
-  <button type="button" onclick="validerCritereB()">✔️ Valider le critère B</button>
 </fieldset>
 
 <!-- Critère C -->
-<fieldset id="critereC" class="hidden">
+<fieldset id="critereC">
   <legend>Critère C – Exclusion trouble schizoaffectif et troubles de l'humeur</legend>
   <p class="subtitle">Le trouble schizoaffectif et les troubles dépressif ou bipolaire avec caractéristiques psychotiques ont été exclus</p>
   <label><input type="checkbox" name="critereC" value="Aucun épisode dépressif majeur ou maniaque concomitant avec symptômes phase active"/> 1) Aucun épisode dépressif majeur ou maniaque n'est survenu concomitamment avec les symptômes de phase active</label>
   <label><input type="checkbox" name="critereC" value="Si épisodes thymiques survenus, présents pour minorité de durée totale"/> OU 2) Si des épisodes thymiques sont survenus durant les symptômes de phase active, ils ont été présents pour une minorité de la durée totale des périodes actives et résiduelles</label>
-  <button type="button" onclick="validerCritereC()">✔️ Valider le critère C</button>
 </fieldset>
 
 <!-- Critère D -->
-<fieldset id="critereD" class="hidden">
+<fieldset id="critereD">
   <legend>Critère D – Exclusion substance et condition médicale</legend>
   <p class="subtitle">La perturbation n'est pas attribuable aux effets physiologiques d'une substance ou d'une autre condition médicale</p>
   <label><input type="checkbox" name="critereD" value="Non attribuable aux effets physiologiques d'une substance (drogue, médicament)"/> Non attribuable aux effets physiologiques d'une substance (drogue, médicament)</label>
   <label><input type="checkbox" name="critereD" value="Non attribuable aux effets physiologiques d'une autre condition médicale"/> Non attribuable aux effets physiologiques d'une autre condition médicale</label>
-  <button type="button" onclick="validerCritereD()">✔️ Valider le critère D</button>
 </fieldset>
 
 <!-- Spécificateurs -->
-<fieldset id="specificateurs" class="hidden">
+<fieldset id="specificateurs">
   <legend>Spécificateurs</legend>
   
   <p style="margin-top: 10px;"><strong>Caractéristiques pronostiques :</strong></p>
@@ -206,144 +143,39 @@
   <label><input type="checkbox" name="pronostic" value="Absence d'affect émoussé ou plat"/> Absence d'affect émoussé ou plat</label>
   
   <p style="margin-top: 15px;"><strong>Catatonie :</strong></p>
-  <label><input type="checkbox" name="catatonie" value="Avec catatonie"/> <strong>Avec catatonie</strong></label>
-  <div class="note-box">
-    <strong>Note de codage :</strong> Utiliser code additionnel F06.1 catatonie associée au trouble schizophréniforme pour indiquer la présence de catatonie comorbide.
-  </div>
-  
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
+  <label><input type="checkbox" name="catatonie" value="Avec catatonie"/> <strong>Avec catatonie</strong> (Note de codage: Utiliser code additionnel F06.1 catatonie associée au trouble schizophréniforme pour indiquer la présence de catatonie comorbide)</label>
 </fieldset>
 
+<!-- Diagnostic différentiel -->
+<fieldset>
+  <legend>Diagnostic différentiel</legend>
+  <label><input type="checkbox" name="diff_diag" value="Schizophrénie"/> Schizophrénie (durée ≥6 mois)</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble psychotique bref"/> Trouble psychotique bref (durée <1 mois)</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble schizoaffectif"/> Trouble schizoaffectif</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble bipolaire ou dépressif avec caractéristiques psychotiques"/> Trouble bipolaire ou dépressif avec caractéristiques psychotiques</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble psychotique induit par une substance"/> Trouble psychotique induit par une substance</label>
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset>
+  <legend>Comorbidité</legend>
+  <label><input type="checkbox" name="comorbidite" value="Troubles liés à l'usage de substances"/> Troubles liés à l'usage de substances</label>
+  <label><input type="checkbox" name="comorbidite" value="Troubles anxieux"/> Troubles anxieux</label>
+  <label><input type="checkbox" name="comorbidite" value="Trouble dépressif"/> Trouble dépressif</label>
+</fieldset>
+
+<!-- Boutons de validation -->
+<div class='boutons-validation'>
+  <button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button>
+  <button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button>
+</div>
+
 </form>
-
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:[],critereB:[],provisoire:false,critereC:[],critereD:[],pronostic:[],catatonie:false};
-
-function validerCritereA(){
-  const c=Array.from(document.querySelectorAll("input[name='critereA']:checked")).map(e=>e.value);
-  const hasCore=c.some(s=>s.startsWith("1.")||s.startsWith("2.")||s.startsWith("3."));
-  if(c.length>=2&&hasCore){
-    choix.critereA=c;
-    document.getElementById("critereB").classList.remove("hidden");
-  }else if(c.length>=2&&!hasCore){
-    Swal.fire({icon: "warning", title: "Attention", text: "Au moins un symptôme doit être délires (1), hallucinations (2) ou discours désorganisé (3)", confirmButtonColor: "#667eea"});
-  }else{
-    alert("Au moins 2 symptômes sont requis (actuellement: "+c.length+")");
-  }
-}
-
-function validerCritereB(){
-  const c=Array.from(document.querySelectorAll("input[name='critereB']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereB=c;
-    choix.provisoire=document.querySelector("input[name='provisoire']:checked")!==null;
-    document.getElementById("critereC").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère B", confirmButtonColor: "#667eea"});
-}
-
-function validerCritereC(){
-  const c=Array.from(document.querySelectorAll("input[name='critereC']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereC=c;
-    document.getElementById("critereD").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère C", confirmButtonColor: "#667eea"});
-}
-
-function validerCritereD(){
-  const c=Array.from(document.querySelectorAll("input[name='critereD']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereD=c;
-    document.getElementById("specificateurs").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère D", confirmButtonColor: "#667eea"});
-}
-
-function afficherResume(){
-  choix.pronostic=Array.from(document.querySelectorAll("input[name='pronostic']:checked")).map(e=>e.value);
-  choix.catatonie=document.querySelector("input[name='catatonie']:checked")!==null;
-  genererResume();
-}
-
-function genererResume(){
-  const code="F20.81";
-  let diag=code+" Trouble Schizophréniforme";
-  if(choix.provisoire)diag+=", provisoire";
-  if(choix.pronostic.length>=2)diag+=", avec caractéristiques de bon pronostic";
-  else if(choix.pronostic.length>0)diag+=", sans caractéristiques de bon pronostic";
-  if(choix.catatonie)diag+=", avec catatonie (F06.1)";
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Critère A – Symptômes caractéristiques ("+choix.critereA.length+"/5, minimum 2 requis dont 1/2/3)</h4><ul class='choix-list'>";
-  choix.critereA.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère B – Durée de l'épisode (≥1 mois et <6 mois)</h4><ul class='choix-list'>";
-  choix.critereB.forEach(s=>h+="<li>✓ "+s+"</li>");
-  if(choix.provisoire)h+="<li>✓ Diagnostic provisoire (posé sans attendre guérison)</li>";
-  h+="</ul>";
-  
-  h+="<h4>Critère C – Exclusion trouble schizoaffectif et troubles de l'humeur</h4><ul class='choix-list'>";
-  choix.critereC.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère D – Exclusion substance et condition médicale</h4><ul class='choix-list'>";
-  choix.critereD.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Spécificateurs</h4><ul class='choix-list'>";
-  if(choix.pronostic.length>=2){
-    h+="<li>✓ <strong>Avec caractéristiques de bon pronostic</strong> ("+choix.pronostic.length+"/4 caractéristiques présentes):</li>";
-    choix.pronostic.forEach(s=>h+="<li style='margin-left:20px;'>• "+s+"</li>");
-  }else if(choix.pronostic.length>0){
-    h+="<li>✓ <strong>Sans caractéristiques de bon pronostic</strong> (moins de 2 caractéristiques présentes)</li>";
-  }else{
-    h+="<li>✓ <strong>Sans caractéristiques de bon pronostic</strong> (aucune caractéristique évaluée)</li>";
-  }
-  if(choix.catatonie)h+="<li>✓ Avec catatonie (code additionnel F06.1)</li>";
-  h+="</ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code;
-  if(choix.catatonie)h+=" + F06.1 (catatonie associée)";
-  h+="<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Au moins 2 symptômes caractéristiques dont au moins 1 doit être délires, hallucinations ou discours désorganisé. Durée ≥1 mois et <6 mois.";
-  h+="<br/><br/><strong>Critère A - Symptômes (≥2, dont ≥1 parmi 1/2/3) :</strong>";
-  h+="<br/>1. Délires";
-  h+="<br/>2. Hallucinations";
-  h+="<br/>3. Discours désorganisé";
-  h+="<br/>4. Comportement grossièrement désorganisé ou catatonique";
-  h+="<br/>5. Symptômes négatifs (expression émotionnelle diminuée, avolition)";
-  h+="<br/>Chacun présent pour portion significative de temps durant période de 1 mois (ou moins si traité).";
-  h+="<br/><br/><strong>Critère B :</strong> Épisode dure ≥1 mois et <6 mois. Si diagnostic posé sans attendre guérison: qualifier de 'provisoire'.";
-  h+="<br/><br/><strong>Critère C :</strong> Trouble schizoaffectif et troubles dépressif/bipolaire avec caractéristiques psychotiques exclus.";
-  h+="<br/><br/><strong>Critère D :</strong> Non attribuable à substance ou condition médicale.";
-  h+="<br/><br/><strong>Caractéristiques de bon pronostic (≥2 requis) :</strong>";
-  h+="<br/>• Début symptômes psychotiques proéminents dans 4 semaines du premier changement notable";
-  h+="<br/>• Confusion ou perplexité";
-  h+="<br/>• Bon fonctionnement social et professionnel prémorbide";
-  h+="<br/>• Absence d'affect émoussé ou plat";
-  h+="<br/><br/><strong>Avec/Sans caractéristiques de bon pronostic :</strong> "+
-    (choix.pronostic.length>=2?"Avec ("+choix.pronostic.length+"/4 caractéristiques)":"Sans (<2 caractéristiques)");
-  if(choix.catatonie){
-    h+="<br/><br/><strong>Catatonie :</strong> Code additionnel F06.1 pour indiquer présence de catatonie comorbide.";
-  }
-  h+="<br/><br/><strong>Sévérité :</strong> Peut être évaluée sur échelle 0-4 pour délires, hallucinations, discours désorganisé, comportement psychomoteur anormal, symptômes négatifs (optionnel).";
-  h+="<br/><br/><strong>Différence clé avec schizophrénie :</strong> Durée <6 mois (vs ≥6 mois pour schizophrénie).";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 16/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
