--- a/Embedding/Sexual_Dysfunctions_out/Male_Hypoactive_Sexual_Desire_Disorder.html
+++ b/Embedding/Sexual_Dysfunctions_out/Male_Hypoactive_Sexual_Desire_Disorder.html
@@ -41,30 +41,6 @@
       cursor: pointer;
     }
     button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +65,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -138,52 +89,41 @@
 <!-- Critère A -->
 <fieldset id="critereA">
   <legend>Critère A – Déficience persistante ou récurrente du désir sexuel</legend>
-  <p class="subtitle">Pensées ou fantasmes sexuels/érotiques et désir d'activité sexuelle déficients (ou absents) de manière persistante ou récurrente</p>
-  <div class="note-box">
-    <strong>Note :</strong> Le jugement de déficience est posé par le clinicien, en tenant compte des facteurs qui affectent le fonctionnement sexuel, tels que l'âge et les contextes généraux et socioculturels de la vie de l'individu.
-  </div>
+  <p class="subtitle">Pensées ou fantasmes sexuels/érotiques et désir d'activité sexuelle déficients (ou absents) de manière persistante ou récurrente. Note: Le jugement de déficience est posé par le clinicien, en tenant compte des facteurs qui affectent le fonctionnement sexuel, tels que l'âge et les contextes généraux et socioculturels de la vie de l'individu</p>
   
   <label><input type="checkbox" name="critereA" value="Pensées ou fantasmes sexuels/érotiques déficients ou absents"/> Pensées ou fantasmes sexuels/érotiques déficients ou absents</label>
   
   <label><input type="checkbox" name="critereA" value="Désir d'activité sexuelle déficient ou absent"/> Désir d'activité sexuelle déficient ou absent</label>
   
   <label><input type="checkbox" name="critereA" value="Déficience persistante ou récurrente"/> Déficience persistante ou récurrente</label>
-  
-  <button type="button" onclick="validerCritereA()">✔️ Valider le critère A</button>
 </fieldset>
 
 <!-- Critère B -->
-<fieldset id="critereB" class="hidden">
+<fieldset id="critereB">
   <legend>Critère B – Durée</legend>
-  <p class="subtitle">Les symptômes du critère A ont persisté pour une durée minimale d'approximativement 6 mois</p>
-  <div class="warning-box">
-    ⚠️ Durée minimale : Approximativement 6 mois
-  </div>
+  <p class="subtitle">Les symptômes du critère A ont persisté pour une durée minimale d'approximativement 6 mois. Durée minimale : Approximativement 6 mois</p>
   <label><input type="checkbox" name="critereB" value="Symptômes ont persisté approximativement 6 mois ou plus"/> Les symptômes ont persisté pour une durée minimale d'approximativement 6 mois</label>
-  <button type="button" onclick="validerCritereB()">✔️ Valider le critère B</button>
 </fieldset>
 
 <!-- Critère C -->
-<fieldset id="critereC" class="hidden">
+<fieldset id="critereC">
   <legend>Critère C – Détresse cliniquement significative</legend>
   <p class="subtitle">Les symptômes du critère A causent une détresse cliniquement significative chez l'individu</p>
   <label><input type="checkbox" name="critereC" value="Symptômes causent détresse cliniquement significative"/> Les symptômes causent une détresse cliniquement significative chez l'individu</label>
-  <button type="button" onclick="validerCritereC()">✔️ Valider le critère C</button>
 </fieldset>
 
 <!-- Critère D -->
-<fieldset id="critereD" class="hidden">
+<fieldset id="critereD">
   <legend>Critère D – Exclusion d'autres causes</legend>
   <p class="subtitle">La dysfonction sexuelle n'est pas mieux expliquée par d'autres facteurs</p>
   <label><input type="checkbox" name="critereD" value="Non mieux expliqué par trouble mental non sexuel"/> Non mieux expliqué par un trouble mental non sexuel</label>
   <label><input type="checkbox" name="critereD" value="Non conséquence de détresse relationnelle sévère ou autres facteurs de stress significatifs"/> Non conséquence de détresse relationnelle sévère ou autres facteurs de stress significatifs</label>
   <label><input type="checkbox" name="critereD" value="Non attribuable aux effets d'une substance/médicament"/> Non attribuable aux effets d'une substance/médicament</label>
   <label><input type="checkbox" name="critereD" value="Non attribuable à une autre condition médicale"/> Non attribuable à une autre condition médicale</label>
-  <button type="button" onclick="validerCritereD()">✔️ Valider le critère D</button>
 </fieldset>
 
 <!-- Spécificateurs -->
-<fieldset id="specificateurs" class="hidden">
+<fieldset id="specificateurs">
   <legend>Spécificateurs</legend>
   
   <p style="margin-top: 10px;"><strong>Début :</strong></p>
@@ -198,119 +138,39 @@
   <label><input type="radio" name="severite" value="Léger"/> <strong>Léger :</strong> Évidence de détresse légère concernant les symptômes du critère A</label>
   <label><input type="radio" name="severite" value="Modéré"/> <strong>Modéré :</strong> Évidence de détresse modérée concernant les symptômes du critère A</label>
   <label><input type="radio" name="severite" value="Sévère"/> <strong>Sévère :</strong> Évidence de détresse sévère ou extrême concernant les symptômes du critère A</label>
-  
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
 </fieldset>
 
+<!-- Diagnostic différentiel -->
+<fieldset>
+  <legend>Diagnostic différentiel</legend>
+  <label><input type="checkbox" name="diff_diag" value="Variation normale liée à l'âge"/> Variation normale liée à l'âge</label>
+  <label><input type="checkbox" name="diff_diag" value="Troubles de l'humeur"/> Troubles de l'humeur (dépression)</label>
+  <label><input type="checkbox" name="diff_diag" value="Conditions médicales"/> Conditions médicales (hypogonadisme, diabète)</label>
+  <label><input type="checkbox" name="diff_diag" value="Effets de substances/médicaments"/> Effets de substances/médicaments (antidépresseurs, antihypertenseurs)</label>
+  <label><input type="checkbox" name="diff_diag" value="Dysfonction érectile"/> Dysfonction érectile</label>
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset>
+  <legend>Comorbidité</legend>
+  <label><input type="checkbox" name="comorbidite" value="Trouble érectile"/> Trouble érectile</label>
+  <label><input type="checkbox" name="comorbidite" value="Éjaculation retardée"/> Éjaculation retardée</label>
+  <label><input type="checkbox" name="comorbidite" value="Troubles de l'humeur"/> Troubles de l'humeur (dépression)</label>
+  <label><input type="checkbox" name="comorbidite" value="Troubles anxieux"/> Troubles anxieux</label>
+</fieldset>
+
+<!-- Boutons de validation -->
+<div class='boutons-validation'>
+  <button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button>
+  <button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button>
+</div>
+
 </form>
-
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:[],critereB:"",critereC:"",critereD:[],debut:"",contexte:"",severite:""};
-
-function validerCritereA(){
-  const c=Array.from(document.querySelectorAll("input[name='critereA']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereA=c;
-    document.getElementById("critereB").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère A", confirmButtonColor: "#667eea"});
-}
-
-function validerCritereB(){
-  const c=document.querySelector("input[name='critereB']:checked");
-  if(c){
-    choix.critereB=c.value;
-    document.getElementById("critereC").classList.remove("hidden");
-  }else alert("Cochez l'option du critère B");
-}
-
-function validerCritereC(){
-  const c=document.querySelector("input[name='critereC']:checked");
-  if(c){
-    choix.critereC=c.value;
-    document.getElementById("critereD").classList.remove("hidden");
-  }else alert("Cochez l'option du critère C");
-}
-
-function validerCritereD(){
-  const c=Array.from(document.querySelectorAll("input[name='critereD']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereD=c;
-    document.getElementById("specificateurs").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère D", confirmButtonColor: "#667eea"});
-}
-
-function afficherResume(){
-  const d=document.querySelector("input[name='debut']:checked");
-  const co=document.querySelector("input[name='contexte']:checked");
-  const s=document.querySelector("input[name='severite']:checked");
-  if(d&&co&&s){
-    choix.debut=d.value;
-    choix.contexte=co.value;
-    choix.severite=s.value;
-    genererResume();
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Sélectionnez le début, le contexte et la sévérité", confirmButtonColor: "#667eea"});
-}
-
-function genererResume(){
-  const code="F52.0";
-  let diag=code+" Trouble du Désir Sexuel Hypoactif Masculin, "+choix.debut.toLowerCase()+", "+choix.contexte.toLowerCase()+", sévérité "+choix.severite.toLowerCase();
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Critère A – Déficience persistante ou récurrente du désir sexuel</h4><ul class='choix-list'>";
-  choix.critereA.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère B – Durée (≥6 mois)</h4><ul class='choix-list'><li>✓ "+choix.critereB+"</li></ul>";
-  
-  h+="<h4>Critère C – Détresse cliniquement significative</h4><ul class='choix-list'><li>✓ "+choix.critereC+"</li></ul>";
-  
-  h+="<h4>Critère D – Exclusion d'autres causes</h4><ul class='choix-list'>";
-  choix.critereD.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Spécificateurs</h4><ul class='choix-list'>";
-  h+="<li>✓ Début: "+choix.debut+"</li>";
-  h+="<li>✓ Contexte: "+choix.contexte+"</li>";
-  h+="<li>✓ Sévérité: "+choix.severite+"</li>";
-  h+="</ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Pensées ou fantasmes sexuels/érotiques et désir d'activité sexuelle déficients ou absents de manière persistante ou récurrente.";
-  h+="<br/><br/><strong>Critère A :</strong> Déficience (ou absence) persistante ou récurrente de:";
-  h+="<br/>• Pensées ou fantasmes sexuels/érotiques";
-  h+="<br/>• Désir d'activité sexuelle";
-  h+="<br/><br/><strong>Jugement clinique :</strong> Le jugement de déficience est posé par le clinicien, en tenant compte des facteurs qui affectent le fonctionnement sexuel (âge, contextes généraux et socioculturels).";
-  h+="<br/><br/><strong>Critère B :</strong> Durée minimale d'approximativement 6 mois.";
-  h+="<br/><br/><strong>Critère C :</strong> Détresse cliniquement significative.";
-  h+="<br/><br/><strong>Critère D :</strong> Non mieux expliqué par trouble mental non sexuel, détresse relationnelle sévère, substance/médicament ou condition médicale.";
-  h+="<br/><br/><strong>Spécificateurs de début :</strong>";
-  h+="<br/>• Depuis toujours: Présent depuis que l'individu est devenu sexuellement actif";
-  h+="<br/>• Acquis: Commencé après période de fonctionnement normal";
-  h+="<br/><br/><strong>Spécificateurs de contexte :</strong>";
-  h+="<br/>• Généralisé: Non limité à certains types de stimulation, situations ou partenaires";
-  h+="<br/>• Situationnel: Uniquement avec certains types de stimulation, situations ou partenaires";
-  h+="<br/><br/><strong>Sévérité actuelle :</strong>";
-  h+="<br/>• Léger: Détresse légère";
-  h+="<br/>• Modéré: Détresse modérée";
-  h+="<br/>• Sévère: Détresse sévère ou extrême";
-  h+="<br/><br/><strong>Note :</strong> Ce trouble est spécifique aux hommes. Pour les femmes, voir Trouble de l'Intérêt Sexuel/Excitation Sexuelle Féminin (F52.22).";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 16/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
