--- a/Embedding/Sexual_Dysfunctions_out/Premature_Ejaculation.html
+++ b/Embedding/Sexual_Dysfunctions_out/Premature_Ejaculation.html
@@ -41,30 +41,6 @@
       cursor: pointer;
     }
     button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +65,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -138,10 +89,7 @@
 <!-- Critère A -->
 <fieldset id="critereA">
   <legend>Critère A – Pattern persistant ou récurrent d'éjaculation précoce</legend>
-  <p class="subtitle">Un pattern persistant ou récurrent d'éjaculation survenant durant l'activité sexuelle avec partenaire dans approximativement 1 minute suivant la pénétration vaginale et avant que l'individu ne le souhaite</p>
-  <div class="warning-box">
-    ⚠️ Critère temporel : Approximativement 1 minute suivant la pénétration vaginale
-  </div>
+  <p class="subtitle">Un pattern persistant ou récurrent d'éjaculation survenant durant l'activité sexuelle avec partenaire dans approximativement 1 minute suivant la pénétration vaginale et avant que l'individu ne le souhaite. Critère temporel : Approximativement 1 minute suivant la pénétration vaginale</p>
   
   <label><input type="checkbox" name="critereA" value="Éjaculation survenant durant activité sexuelle avec partenaire"/> Éjaculation survenant durant l'activité sexuelle avec partenaire</label>
   
@@ -151,47 +99,37 @@
   
   <label><input type="checkbox" name="critereA" value="Pattern persistant ou récurrent"/> Pattern persistant ou récurrent</label>
   
-  <div class="note-box">
-    <strong>Note :</strong> Bien que le diagnostic d'éjaculation précoce puisse s'appliquer aux individus engagés dans des activités sexuelles non vaginales, des critères de durée spécifiques n'ont pas été établis pour ces activités.
-  </div>
-  
-  <button type="button" onclick="validerCritereA()">✔️ Valider le critère A</button>
+  <label><input type="checkbox" name="critereA" value="Note: Diagnostic peut s'appliquer aux activités sexuelles non vaginales, critères de durée spécifiques non établis pour ces activités"/> Note: Bien que le diagnostic d'éjaculation précoce puisse s'appliquer aux individus engagés dans des activités sexuelles non vaginales, des critères de durée spécifiques n'ont pas été établis pour ces activités</label>
 </fieldset>
 
 <!-- Critère B -->
-<fieldset id="critereB" class="hidden">
+<fieldset id="critereB">
   <legend>Critère B – Durée et fréquence</legend>
-  <p class="subtitle">Le symptôme du critère A doit avoir été présent pendant au moins 6 mois et doit être vécu lors de presque toutes ou toutes (approximativement 75%-100%) les occasions d'activité sexuelle</p>
-  <div class="warning-box">
-    ⚠️ Durée : ≥6 mois ET Fréquence : 75%-100% des occasions
-  </div>
+  <p class="subtitle">Le symptôme du critère A doit avoir été présent pendant au moins 6 mois et doit être vécu lors de presque toutes ou toutes (approximativement 75%-100%) les occasions d'activité sexuelle. Durée : ≥6 mois ET Fréquence : 75%-100% des occasions</p>
   <label><input type="checkbox" name="critereB" value="Symptôme présent pendant au moins 6 mois"/> Symptôme présent pendant au moins 6 mois</label>
   <label><input type="checkbox" name="critereB" value="Vécu lors de 75%-100% des occasions d'activité sexuelle"/> Vécu lors de presque toutes ou toutes (approximativement 75%-100%) les occasions d'activité sexuelle</label>
   <label><input type="checkbox" name="critereB" value="Dans contextes situationnels identifiés ou, si généralisé, dans tous les contextes"/> Dans contextes situationnels identifiés ou, si généralisé, dans tous les contextes</label>
-  <button type="button" onclick="validerCritereB()">✔️ Valider le critère B</button>
 </fieldset>
 
 <!-- Critère C -->
-<fieldset id="critereC" class="hidden">
+<fieldset id="critereC">
   <legend>Critère C – Détresse cliniquement significative</legend>
   <p class="subtitle">Le symptôme du critère A cause une détresse cliniquement significative chez l'individu</p>
   <label><input type="checkbox" name="critereC" value="Symptôme cause détresse cliniquement significative"/> Le symptôme cause une détresse cliniquement significative chez l'individu</label>
-  <button type="button" onclick="validerCritereC()">✔️ Valider le critère C</button>
 </fieldset>
 
 <!-- Critère D -->
-<fieldset id="critereD" class="hidden">
+<fieldset id="critereD">
   <legend>Critère D – Exclusion d'autres causes</legend>
   <p class="subtitle">La dysfonction sexuelle n'est pas mieux expliquée par d'autres facteurs</p>
   <label><input type="checkbox" name="critereD" value="Non mieux expliqué par trouble mental non sexuel"/> Non mieux expliqué par un trouble mental non sexuel</label>
   <label><input type="checkbox" name="critereD" value="Non conséquence de détresse relationnelle sévère ou autres facteurs de stress significatifs"/> Non conséquence de détresse relationnelle sévère ou autres facteurs de stress significatifs</label>
   <label><input type="checkbox" name="critereD" value="Non attribuable aux effets d'une substance/médicament"/> Non attribuable aux effets d'une substance/médicament</label>
   <label><input type="checkbox" name="critereD" value="Non attribuable à une autre condition médicale"/> Non attribuable à une autre condition médicale</label>
-  <button type="button" onclick="validerCritereD()">✔️ Valider le critère D</button>
 </fieldset>
 
 <!-- Spécificateurs -->
-<fieldset id="specificateurs" class="hidden">
+<fieldset id="specificateurs">
   <legend>Spécificateurs</legend>
   
   <p style="margin-top: 10px;"><strong>Début :</strong></p>
@@ -206,118 +144,39 @@
   <label><input type="radio" name="severite" value="Léger"/> <strong>Léger :</strong> Éjaculation survenant dans approximativement 30 secondes à 1 minute de pénétration vaginale</label>
   <label><input type="radio" name="severite" value="Modéré"/> <strong>Modéré :</strong> Éjaculation survenant dans approximativement 15-30 secondes de pénétration vaginale</label>
   <label><input type="radio" name="severite" value="Sévère"/> <strong>Sévère :</strong> Éjaculation survenant avant l'activité sexuelle, au début de l'activité sexuelle, ou dans approximativement 15 secondes de pénétration vaginale</label>
-  
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
 </fieldset>
 
+<!-- Diagnostic différentiel -->
+<fieldset>
+  <legend>Diagnostic différentiel</legend>
+  <label><input type="checkbox" name="diff_diag" value="Variation normale de la fonction sexuelle"/> Variation normale de la fonction sexuelle</label>
+  <label><input type="checkbox" name="diff_diag" value="Troubles de l'humeur"/> Troubles de l'humeur</label>
+  <label><input type="checkbox" name="diff_diag" value="Troubles anxieux"/> Troubles anxieux</label>
+  <label><input type="checkbox" name="diff_diag" value="Conditions médicales"/> Conditions médicales (prostatite, thyroïde)</label>
+  <label><input type="checkbox" name="diff_diag" value="Effets de substances/médicaments"/> Effets de substances/médicaments</label>
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset>
+  <legend>Comorbidité</legend>
+  <label><input type="checkbox" name="comorbidite" value="Trouble érectile"/> Trouble érectile</label>
+  <label><input type="checkbox" name="comorbidite" value="Troubles anxieux"/> Troubles anxieux (anxiété de performance)</label>
+  <label><input type="checkbox" name="comorbidite" value="Troubles de l'humeur"/> Troubles de l'humeur</label>
+  <label><input type="checkbox" name="comorbidite" value="Dysfonctions sexuelles chez le partenaire"/> Dysfonctions sexuelles chez le partenaire</label>
+</fieldset>
+
+<!-- Boutons de validation -->
+<div class='boutons-validation'>
+  <button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button>
+  <button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button>
+</div>
+
 </form>
-
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:[],critereB:[],critereC:"",critereD:[],debut:"",contexte:"",severite:""};
-
-function validerCritereA(){
-  const c=Array.from(document.querySelectorAll("input[name='critereA']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereA=c;
-    document.getElementById("critereB").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère A", confirmButtonColor: "#667eea"});
-}
-
-function validerCritereB(){
-  const c=Array.from(document.querySelectorAll("input[name='critereB']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereB=c;
-    document.getElementById("critereC").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère B", confirmButtonColor: "#667eea"});
-}
-
-function validerCritereC(){
-  const c=document.querySelector("input[name='critereC']:checked");
-  if(c){
-    choix.critereC=c.value;
-    document.getElementById("critereD").classList.remove("hidden");
-  }else alert("Cochez l'option du critère C");
-}
-
-function validerCritereD(){
-  const c=Array.from(document.querySelectorAll("input[name='critereD']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereD=c;
-    document.getElementById("specificateurs").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère D", confirmButtonColor: "#667eea"});
-}
-
-function afficherResume(){
-  const d=document.querySelector("input[name='debut']:checked");
-  const co=document.querySelector("input[name='contexte']:checked");
-  const s=document.querySelector("input[name='severite']:checked");
-  if(d&&co&&s){
-    choix.debut=d.value;
-    choix.contexte=co.value;
-    choix.severite=s.value;
-    genererResume();
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Sélectionnez le début, le contexte et la sévérité", confirmButtonColor: "#667eea"});
-}
-
-function genererResume(){
-  const code="F52.4";
-  let diag=code+" Éjaculation Précoce, "+choix.debut.toLowerCase()+", "+choix.contexte.toLowerCase()+", sévérité "+choix.severite.toLowerCase();
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Critère A – Pattern persistant ou récurrent d'éjaculation précoce</h4><ul class='choix-list'>";
-  choix.critereA.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère B – Durée (≥6 mois) et fréquence (75%-100%)</h4><ul class='choix-list'>";
-  choix.critereB.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère C – Détresse cliniquement significative</h4><ul class='choix-list'><li>✓ "+choix.critereC+"</li></ul>";
-  
-  h+="<h4>Critère D – Exclusion d'autres causes</h4><ul class='choix-list'>";
-  choix.critereD.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Spécificateurs</h4><ul class='choix-list'>";
-  h+="<li>✓ Début: "+choix.debut+"</li>";
-  h+="<li>✓ Contexte: "+choix.contexte+"</li>";
-  h+="<li>✓ Sévérité: "+choix.severite+"</li>";
-  h+="</ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Pattern persistant ou récurrent d'éjaculation survenant dans approximativement 1 minute suivant la pénétration vaginale et avant que l'individu ne le souhaite.";
-  h+="<br/><br/><strong>Critère A :</strong> Éjaculation durant activité sexuelle avec partenaire, dans approximativement 1 minute suivant pénétration vaginale, avant que l'individu ne le souhaite, pattern persistant ou récurrent.";
-  h+="<br/><br/><strong>Critère B :</strong> Symptôme présent ≥6 mois ET vécu lors de 75%-100% des occasions d'activité sexuelle.";
-  h+="<br/><br/><strong>Critère C :</strong> Détresse cliniquement significative.";
-  h+="<br/><br/><strong>Critère D :</strong> Non mieux expliqué par trouble mental non sexuel, détresse relationnelle sévère, substance/médicament ou condition médicale.";
-  h+="<br/><br/><strong>Note :</strong> Bien que le diagnostic puisse s'appliquer aux activités sexuelles non vaginales, des critères de durée spécifiques n'ont pas été établis pour ces activités.";
-  h+="<br/><br/><strong>Spécificateurs de début :</strong>";
-  h+="<br/>• Depuis toujours: Présent depuis que l'individu est devenu sexuellement actif";
-  h+="<br/>• Acquis: Commencé après période de fonctionnement normal";
-  h+="<br/><br/><strong>Spécificateurs de contexte :</strong>";
-  h+="<br/>• Généralisé: Non limité à certains types de stimulation, situations ou partenaires";
-  h+="<br/>• Situationnel: Uniquement avec certains types de stimulation, situations ou partenaires";
-  h+="<br/><br/><strong>Sévérité actuelle (basée sur latence éjaculatoire) :</strong>";
-  h+="<br/>• Léger: Approximativement 30 secondes à 1 minute de pénétration vaginale";
-  h+="<br/>• Modéré: Approximativement 15-30 secondes de pénétration vaginale";
-  h+="<br/>• Sévère: Avant activité sexuelle, au début de l'activité, ou dans approximativement 15 secondes de pénétration vaginale";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 16/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
