--- a/Embedding/Sleep_Wake_Disorders_out/Section1_Breathing-Related Sleep Disorders/Central_Sleep_Apnea.html
+++ b/Embedding/Sleep_Wake_Disorders_out/Section1_Breathing-Related Sleep Disorders/Central_Sleep_Apnea.html
@@ -41,30 +41,6 @@
       cursor: pointer;
     }
     button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +65,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -138,187 +89,81 @@
 <!-- Critère A -->
 <fieldset id="critereA">
   <legend>Critère A – Évidence par polysomnographie</legend>
-  <p class="subtitle">Évidence par polysomnographie de cinq apnées centrales ou plus par heure de sommeil</p>
-  <div class="warning-box">
-    ⚠️ Critère polysomnographique : ≥5 apnées centrales par heure de sommeil
-  </div>
+  <p class="subtitle">Évidence par polysomnographie de cinq apnées centrales ou plus par heure de sommeil. Critère polysomnographique : ≥5 apnées centrales par heure de sommeil</p>
   <label><input type="checkbox" name="critereA" value="Évidence par polysomnographie de 5 apnées centrales ou plus par heure de sommeil"/> Évidence par polysomnographie de 5 apnées centrales ou plus par heure de sommeil</label>
-  <button type="button" onclick="validerCritereA()">✔️ Valider le critère A</button>
 </fieldset>
 
 <!-- Critère B -->
-<fieldset id="critereB" class="hidden">
+<fieldset id="critereB">
   <legend>Critère B – Non mieux expliqué par un autre trouble du sommeil</legend>
   <p class="subtitle">Le trouble n'est pas mieux expliqué par un autre trouble du sommeil actuel</p>
   <label><input type="checkbox" name="critereB" value="Trouble non mieux expliqué par autre trouble du sommeil actuel"/> Le trouble n'est pas mieux expliqué par un autre trouble du sommeil actuel</label>
-  <button type="button" onclick="validerCritereB()">✔️ Valider le critère B</button>
 </fieldset>
 
 <!-- Sous-types -->
-<fieldset id="soustypes" class="hidden">
+<fieldset id="soustypes">
   <legend>Spécifier le sous-type</legend>
-  <p class="subtitle">Sélectionner le sous-type d'apnée centrale du sommeil</p>
-  <div class="warning-box">
-    ⚠️ Le code ICD-10-CM dépend du sous-type sélectionné
-  </div>
+  <p class="subtitle">Sélectionner le sous-type d'apnée centrale du sommeil. Le code ICD-10-CM dépend du sous-type sélectionné</p>
   
   <label><input type="radio" name="soustype" value="Apnée centrale du sommeil idiopathique"/> <strong>G47.31 Apnée centrale du sommeil idiopathique :</strong> Caractérisée par épisodes répétés d'apnées et hypopnées durant le sommeil causés par variabilité de l'effort respiratoire mais sans évidence d'obstruction des voies aériennes</label>
   
   <label><input type="radio" name="soustype" value="Respiration de Cheyne-Stokes"/> <strong>R06.3 Respiration de Cheyne-Stokes :</strong> Pattern de variation périodique crescendo-decrescendo du volume courant qui résulte en apnées centrales et hypopnées à une fréquence d'au moins 5 événements par heure, accompagnée d'éveils fréquents</label>
   
   <label><input type="radio" name="soustype" value="Apnée centrale du sommeil comorbide avec usage d'opioïdes"/> <strong>G47.37 Apnée centrale du sommeil comorbide avec usage d'opioïdes :</strong> La pathogenèse de ce sous-type est attribuée aux effets des opioïdes sur les générateurs de rythme respiratoire dans la moelle ainsi qu'aux effets différentiels sur la respiration hypoxique versus hypercapnique</label>
-  
-  <button type="button" onclick="validerSoustype()">✔️ Valider le sous-type</button>
 </fieldset>
 
 <!-- Trouble d'usage d'opioïdes (si G47.37) -->
-<fieldset id="opioides" class="hidden">
+<fieldset id="opioides">
   <legend>Trouble d'usage d'opioïdes (pour G47.37 uniquement)</legend>
-  <p class="subtitle">Si le sous-type comorbide avec usage d'opioïdes est sélectionné</p>
-  <div class="note-box">
-    <strong>Note de codage :</strong> Quand un trouble d'usage d'opioïdes est présent, coder d'abord le trouble d'usage d'opioïdes, puis G47.37. Quand un trouble d'usage d'opioïdes n'est pas présent (ex: après usage ponctuel important), coder uniquement G47.37.
-  </div>
+  <p class="subtitle">Si le sous-type comorbide avec usage d'opioïdes est sélectionné. Note de codage: Quand un trouble d'usage d'opioïdes est présent, coder d'abord le trouble d'usage d'opioïdes, puis G47.37. Quand un trouble d'usage d'opioïdes n'est pas présent (ex: après usage ponctuel important), coder uniquement G47.37</p>
   
   <label><input type="radio" name="opioid" value="Sans trouble d'usage d'opioïdes"/> Sans trouble d'usage d'opioïdes (ex: après usage ponctuel important)</label>
   <label><input type="radio" name="opioid" value="Avec trouble d'usage d'opioïdes léger"/> F11.10 Trouble d'usage d'opioïdes léger</label>
   <label><input type="radio" name="opioid" value="Avec trouble d'usage d'opioïdes modéré ou sévère"/> F11.20 Trouble d'usage d'opioïdes modéré ou sévère</label>
-  
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
 </fieldset>
 
-<!-- Sévérité (si non G47.37) -->
-<fieldset id="severite" class="hidden">
+<!-- Sévérité -->
+<fieldset id="severite">
   <legend>Spécifier la sévérité actuelle</legend>
   <p class="subtitle">La sévérité de l'apnée centrale du sommeil est graduée selon la fréquence des perturbations respiratoires ainsi que l'étendue de la désaturation en oxygène et de la fragmentation du sommeil associées</p>
   
   <label><input type="checkbox" name="severiteInfo" value="Sévérité basée sur fréquence des perturbations respiratoires"/> Sévérité basée sur la fréquence des perturbations respiratoires</label>
   <label><input type="checkbox" name="severiteInfo" value="Sévérité basée sur désaturation en oxygène associée"/> Sévérité basée sur l'étendue de la désaturation en oxygène associée</label>
   <label><input type="checkbox" name="severiteInfo" value="Sévérité basée sur fragmentation du sommeil associée"/> Sévérité basée sur l'étendue de la fragmentation du sommeil associée</label>
-  
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
 </fieldset>
 
+<!-- Diagnostic différentiel -->
+<fieldset>
+  <legend>Diagnostic différentiel</legend>
+  <label><input type="checkbox" name="diff_diag" value="Apnée obstructive du sommeil"/> Apnée obstructive du sommeil</label>
+  <label><input type="checkbox" name="diff_diag" value="Hypoventilation liée au sommeil"/> Hypoventilation liée au sommeil</label>
+  <label><input type="checkbox" name="diff_diag" value="Respiration périodique de haute altitude"/> Respiration périodique de haute altitude</label>
+  <label><input type="checkbox" name="diff_diag" value="Insuffisance cardiaque"/> Insuffisance cardiaque congestive (avec Cheyne-Stokes)</label>
+  <label><input type="checkbox" name="diff_diag" value="AVC"/> Accident vasculaire cérébral</label>
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset>
+  <legend>Comorbidité</legend>
+  <label><input type="checkbox" name="comorbidite" value="Insuffisance cardiaque"/> Insuffisance cardiaque congestive</label>
+  <label><input type="checkbox" name="comorbidite" value="Usage d'opioïdes"/> Usage d'opioïdes (chronique ou aigu)</label>
+  <label><input type="checkbox" name="comorbidite" value="AVC"/> Accident vasculaire cérébral</label>
+  <label><input type="checkbox" name="comorbidite" value="Insuffisance rénale"/> Insuffisance rénale</label>
+  <label><input type="checkbox" name="comorbidite" value="Conditions neurologiques"/> Conditions neurologiques (atrophie systèmes multiples)</label>
+</fieldset>
+
+<!-- Boutons de validation -->
+<div class='boutons-validation'>
+  <button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button>
+  <button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button>
+</div>
+
 </form>
-
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:"",critereB:"",soustype:"",opioid:"",severiteInfo:[]};
-
-function validerCritereA(){
-  const c=document.querySelector("input[name='critereA']:checked");
-  if(c){
-    choix.critereA=c.value;
-    document.getElementById("critereB").classList.remove("hidden");
-  }else alert("Cochez l'option du critère A");
-}
-
-function validerCritereB(){
-  const c=document.querySelector("input[name='critereB']:checked");
-  if(c){
-    choix.critereB=c.value;
-    document.getElementById("soustypes").classList.remove("hidden");
-  }else alert("Cochez l'option du critère B");
-}
-
-function validerSoustype(){
-  const s=document.querySelector("input[name='soustype']:checked");
-  if(s){
-    choix.soustype=s.value;
-    if(choix.soustype==="Apnée centrale du sommeil comorbide avec usage d'opioïdes"){
-      document.getElementById("opioides").classList.remove("hidden");
-    }else{
-      document.getElementById("severite").classList.remove("hidden");
-    }
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Sélectionnez un sous-type", confirmButtonColor: "#667eea"});
-}
-
-function afficherResume(){
-  if(choix.soustype==="Apnée centrale du sommeil comorbide avec usage d'opioïdes"){
-    const o=document.querySelector("input[name='opioid']:checked");
-    if(o){
-      choix.opioid=o.value;
-      genererResume();
-    }else alert("Sélectionnez l'option concernant le trouble d'usage d'opioïdes");
-  }else{
-    const s=Array.from(document.querySelectorAll("input[name='severiteInfo']:checked")).map(e=>e.value);
-    choix.severiteInfo=s;
-    genererResume();
-  }
-}
-
-function genererResume(){
-  let code="";
-  let diag="";
-  
-  if(choix.soustype==="Apnée centrale du sommeil idiopathique"){
-    code="G47.31";
-    diag=code+" Apnée Centrale du Sommeil Idiopathique";
-  }else if(choix.soustype==="Respiration de Cheyne-Stokes"){
-    code="R06.3";
-    diag=code+" Apnée Centrale du Sommeil avec Respiration de Cheyne-Stokes";
-  }else if(choix.soustype==="Apnée centrale du sommeil comorbide avec usage d'opioïdes"){
-    if(choix.opioid==="Avec trouble d'usage d'opioïdes léger"){
-      code="F11.10 + G47.37";
-      diag="F11.10 Trouble d'usage d'opioïdes léger avec G47.37 apnée centrale du sommeil comorbide avec usage d'opioïdes";
-    }else if(choix.opioid==="Avec trouble d'usage d'opioïdes modéré ou sévère"){
-      code="F11.20 + G47.37";
-      diag="F11.20 Trouble d'usage d'opioïdes modéré ou sévère avec G47.37 apnée centrale du sommeil comorbide avec usage d'opioïdes";
-    }else{
-      code="G47.37";
-      diag=code+" Apnée Centrale du Sommeil Comorbide avec Usage d'Opioïdes";
-    }
-  }
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Critère A – Évidence par polysomnographie (≥5 apnées centrales/heure)</h4><ul class='choix-list'><li>✓ "+choix.critereA+"</li></ul>";
-  
-  h+="<h4>Critère B – Non mieux expliqué par autre trouble du sommeil</h4><ul class='choix-list'><li>✓ "+choix.critereB+"</li></ul>";
-  
-  h+="<h4>Sous-type</h4><ul class='choix-list'><li>✓ "+choix.soustype+"</li></ul>";
-  
-  if(choix.soustype==="Apnée centrale du sommeil comorbide avec usage d'opioïdes"){
-    h+="<h4>Trouble d'usage d'opioïdes</h4><ul class='choix-list'><li>✓ "+choix.opioid+"</li></ul>";
-  }
-  
-  if(choix.severiteInfo.length>0){
-    h+="<h4>Critères de sévérité</h4><ul class='choix-list'>";
-    choix.severiteInfo.forEach(s=>h+="<li>✓ "+s+"</li>");
-    h+="</ul>";
-  }
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Évidence par polysomnographie de ≥5 apnées centrales par heure de sommeil.";
-  h+="<br/><br/><strong>Critère A :</strong> Évidence polysomnographique de ≥5 apnées centrales par heure de sommeil.";
-  h+="<br/><br/><strong>Critère B :</strong> Non mieux expliqué par autre trouble du sommeil actuel.";
-  h+="<br/><br/><strong>Sous-types :</strong>";
-  h+="<br/>• <strong>G47.31 Apnée centrale idiopathique :</strong> Épisodes répétés d'apnées/hypopnées causés par variabilité de l'effort respiratoire sans obstruction des voies aériennes.";
-  h+="<br/>• <strong>R06.3 Respiration de Cheyne-Stokes :</strong> Pattern périodique crescendo-decrescendo du volume courant, ≥5 événements/heure, éveils fréquents.";
-  h+="<br/>• <strong>G47.37 Comorbide avec usage d'opioïdes :</strong> Pathogenèse attribuée aux effets des opioïdes sur générateurs de rythme respiratoire médullaire.";
-  if(choix.soustype==="Apnée centrale du sommeil comorbide avec usage d'opioïdes"){
-    h+="<br/><br/><strong>Note de codage (G47.37) :</strong>";
-    h+="<br/>• Si trouble d'usage d'opioïdes présent: Coder d'abord F11.10 (léger) ou F11.20 (modéré/sévère), puis G47.37";
-    h+="<br/>• Si trouble d'usage d'opioïdes absent: Coder uniquement G47.37";
-  }
-  h+="<br/><br/><strong>Sévérité :</strong> Graduée selon:";
-  h+="<br/>• Fréquence des perturbations respiratoires";
-  h+="<br/>• Étendue de la désaturation en oxygène associée";
-  h+="<br/>• Étendue de la fragmentation du sommeil associée";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 16/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
