--- a/Embedding/Sleep_Wake_Disorders_out/Section1_Breathing-Related Sleep Disorders/Circadian_Rhythm_Sleep_Wake_Disorders.html
+++ b/Embedding/Sleep_Wake_Disorders_out/Section1_Breathing-Related Sleep Disorders/Circadian_Rhythm_Sleep_Wake_Disorders.html
@@ -41,30 +41,6 @@
       cursor: pointer;
     }
     button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +65,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -142,33 +93,27 @@
   <label><input type="checkbox" name="critereA" value="Pattern persistant ou récurrent de perturbation du sommeil"/> Pattern persistant ou récurrent de perturbation du sommeil</label>
   <label><input type="checkbox" name="critereA" value="Principalement dû à altération du système circadien"/> Principalement dû à une altération du système circadien</label>
   <label><input type="checkbox" name="critereA" value="OU désalignement entre rythme circadien endogène et horaire veille-sommeil requis"/> OU désalignement entre le rythme circadien endogène et l'horaire veille-sommeil requis par l'environnement physique ou l'horaire social/professionnel de l'individu</label>
-  <button type="button" onclick="validerCritereA()">✔️ Valider le critère A</button>
 </fieldset>
 
 <!-- Critère B -->
-<fieldset id="critereB" class="hidden">
+<fieldset id="critereB">
   <legend>Critère B – Somnolence excessive ou insomnie</legend>
   <p class="subtitle">La perturbation du sommeil conduit à une somnolence excessive ou à de l'insomnie, ou les deux</p>
   <label><input type="checkbox" name="critereB" value="Conduit à somnolence excessive"/> Conduit à une somnolence excessive</label>
   <label><input type="checkbox" name="critereB" value="Conduit à insomnie"/> Conduit à de l'insomnie</label>
-  <button type="button" onclick="validerCritereB()">✔️ Valider le critère B</button>
 </fieldset>
 
 <!-- Critère C -->
-<fieldset id="critereC" class="hidden">
+<fieldset id="critereC">
   <legend>Critère C – Détresse ou altération cliniquement significative</legend>
   <p class="subtitle">La perturbation du sommeil cause une détresse ou altération cliniquement significative dans le fonctionnement social, professionnel et autres domaines importants</p>
   <label><input type="checkbox" name="critereC" value="Cause détresse ou altération cliniquement significative"/> Cause une détresse ou altération cliniquement significative dans le fonctionnement social, professionnel et autres domaines importants</label>
-  <button type="button" onclick="validerCritereC()">✔️ Valider le critère C</button>
 </fieldset>
 
 <!-- Sous-types -->
-<fieldset id="soustypes" class="hidden">
+<fieldset id="soustypes">
   <legend>Spécifier le type</legend>
-  <p class="subtitle">Sélectionner le type de trouble du rythme circadien veille-sommeil</p>
-  <div class="warning-box">
-    ⚠️ Le code ICD-10-CM dépend du type sélectionné
-  </div>
+  <p class="subtitle">Sélectionner le type de trouble du rythme circadien veille-sommeil. Le code ICD-10-CM dépend du type sélectionné</p>
   
   <label><input type="radio" name="type" value="Type phase de sommeil retardée"/> <strong>G47.21 Type phase de sommeil retardée :</strong> Pattern d'endormissement et de réveil retardés, avec incapacité de s'endormir et se réveiller à une heure plus précoce désirée ou conventionnellement acceptable</label>
   
@@ -181,173 +126,56 @@
   <label><input type="radio" name="type" value="Type travail posté"/> <strong>G47.26 Type travail posté :</strong> Insomnie durant la période de sommeil principale et/ou somnolence excessive (incluant sommeil involontaire) durant la période d'éveil principale associée à un horaire de travail posté (nécessitant des heures de travail non conventionnelles)</label>
   
   <label><input type="radio" name="type" value="Type non spécifié"/> <strong>G47.20 Type non spécifié</strong></label>
-  
-  <button type="button" onclick="validerType()">✔️ Valider le type</button>
 </fieldset>
 
 <!-- Spécificateurs additionnels -->
-<fieldset id="specificateurs" class="hidden">
+<fieldset id="specificateurs">
   <legend>Spécificateurs additionnels</legend>
   
-  <div id="familialSpec" class="hidden">
-    <p style="margin-top: 10px;"><strong>Spécificateur familial (pour types retardé/avancé) :</strong></p>
-    <label><input type="checkbox" name="familial" value="Familial"/> <strong>Familial :</strong> Un historique familial de phase de sommeil retardée/avancée est présent</label>
-  </div>
+  <p style="margin-top: 10px;"><strong>Spécificateur familial (pour types retardé/avancé) :</strong></p>
+  <label><input type="checkbox" name="familial" value="Familial"/> <strong>Familial :</strong> Un historique familial de phase de sommeil retardée/avancée est présent</label>
   
-  <div id="overlappingSpec" class="hidden">
-    <p style="margin-top: 10px;"><strong>Spécificateur de chevauchement (pour type retardé) :</strong></p>
-    <label><input type="checkbox" name="overlapping" value="Chevauchement avec type non-24-heures"/> <strong>Chevauchement avec type non-24-heures :</strong> Le type phase de sommeil retardée peut chevaucher avec le type veille-sommeil non-24-heures</label>
-  </div>
+  <p style="margin-top: 10px;"><strong>Spécificateur de chevauchement (pour type retardé) :</strong></p>
+  <label><input type="checkbox" name="overlapping" value="Chevauchement avec type non-24-heures"/> <strong>Chevauchement avec type non-24-heures :</strong> Le type phase de sommeil retardée peut chevaucher avec le type veille-sommeil non-24-heures</label>
   
   <p style="margin-top: 15px;"><strong>Évolution :</strong></p>
   <label><input type="radio" name="evolution" value="Épisodique"/> <strong>Épisodique :</strong> Symptômes durent au moins 1 mois mais moins de 3 mois</label>
   <label><input type="radio" name="evolution" value="Persistant"/> <strong>Persistant :</strong> Symptômes durent 3 mois ou plus</label>
   <label><input type="radio" name="evolution" value="Récurrent"/> <strong>Récurrent :</strong> Deux épisodes ou plus surviennent dans l'espace d'une année</label>
-  
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
 </fieldset>
 
+<!-- Diagnostic différentiel -->
+<fieldset>
+  <legend>Diagnostic différentiel</legend>
+  <label><input type="checkbox" name="diff_diag" value="Variation normale du sommeil"/> Variation normale du sommeil selon l'âge/préférences</label>
+  <label><input type="checkbox" name="diff_diag" value="Insomnie primaire"/> Insomnie primaire</label>
+  <label><input type="checkbox" name="diff_diag" value="Hypersomnolence primaire"/> Hypersomnolence primaire</label>
+  <label><input type="checkbox" name="diff_diag" value="Troubles de l'humeur"/> Troubles de l'humeur avec perturbations du sommeil</label>
+  <label><input type="checkbox" name="diff_diag" value="Privation volontaire de sommeil"/> Privation volontaire de sommeil</label>
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset>
+  <legend>Comorbidité</legend>
+  <label><input type="checkbox" name="comorbidite" value="Troubles de l'humeur"/> Troubles de l'humeur (dépression, trouble bipolaire)</label>
+  <label><input type="checkbox" name="comorbidite" value="TDAH"/> TDAH (trouble déficit attention/hyperactivité)</label>
+  <label><input type="checkbox" name="comorbidite" value="Troubles du spectre autistique"/> Troubles du spectre autistique</label>
+  <label><input type="checkbox" name="comorbidite" value="Démence"/> Démence (type irrégulier)</label>
+  <label><input type="checkbox" name="comorbidite" value="Cécité"/> Cécité (type non-24-heures)</label>
+</fieldset>
+
+<!-- Boutons de validation -->
+<div class='boutons-validation'>
+  <button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button>
+  <button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button>
+</div>
+
 </form>
-
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:[],critereB:[],critereC:"",type:"",familial:false,overlapping:false,evolution:""};
-
-function validerCritereA(){
-  const c=Array.from(document.querySelectorAll("input[name='critereA']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereA=c;
-    document.getElementById("critereB").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère A", confirmButtonColor: "#667eea"});
-}
-
-function validerCritereB(){
-  const c=Array.from(document.querySelectorAll("input[name='critereB']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereB=c;
-    document.getElementById("critereC").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère B", confirmButtonColor: "#667eea"});
-}
-
-function validerCritereC(){
-  const c=document.querySelector("input[name='critereC']:checked");
-  if(c){
-    choix.critereC=c.value;
-    document.getElementById("soustypes").classList.remove("hidden");
-  }else alert("Cochez l'option du critère C");
-}
-
-function validerType(){
-  const t=document.querySelector("input[name='type']:checked");
-  if(t){
-    choix.type=t.value;
-    // Afficher spécificateurs selon le type
-    if(choix.type==="Type phase de sommeil retardée"){
-      document.getElementById("familialSpec").classList.remove("hidden");
-      document.getElementById("overlappingSpec").classList.remove("hidden");
-    }else if(choix.type==="Type phase de sommeil avancée"){
-      document.getElementById("familialSpec").classList.remove("hidden");
-    }
-    document.getElementById("specificateurs").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Sélectionnez un type", confirmButtonColor: "#667eea"});
-}
-
-function afficherResume(){
-  const e=document.querySelector("input[name='evolution']:checked");
-  if(e){
-    choix.evolution=e.value;
-    choix.familial=document.querySelector("input[name='familial']:checked")!==null;
-    choix.overlapping=document.querySelector("input[name='overlapping']:checked")!==null;
-    genererResume();
-  }else alert("Sélectionnez l'évolution");
-}
-
-function genererResume(){
-  let code="";
-  let typeName="";
-  
-  if(choix.type==="Type phase de sommeil retardée"){
-    code="G47.21";
-    typeName="Type Phase de Sommeil Retardée";
-  }else if(choix.type==="Type phase de sommeil avancée"){
-    code="G47.22";
-    typeName="Type Phase de Sommeil Avancée";
-  }else if(choix.type==="Type veille-sommeil irrégulier"){
-    code="G47.23";
-    typeName="Type Veille-Sommeil Irrégulier";
-  }else if(choix.type==="Type veille-sommeil non-24-heures"){
-    code="G47.24";
-    typeName="Type Veille-Sommeil Non-24-Heures";
-  }else if(choix.type==="Type travail posté"){
-    code="G47.26";
-    typeName="Type Travail Posté";
-  }else{
-    code="G47.20";
-    typeName="Type Non Spécifié";
-  }
-  
-  let diag=code+" Trouble du Rythme Circadien Veille-Sommeil, "+typeName.toLowerCase();
-  if(choix.familial)diag+=", familial";
-  if(choix.overlapping)diag+=", chevauchement avec type non-24-heures";
-  diag+=", "+choix.evolution.toLowerCase();
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Critère A – Pattern de perturbation du sommeil</h4><ul class='choix-list'>";
-  choix.critereA.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère B – Somnolence excessive ou insomnie</h4><ul class='choix-list'>";
-  choix.critereB.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère C – Détresse ou altération cliniquement significative</h4><ul class='choix-list'><li>✓ "+choix.critereC+"</li></ul>";
-  
-  h+="<h4>Type</h4><ul class='choix-list'><li>✓ "+choix.type+"</li></ul>";
-  
-  h+="<h4>Spécificateurs</h4><ul class='choix-list'>";
-  if(choix.familial)h+="<li>✓ Familial</li>";
-  if(choix.overlapping)h+="<li>✓ Chevauchement avec type non-24-heures</li>";
-  h+="<li>✓ Évolution: "+choix.evolution+"</li>";
-  h+="</ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Pattern persistant ou récurrent de perturbation du sommeil dû à altération du système circadien ou désalignement entre rythme circadien et horaire requis.";
-  h+="<br/><br/><strong>Critère A :</strong> Perturbation du sommeil due à altération du système circadien OU désalignement entre rythme circadien endogène et horaire veille-sommeil requis.";
-  h+="<br/><br/><strong>Critère B :</strong> Conduit à somnolence excessive et/ou insomnie.";
-  h+="<br/><br/><strong>Critère C :</strong> Cause détresse ou altération cliniquement significative.";
-  h+="<br/><br/><strong>Types :</strong>";
-  h+="<br/>• <strong>G47.21 Phase de sommeil retardée :</strong> Endormissement/réveil retardés, incapacité de s'endormir/réveiller plus tôt";
-  h+="<br/>• <strong>G47.22 Phase de sommeil avancée :</strong> Endormissement/réveil avancés, incapacité de rester éveillé/endormi plus tard";
-  h+="<br/>• <strong>G47.23 Veille-sommeil irrégulier :</strong> Pattern temporellement désorganisé, variable sur 24h";
-  h+="<br/>• <strong>G47.24 Veille-sommeil non-24-heures :</strong> Cycles non synchronisés à l'environnement 24h, dérive quotidienne constante";
-  h+="<br/>• <strong>G47.26 Travail posté :</strong> Insomnie durant sommeil principal et/ou somnolence excessive durant éveil principal";
-  h+="<br/>• <strong>G47.20 Non spécifié</strong>";
-  if(choix.familial){
-    h+="<br/><br/><strong>Familial :</strong> Historique familial présent.";
-  }
-  if(choix.overlapping){
-    h+="<br/><br/><strong>Chevauchement :</strong> Type phase retardée peut chevaucher avec type non-24-heures.";
-  }
-  h+="<br/><br/><strong>Évolution :</strong>";
-  h+="<br/>• Épisodique: ≥1 mois et <3 mois";
-  h+="<br/>• Persistant: ≥3 mois";
-  h+="<br/>• Récurrent: ≥2 épisodes dans l'année";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 16/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
