--- a/Embedding/Somatic_Symptom_and_Related_Disorders_out/Somatic_Symptom_Disorder.html
+++ b/Embedding/Somatic_Symptom_and_Related_Disorders_out/Somatic_Symptom_Disorder.html
@@ -4,312 +4,107 @@
   <meta charset="UTF-8">
   <title>Évaluation Trouble à Symptômes Somatiques – DSM-5-TR</title>
   <style>
-  .top-bar {
-    display: flex;
-    align-items: center;
-    background-color: #dff0dc;
-    padding: 10px 20px;
-    margin-bottom: 30px;
-    border-radius: 6px;
-  }
-  .titre-centre {
-    flex: 1;
-    text-align: center;
-  }
-  .titre-centre h1 {
-    margin: 0;
-    font-size: 28px;
-    color: #3d7a3b;
-  }
-  .titre-centre h2 {
-    margin: 0;
-    font-size: 16px;
-    color: #3d7a3b;
-  }
-
     body { font-family: 'Segoe UI', sans-serif; max-width: 960px; margin: auto; padding: 20px; background: #f5fff8; color: #2e3b2c; }
     fieldset { border: 2px solid #8cc63f; padding: 15px; margin-bottom: 20px; background: #ffffff; }
     legend { font-weight: bold; color: #3d7a3b; }
     label { display: block; margin-bottom: 5px; }
-    button {
-      background-color: #8cc63f;
-      color: white;
+    .subtitle { font-size: 0.9em; color: #666; font-style: italic; }
+    .boutons-validation { display: flex; gap: 10px; margin-top: 20px; justify-content: center; }
+    .btn-valide, .btn-non-valide {
+      padding: 12px 30px;
+      font-size: 16px;
       border: none;
-      padding: 8px 12px;
       border-radius: 4px;
-      margin-top: 10px;
+      color: #fff;
       cursor: pointer;
-    }
-    button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
-    .boutons-validation {
-      display: flex;
-      gap: 10px;
-      margin-top: 20px;
-      justify-content: center;
-    }
-    .btn-valide {
-      background-color: #28a745;
-      padding: 12px 30px;
-      font-size: 16px;
       flex: 1;
     }
-    .btn-valide:hover {
-      background-color: #218838;
-    }
-    .btn-non-valide {
-      background-color: #dc3545;
-      padding: 12px 30px;
-      font-size: 16px;
-      flex: 1;
-    }
-    .btn-non-valide:hover {
-      background-color: #c82333;
-    }
-    .resultat-box {
-      margin-top: 30px;
-    }
-    .subtitle {
-      font-size: 0.9em;
-      color: #666;
-      font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
-    }
+    .btn-valide { background-color: #28a745; }
+    .btn-valide:hover { background-color: #218838; }
+    .btn-non-valide { background-color: #dc3545; }
+    .btn-non-valide:hover { background-color: #c82333; }
   </style>
-
-  <!-- SweetAlert2 -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
 
-<div class="top-bar">
-  <div class="titre-centre">
-    <h1>CLINIQUE LA VALLÉE</h1>
-    <h2>Évaluation du Trouble à Symptômes Somatiques – DSM-5-TR</h2>
-  </div>
+<div style="text-align:center; margin-bottom:30px;">
+  <h1 style="margin:0;color:#3d7a3b;">CLINIQUE LA VALLÉE</h1>
+  <h2 style="margin:0;color:#3d7a3b;">Trouble à Symptômes Somatiques – DSM-5-TR</h2>
 </div>
 
-<form id="formulaire">
+<form>
 
-<!-- Critère A -->
-<fieldset id="critereA">
-  <legend>Critère A – Symptômes somatiques pénibles ou perturbateurs</legend>
-  <p class="subtitle">Un ou plusieurs symptômes somatiques qui sont pénibles ou résultent en perturbation significative de la vie quotidienne</p>
-  <label><input type="checkbox" name="critereA" value="Un ou plusieurs symptômes somatiques pénibles"/> Un ou plusieurs symptômes somatiques qui sont pénibles</label>
-  <label><input type="checkbox" name="critereA" value="OU résultent en perturbation significative de vie quotidienne"/> OU résultent en perturbation significative de la vie quotidienne</label>
-  <button type="button" onclick="validerCritereA()">✔️ Valider le critère A</button>
+<fieldset>
+  <legend>Critère A – Symptômes somatiques</legend>
+  <p class="subtitle">Un ou plusieurs symptômes somatiques pénibles ou perturbant notablement la vie quotidienne</p>
+  <label><input type="checkbox" name="critereA" value="Symptômes somatiques pénibles"/> Symptômes somatiques pénibles</label>
+  <label><input type="checkbox" name="critereA" value="Perturbation importante de la vie quotidienne"/> Perturbation importante de la vie quotidienne</label>
 </fieldset>
 
-<!-- Critère B -->
-<fieldset id="critereB" class="hidden">
-  <legend>Critère B – Pensées, sentiments ou comportements excessifs</legend>
-  <p class="subtitle">Pensées, sentiments ou comportements excessifs liés aux symptômes somatiques ou aux préoccupations de santé associées, manifestés par au moins un des éléments suivants</p>
-  <div class="warning-box">
-    ⚠️ Au moins 1 des 3 éléments doit être présent
-  </div>
-  
-  <label><input type="checkbox" name="critereB" value="1. Pensées disproportionnées et persistantes concernant gravité de ses symptômes"/> <strong>1.</strong> Pensées disproportionnées et persistantes concernant la gravité de ses symptômes</label>
-  
-  <label><input type="checkbox" name="critereB" value="2. Niveau d'anxiété persistant élevé concernant santé ou symptômes"/> <strong>2.</strong> Niveau d'anxiété persistant élevé concernant la santé ou les symptômes</label>
-  
-  <label><input type="checkbox" name="critereB" value="3. Temps et énergie excessifs consacrés à ces symptômes ou préoccupations de santé"/> <strong>3.</strong> Temps et énergie excessifs consacrés à ces symptômes ou préoccupations de santé</label>
-  
-  <button type="button" onclick="validerCritereB()">✔️ Valider le critère B</button>
+<fieldset>
+  <legend>Critère B – Réactions excessives</legend>
+  <p class="subtitle">Pensées, sentiments ou comportements excessifs liés aux symptômes (au moins un des éléments suivants)</p>
+  <label><input type="checkbox" name="critereB" value="Pensées disproportionnées sur la gravité"/> Pensées disproportionnées et persistantes sur la gravité des symptômes</label>
+  <label><input type="checkbox" name="critereB" value="Anxiété élevée concernant la santé"/> Niveau d’anxiété élevé concernant la santé ou les symptômes</label>
+  <label><input type="checkbox" name="critereB" value="Temps et énergie excessifs consacrés aux symptômes"/> Temps et énergie excessifs consacrés aux symptômes ou aux préoccupations de santé</label>
 </fieldset>
 
-<!-- Critère C -->
-<fieldset id="critereC" class="hidden">
-  <legend>Critère C – État symptomatique persistant</legend>
-  <p class="subtitle">Bien qu'un symptôme somatique particulier puisse ne pas être continuellement présent, l'état d'être symptomatique est persistant (typiquement plus de 6 mois)</p>
-  <label><input type="checkbox" name="critereC" value="Bien qu'un symptôme somatique particulier puisse ne pas être continuellement présent, état d'être symptomatique persistant (typiquement >6 mois)"/> Bien qu'un symptôme somatique particulier puisse ne pas être continuellement présent, l'état d'être symptomatique est persistant (typiquement plus de 6 mois)</label>
-  <button type="button" onclick="validerCritereC()">✔️ Valider le critère C</button>
+<fieldset>
+  <legend>Critère C – Chronicité</legend>
+  <p class="subtitle">L’état d’être symptomatique demeure persistant (typiquement &gt; 6 mois)</p>
+  <label><input type="checkbox" name="critereC" value="Symptômes persistants &gt; 6 mois"/> État symptomatique persistant (&gt; 6 mois)</label>
 </fieldset>
 
-<!-- Spécificateurs -->
-<fieldset id="specificateurs" class="hidden">
+<fieldset>
   <legend>Spécificateurs</legend>
-  
-  <p style="margin-top: 10px;"><strong>Type de symptômes prédominants :</strong></p>
-  <label><input type="checkbox" name="typeDouleur" value="Avec douleur prédominante"/> <strong>Avec douleur prédominante</strong> (précédemment trouble douloureux) : Ce spécificateur est pour les individus dont les symptômes somatiques impliquent prédominamment la douleur</label>
-  
-  <p style="margin-top: 15px;"><strong>Évolution :</strong></p>
-  <label><input type="checkbox" name="evolution" value="Persistant"/> <strong>Persistant :</strong> Une évolution persistante est caractérisée par des symptômes sévères, une altération marquée et une longue durée (plus de 6 mois)</label>
-  
-  <p style="margin-top: 15px;"><strong>Sévérité actuelle :</strong></p>
-  <label><input type="radio" name="severite" value="Léger"/> <strong>Léger :</strong> Seulement un des symptômes spécifiés dans le critère B est rempli</label>
-  <label><input type="radio" name="severite" value="Modéré"/> <strong>Modéré :</strong> Deux ou plus des symptômes spécifiés dans le critère B sont remplis</label>
-  <label><input type="radio" name="severite" value="Sévère"/> <strong>Sévère :</strong> Deux ou plus des symptômes spécifiés dans le critère B sont remplis, plus il existe de multiples plaintes somatiques (ou un symptôme somatique très sévère)</label>
-  
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
+  <p class="subtitle">Optionnels selon la présentation</p>
+  <label><input type="checkbox" name="spec" value="Avec douleur prédominante"/> Avec douleur prédominante</label>
+  <label><input type="checkbox" name="spec" value="Évolution persistante"/> Évolution persistante (&gt; 6 mois avec symptômes sévères et altération marquée)</label>
+  <label><input type="radio" name="severite" value="Léger"/> Sévérité légère (1 symptôme du critère B)</label>
+  <label><input type="radio" name="severite" value="Modéré"/> Sévérité modérée (≥2 symptômes du critère B)</label>
+  <label><input type="radio" name="severite" value="Sévère"/> Sévérité sévère (≥2 symptômes du critère B + multiples plaintes somatiques ou symptôme très sévère)</label>
 </fieldset>
+
+<fieldset>
+  <legend>Diagnostic différentiel</legend>
+  <label><input type="checkbox" name="diff_diag" value="Trouble anxiété de maladie"/> Trouble anxiété de maladie</label>
+  <label><input type="checkbox" name="diff_diag" value="Troubles dépressifs"/> Troubles dépressifs</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble de conversion"/> Trouble à symptômes neurologiques fonctionnels</label>
+  <label><input type="checkbox" name="diff_diag" value="Troubles médicaux non identifiés"/> Troubles médicaux non identifiés</label>
+  <label><input type="checkbox" name="diff_diag" value="Trouble factice ou simulation"/> Trouble factice ou simulation</label>
+</fieldset>
+
+<fieldset>
+  <legend>Comorbidité</legend>
+  <label><input type="checkbox" name="comorbidite" value="Troubles anxieux"/> Troubles anxieux</label>
+  <label><input type="checkbox" name="comorbidite" value="Troubles dépressifs"/> Troubles dépressifs</label>
+  <label><input type="checkbox" name="comorbidite" value="Trouble panique"/> Trouble panique</label>
+  <label><input type="checkbox" name="comorbidite" value="Troubles de la personnalité"/> Troubles de la personnalité (cluster B/C)</label>
+  <label><input type="checkbox" name="comorbidite" value="Douleurs chroniques"/> Douleurs chroniques / fibromyalgie</label>
+</fieldset>
+
+<div class="boutons-validation">
+  <button type="button" class="btn-valide" onclick="validerFormulaire()">✔️ VALIDE</button>
+  <button type="button" class="btn-non-valide" onclick="nonValiderFormulaire()">✘ NON VALIDE</button>
+</div>
 
 </form>
 
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:[],critereB:[],critereC:"",typeDouleur:"",evolution:"",severite:""};
-
-function validerCritereA(){
-  const c=Array.from(document.querySelectorAll("input[name='critereA']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereA=c;
-    document.getElementById("critereB").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère A", confirmButtonColor: "#667eea"});
-}
-
-function validerCritereB(){
-  const c=Array.from(document.querySelectorAll("input[name='critereB']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereB=c;
-    document.getElementById("critereC").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins 1 des 3 éléments du critère B", confirmButtonColor: "#667eea"});
-}
-
-function validerCritereC(){
-  const c=document.querySelector("input[name='critereC']:checked");
-  if(c){
-    choix.critereC=c.value;
-    document.getElementById("specificateurs").classList.remove("hidden");
-  }else alert("Cochez l'option du critère C");
-}
-
-function afficherResume(){
-  const s=document.querySelector("input[name='severite']:checked");
-  if(s){
-    choix.severite=s.value;
-    const td=document.querySelector("input[name='typeDouleur']:checked");
-    const ev=document.querySelector("input[name='evolution']:checked");
-    choix.typeDouleur=td?td.value:"";
-    choix.evolution=ev?ev.value:"";
-    genererResume();
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Sélectionnez le niveau de sévérité", confirmButtonColor: "#667eea"});
-}
-
-function genererResume(){
-  const code="F45.1";
-  let diag=code+" Trouble à Symptômes Somatiques";
-  if(choix.typeDouleur)diag+=", avec douleur prédominante";
-  if(choix.evolution)diag+=", persistant";
-  diag+=", sévérité actuelle: "+choix.severite.toLowerCase();
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Critère A – Symptômes somatiques pénibles ou perturbateurs</h4><ul class='choix-list'>";
-  choix.critereA.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère B – Pensées, sentiments ou comportements excessifs (≥1/3)</h4><ul class='choix-list'>";
-  choix.critereB.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère C – État symptomatique persistant (>6 mois)</h4><ul class='choix-list'><li>✓ "+choix.critereC+"</li></ul>";
-  
-  h+="<h4>Spécificateurs</h4><ul class='choix-list'>";
-  if(choix.typeDouleur)h+="<li>✓ "+choix.typeDouleur+"</li>";
-  if(choix.evolution)h+="<li>✓ "+choix.evolution+"</li>";
-  h+="<li>✓ Sévérité actuelle: "+choix.severite+"</li>";
-  h+="</ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Symptômes somatiques pénibles avec pensées, sentiments ou comportements excessifs liés aux symptômes.";
-  h+="<br/><br/><strong>Critère A :</strong> ≥1 symptôme somatique pénible OU résultant en perturbation significative de vie quotidienne.";
-  h+="<br/><br/><strong>Critère B :</strong> Pensées, sentiments ou comportements excessifs liés aux symptômes somatiques/préoccupations santé, manifestés par ≥1 des éléments suivants:";
-  h+="<br/>1. Pensées disproportionnées et persistantes concernant gravité de ses symptômes";
-  h+="<br/>2. Niveau d'anxiété persistant élevé concernant santé ou symptômes";
-  h+="<br/>3. Temps et énergie excessifs consacrés à ces symptômes ou préoccupations de santé";
-  h+="<br/><br/><strong>Critère C :</strong> Bien qu'un symptôme somatique particulier puisse ne pas être continuellement présent, état d'être symptomatique persistant (typiquement >6 mois).";
-  h+="<br/><br/><strong>Spécificateurs :</strong>";
-  h+="<br/>• <strong>Avec douleur prédominante</strong> (précédemment trouble douloureux): Symptômes somatiques impliquent prédominamment douleur";
-  h+="<br/>• <strong>Persistant:</strong> Évolution caractérisée par symptômes sévères, altération marquée et longue durée (>6 mois)";
-  h+="<br/><br/><strong>Sévérité actuelle :</strong>";
-  h+="<br/>• <strong>Léger:</strong> Seulement 1 symptôme du critère B rempli";
-  h+="<br/>• <strong>Modéré:</strong> ≥2 symptômes du critère B remplis";
-  h+="<br/>• <strong>Sévère:</strong> ≥2 symptômes du critère B remplis + multiples plaintes somatiques (ou 1 symptôme somatique très sévère)";
-  h+="<br/><br/><strong>Caractéristiques clés :</strong>";
-  h+="<br/>• Symptômes somatiques significatifs présents (différent du trouble anxiété de maladie)";
-  h+="<br/>• Pensées, sentiments ou comportements excessifs concernant symptômes";
-  h+="<br/>• État symptomatique persistant (>6 mois typiquement)";
-  h+="<br/>• Focus sur symptômes physiques actuels";
-  h+="<br/>• Détresse ou perturbation significative";
-  h+="<br/><br/><strong>Différence avec trouble anxiété de maladie :</strong>";
-  h+="<br/>• <strong>Trouble à symptômes somatiques:</strong> Symptômes somatiques significatifs présents, focus sur symptômes";
-  h+="<br/>• <strong>Trouble anxiété de maladie:</strong> Symptômes somatiques absents/légers, focus sur peur d'avoir maladie";
-  h+="<br/><br/><strong>Critère B - Composantes excessives :</strong>";
-  h+="<br/>• <strong>Pensées:</strong> Disproportionnées, persistantes concernant gravité";
-  h+="<br/>• <strong>Sentiments:</strong> Anxiété élevée persistante concernant santé";
-  h+="<br/>• <strong>Comportements:</strong> Temps et énergie excessifs consacrés aux symptômes";
-  h+="<br/><br/><strong>Note importante :</strong> Symptômes somatiques individuels peuvent varier, mais l'état d'être symptomatique reste persistant.";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
-
-<footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
+<footer style="text-align:center; font-size:0.9em; margin-top:40px; padding-top:15px; border-top:1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 16/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
 
-
-
-
 <script>
 function validerFormulaire() {
-  // Cette fonction sera remplacee dynamiquement par Django en mode validation
   Swal.fire({icon: 'success', title: 'Validé !', text: 'Formulaire marqué comme VALIDE', timer: 2000, showConfirmButton: false});
 }
-
 function nonValiderFormulaire() {
-  // Cette fonction sera remplacee dynamiquement par Django en mode validation
   Swal.fire({icon: 'warning', title: 'Non validé', text: 'Formulaire marqué comme NON VALIDE', timer: 2000, showConfirmButton: false});
 }
 </script>
 
 </body>
 </html>
+
