--- a/Embedding/Substance_Related_Disorders_out/Substance-Related Disorders/Caffeine-Related Disorders/Caffeine_Withdrawal.html
+++ b/Embedding/Substance_Related_Disorders_out/Substance-Related Disorders/Caffeine-Related Disorders/Caffeine_Withdrawal.html
@@ -31,40 +31,6 @@
     fieldset { border: 2px solid #8cc63f; padding: 15px; margin-bottom: 20px; background: #ffffff; }
     legend { font-weight: bold; color: #3d7a3b; }
     label { display: block; margin-bottom: 5px; }
-    button {
-      background-color: #8cc63f;
-      color: white;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 4px;
-      margin-top: 10px;
-      cursor: pointer;
-    }
-    button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +55,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -140,16 +81,12 @@
   <legend>Critère A – Usage quotidien prolongé de caféine</legend>
   <p class="subtitle">Usage quotidien prolongé de caféine</p>
   <label><input type="checkbox" name="critereA" value="Usage quotidien prolongé de caféine"/> Usage quotidien prolongé de caféine</label>
-  <button type="button" onclick="validerCritereA()">✔️ Valider le critère A</button>
 </fieldset>
 
 <!-- Critère B -->
-<fieldset id="critereB" class="hidden">
+<fieldset id="critereB">
   <legend>Critère B – Cessation ou réduction abrupte suivie de signes/symptômes</legend>
-  <p class="subtitle">Cessation abrupte de ou réduction dans l'usage de caféine, suivie dans les 24 heures par trois (ou plus) des signes ou symptômes suivants</p>
-  <div class="warning-box">
-    ⚠️ Au moins 3 des 5 signes/symptômes doivent être présents dans les 24 heures
-  </div>
+  <p class="subtitle">Cessation abrupte de ou réduction dans l'usage de caféine, suivie dans les 24 heures par trois (ou plus) des signes ou symptômes suivants. Au moins 3 des 5 signes/symptômes doivent être présents dans les 24 heures.</p>
   
   <label><input type="checkbox" name="critereB" value="Cessation abrupte ou réduction dans usage de caféine"/> Cessation abrupte de ou réduction dans l'usage de caféine</label>
   
@@ -164,152 +101,68 @@
   <label><input type="checkbox" name="symptomes" value="4. Difficulté à se concentrer"/> <strong>4.</strong> Difficulté à se concentrer</label>
   
   <label><input type="checkbox" name="symptomes" value="5. Symptômes pseudo-grippaux (nausée, vomissement ou douleur/raideur musculaire)"/> <strong>5.</strong> Symptômes pseudo-grippaux (nausée, vomissement ou douleur/raideur musculaire)</label>
-  
-  <button type="button" onclick="validerCritereB()">✔️ Valider le critère B</button>
 </fieldset>
 
 <!-- Critère C -->
-<fieldset id="critereC" class="hidden">
+<fieldset id="critereC">
   <legend>Critère C – Détresse ou altération cliniquement significative</legend>
   <p class="subtitle">Les signes ou symptômes du critère B causent une détresse ou altération cliniquement significative dans le fonctionnement</p>
   <label><input type="checkbox" name="critereC" value="Signes ou symptômes causent détresse ou altération cliniquement significative dans fonctionnement social, professionnel ou autres domaines importants"/> Les signes ou symptômes causent une détresse ou altération cliniquement significative dans le fonctionnement social, professionnel ou autres domaines importants</label>
-  <button type="button" onclick="validerCritereC()">✔️ Valider le critère C</button>
 </fieldset>
 
 <!-- Critère D -->
-<fieldset id="critereD" class="hidden">
+<fieldset id="critereD">
   <legend>Critère D – Non associé à autre condition</legend>
   <p class="subtitle">Les signes ou symptômes ne sont pas associés aux effets physiologiques d'une autre condition médicale et ne sont pas mieux expliqués par un autre trouble mental</p>
   <label><input type="checkbox" name="critereD" value="Signes ou symptômes non associés aux effets physiologiques d'autre condition médicale (migraine, maladie virale)"/> Les signes ou symptômes ne sont pas associés aux effets physiologiques d'une autre condition médicale (ex: migraine, maladie virale)</label>
   <label><input type="checkbox" name="critereD" value="Non mieux expliqués par autre trouble mental, incluant intoxication ou sevrage d'autre substance"/> Ne sont pas mieux expliqués par un autre trouble mental, incluant intoxication ou sevrage d'une autre substance</label>
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
+</fieldset>
+
+<!-- Diagnostic différentiel -->
+<fieldset id="diagnostic-differentiel">
+  <legend>Diagnostic différentiel</legend>
+  <p class="subtitle">Cocher les troubles à différencier du sevrage de la caféine</p>
+  
+  <label><input type="checkbox" name="diff_migraine" value="Migraine - Céphalée peut être similaire mais contexte différent"/> Migraine - Céphalée peut être similaire mais contexte différent</label>
+  
+  <label><input type="checkbox" name="diff_viral" value="Maladie virale - Symptômes pseudo-grippaux mais fièvre présente"/> Maladie virale - Symptômes pseudo-grippaux mais fièvre présente</label>
+  
+  <label><input type="checkbox" name="diff_depression" value="Trouble dépressif - Humeur dépressive persistante"/> Trouble dépressif - Humeur dépressive persistante</label>
+  
+  <label><input type="checkbox" name="diff_other_substance" value="Sevrage d'autres substances - Temporalité et pattern différents"/> Sevrage d'autres substances - Temporalité et pattern différents</label>
+  
+  <label><input type="checkbox" name="diff_fatigue" value="Fatigue chronique - Fatigue non liée à cessation de caféine"/> Fatigue chronique - Fatigue non liée à cessation de caféine</label>
+  
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset id="comorbidite">
+  <legend>Comorbidité</legend>
+  <p class="subtitle">Cocher les troubles fréquemment comorbides avec le sevrage de la caféine</p>
+  
+  <label><input type="checkbox" name="comorb_depression" value="Troubles dépressifs - Sevrage peut exacerber symptômes dépressifs"/> Troubles dépressifs - Sevrage peut exacerber symptômes dépressifs</label>
+  
+  <label><input type="checkbox" name="comorb_anxiety" value="Troubles anxieux - Sevrage peut exacerber symptômes anxieux"/> Troubles anxieux - Sevrage peut exacerber symptômes anxieux</label>
+  
+  <label><input type="checkbox" name="comorb_sleep" value="Troubles du sommeil - Sevrage peut affecter patterns de sommeil"/> Troubles du sommeil - Sevrage peut affecter patterns de sommeil</label>
+  
+  <label><input type="checkbox" name="comorb_headache" value="Troubles de céphalée - Céphalée de sevrage peut être confondue avec autres types"/> Troubles de céphalée - Céphalée de sevrage peut être confondue avec autres types</label>
+  
+  <label><input type="checkbox" name="comorb_other" value="Autres troubles mentaux - Sevrage peut exacerber symptômes d'autres troubles"/> Autres troubles mentaux - Sevrage peut exacerber symptômes d'autres troubles</label>
+  
 </fieldset>
 
 </form>
 
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:"",critereB:"",symptomes:[],critereC:"",critereD:[]};
-
-function validerCritereA(){
-  const c=document.querySelector("input[name='critereA']:checked");
-  if(c){
-    choix.critereA=c.value;
-    document.getElementById("critereB").classList.remove("hidden");
-  }else alert("Cochez l'option du critère A");
-}
-
-function validerCritereB(){
-  const cb=document.querySelector("input[name='critereB']:checked");
-  const sy=Array.from(document.querySelectorAll("input[name='symptomes']:checked")).map(e=>e.value);
-  if(cb&&sy.length>=3){
-    choix.critereB=cb.value;
-    choix.symptomes=sy;
-    document.getElementById("critereC").classList.remove("hidden");
-  }else if(!cb){
-    Swal.fire({icon: "warning", title: "Attention", text: "Cochez la cessation/réduction de caféine", confirmButtonColor: "#667eea"});
-  }else{
-    alert("Au moins 3 des 5 symptômes doivent être cochés (actuellement: "+sy.length+"/5)");
-  }
-}
-
-function validerCritereC(){
-  const c=document.querySelector("input[name='critereC']:checked");
-  if(c){
-    choix.critereC=c.value;
-    document.getElementById("critereD").classList.remove("hidden");
-  }else alert("Cochez l'option du critère C");
-}
-
-function afficherResume(){
-  const c=Array.from(document.querySelectorAll("input[name='critereD']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereD=c;
-    genererResume();
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère D", confirmButtonColor: "#667eea"});
-}
-
-function genererResume(){
-  const code="F15.93";
-  const nbSymptomes=choix.symptomes.length;
-  let diag=code+" Sevrage de la Caféine ("+nbSymptomes+" symptômes)";
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Critère A – Usage quotidien prolongé de caféine</h4><ul class='choix-list'><li>✓ "+choix.critereA+"</li></ul>";
-  
-  h+="<h4>Critère B – Cessation/réduction abrupte + symptômes (≥3/5 dans 24h)</h4>";
-  h+="<ul class='choix-list'><li>✓ "+choix.critereB+"</li></ul>";
-  h+="<p><strong>Nombre de symptômes: "+nbSymptomes+"/5</strong></p>";
-  h+="<ul class='choix-list'>";
-  choix.symptomes.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère C – Détresse ou altération cliniquement significative</h4><ul class='choix-list'><li>✓ "+choix.critereC+"</li></ul>";
-  
-  h+="<h4>Critère D – Non associé à autre condition</h4><ul class='choix-list'>";
-  choix.critereD.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Sevrage de la caféine suite à cessation/réduction abrupte d'usage quotidien prolongé.";
-  h+="<br/><br/><strong>Critère A :</strong> Usage quotidien prolongé de caféine.";
-  h+="<br/><br/><strong>Critère B :</strong> Cessation abrupte ou réduction dans usage de caféine, suivie dans les 24 heures par ≥3 des symptômes suivants:";
-  h+="<br/>1. Céphalée (symptôme le plus fréquent)";
-  h+="<br/>2. Fatigue marquée ou somnolence";
-  h+="<br/>3. Humeur dysphorique, humeur dépressive ou irritabilité";
-  h+="<br/>4. Difficulté à se concentrer";
-  h+="<br/>5. Symptômes pseudo-grippaux (nausée, vomissement, douleur/raideur musculaire)";
-  h+="<br/><br/><strong>Critère C :</strong> Signes/symptômes causent détresse ou altération cliniquement significative.";
-  h+="<br/><br/><strong>Critère D :</strong> Non associés aux effets physiologiques d'autre condition médicale (migraine, maladie virale) et non mieux expliqués par autre trouble mental (incluant intoxication/sevrage autre substance).";
-  h+="<br/><br/><strong>Codage ICD-10-CM :</strong>";
-  h+="<br/>• <strong>F15.93</strong> : Sevrage de la Caféine (code unique)";
-  h+="<br/><br/><strong>Note :</strong> Pas de trouble d'usage de caféine officiel dans le DSM-5-TR, donc un seul code pour le sevrage.";
-  h+="<br/><br/><strong>Caractéristiques clés :</strong>";
-  h+="<br/>• Usage quotidien prolongé préalable";
-  h+="<br/>• Cessation/réduction abrupte";
-  h+="<br/>• Symptômes dans les 24 heures";
-  h+="<br/>• ≥3 symptômes requis (seuil modéré)";
-  h+="<br/>• Détresse ou altération cliniquement significative";
-  h+="<br/><br/><strong>Symptôme le plus fréquent :</strong>";
-  h+="<br/>• <strong>Céphalée</strong> (présente chez >50% des personnes en sevrage)";
-  h+="<br/><br/><strong>Autres symptômes fréquents :</strong>";
-  h+="<br/>• Fatigue/somnolence";
-  h+="<br/>• Irritabilité";
-  h+="<br/>• Difficulté concentration";
-  h+="<br/><br/><strong>Temporalité :</strong>";
-  h+="<br/>• Début: Dans les 24 heures après cessation/réduction";
-  h+="<br/>• Pic: 20-51 heures après dernière dose";
-  h+="<br/>• Durée: 2-9 jours typiquement";
-  h+="<br/>• Résolution: Complète en 1-2 semaines";
-  h+="<br/><br/><strong>Doses typiques causant dépendance :</strong>";
-  h+="<br/>• ≥100 mg/jour (1 tasse café) peut causer sevrage";
-  h+="<br/>• Plus fréquent avec ≥200-300 mg/jour";
-  h+="<br/>• Sévérité proportionnelle à dose habituelle";
-  h+="<br/><br/><strong>Prévention du sevrage :</strong>";
-  h+="<br/>• Réduction graduelle de la caféine";
-  h+="<br/>• Diminution de 25% tous les 2-3 jours";
-  h+="<br/>• Éviter cessation abrupte si usage régulier";
-  h+="<br/><br/><strong>Diagnostic différentiel :</strong>";
-  h+="<br/>• Migraine: Céphalée peut être similaire mais contexte différent";
-  h+="<br/>• Maladie virale: Symptômes pseudo-grippaux mais fièvre présente";
-  h+="<br/>• Trouble dépressif: Humeur dépressive persistante";
-  h+="<br/>• Sevrage autre substance: Temporalité et pattern différents";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
+<div class="boutons-validation">
+  <button class="btn-valide" onclick="validerFormulaire()">✔️ VALIDE</button>
+  <button class="btn-non-valide" onclick="nonValiderFormulaire()">✘ NON VALIDE</button>
+</div>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 16/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
