--- a/Embedding/Substance_Related_Disorders_out/Substance-Related Disorders/Hallucinogen-Related Disorders/Phencyclidine_Intoxication.html
+++ b/Embedding/Substance_Related_Disorders_out/Substance-Related Disorders/Hallucinogen-Related Disorders/Phencyclidine_Intoxication.html
@@ -31,40 +31,6 @@
     fieldset { border: 2px solid #8cc63f; padding: 15px; margin-bottom: 20px; background: #ffffff; }
     legend { font-weight: bold; color: #3d7a3b; }
     label { display: block; margin-bottom: 5px; }
-    button {
-      background-color: #8cc63f;
-      color: white;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 4px;
-      margin-top: 10px;
-      cursor: pointer;
-    }
-    button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +55,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -138,16 +79,12 @@
 <!-- Critère A -->
 <fieldset id="critereA">
   <legend>Critère A – Usage récent de phencyclidine</legend>
-  <p class="subtitle">Usage récent de phencyclidine (ou d'une substance pharmacologiquement similaire)</p>
-  <div class="note-box">
-    <strong>Note :</strong> La phencyclidine (PCP) est aussi connue sous le nom de "angel dust". Les substances similaires incluent la kétamine et d'autres dissociatifs.
-  </div>
+  <p class="subtitle">Usage récent de phencyclidine (ou d'une substance pharmacologiquement similaire). Note: La phencyclidine (PCP) est aussi connue sous le nom de "angel dust". Les substances similaires incluent la kétamine et d'autres dissociatifs.</p>
   <label><input type="checkbox" name="critereA" value="Usage récent de phencyclidine (ou substance pharmacologiquement similaire)"/> Usage récent de phencyclidine (ou d'une substance pharmacologiquement similaire)</label>
-  <button type="button" onclick="validerCritereA()">✔️ Valider le critère A</button>
 </fieldset>
 
 <!-- Critère B -->
-<fieldset id="critereB" class="hidden">
+<fieldset id="critereB">
   <legend>Critère B – Changements comportementaux problématiques</legend>
   <p class="subtitle">Changements comportementaux problématiques cliniquement significatifs qui se sont développés durant, ou peu après, l'usage de phencyclidine</p>
   <label><input type="checkbox" name="critereB" value="Changements comportementaux problématiques cliniquement significatifs"/> Changements comportementaux problématiques cliniquement significatifs</label>
@@ -160,20 +97,12 @@
   <label><input type="checkbox" name="exempleB" value="Imprévisibilité"/> Imprévisibilité</label>
   <label><input type="checkbox" name="exempleB" value="Agitation psychomotrice"/> Agitation psychomotrice</label>
   <label><input type="checkbox" name="exempleB" value="Jugement altéré"/> Jugement altéré</label>
-  
-  <button type="button" onclick="validerCritereB()">✔️ Valider le critère B</button>
 </fieldset>
 
 <!-- Critère C -->
-<fieldset id="critereC" class="hidden">
+<fieldset id="critereC">
   <legend>Critère C – Signes ou symptômes physiques</legend>
-  <p class="subtitle">Dans l'heure qui suit, deux (ou plus) des signes ou symptômes suivants</p>
-  <div class="warning-box">
-    ⚠️ Au moins 2 des 8 signes/symptômes doivent être présents dans l'heure
-  </div>
-  <div class="note-box">
-    <strong>Note :</strong> Quand la drogue est fumée, "sniffée" ou utilisée par voie intraveineuse, le début peut être particulièrement rapide.
-  </div>
+  <p class="subtitle">Dans l'heure qui suit, deux (ou plus) des signes ou symptômes suivants. Au moins 2 des 8 signes/symptômes doivent être présents dans l'heure. Note: Quand la drogue est fumée, "sniffée" ou utilisée par voie intraveineuse, le début peut être particulièrement rapide.</p>
   
   <label><input type="checkbox" name="critereC" value="1. Nystagmus vertical ou horizontal"/> <strong>1.</strong> Nystagmus vertical ou horizontal</label>
   <label><input type="checkbox" name="critereC" value="2. Hypertension ou tachycardie"/> <strong>2.</strong> Hypertension ou tachycardie</label>
@@ -183,181 +112,72 @@
   <label><input type="checkbox" name="critereC" value="6. Rigidité musculaire"/> <strong>6.</strong> Rigidité musculaire</label>
   <label><input type="checkbox" name="critereC" value="7. Crises ou coma"/> <strong>7.</strong> Crises ou coma</label>
   <label><input type="checkbox" name="critereC" value="8. Hyperacousie"/> <strong>8.</strong> Hyperacousie</label>
-  
-  <button type="button" onclick="validerCritereC()">✔️ Valider le critère C</button>
 </fieldset>
 
 <!-- Critère D -->
-<fieldset id="critereD" class="hidden">
+<fieldset id="critereD">
   <legend>Critère D – Non attribuable à autre condition</legend>
   <p class="subtitle">Les signes ou symptômes ne sont pas attribuables à une autre condition médicale et ne sont pas mieux expliqués par un autre trouble mental</p>
   <label><input type="checkbox" name="critereD" value="Signes ou symptômes non attribuables à autre condition médicale"/> Les signes ou symptômes ne sont pas attribuables à une autre condition médicale</label>
   <label><input type="checkbox" name="critereD" value="Non mieux expliqués par autre trouble mental, incluant intoxication avec autre substance"/> Ne sont pas mieux expliqués par un autre trouble mental, incluant intoxication avec une autre substance</label>
-  <button type="button" onclick="validerCritereD()">✔️ Valider le critère D</button>
 </fieldset>
 
 <!-- Comorbidité -->
-<fieldset id="comorbidite" class="hidden">
+<fieldset id="comorbidite">
   <legend>Trouble d'usage de phencyclidine comorbide</legend>
-  <div class="warning-box">
-    ⚠️ Le code ICD-10-CM dépend de la présence et de la sévérité d'un trouble d'usage de phencyclidine comorbide
-  </div>
+  <p class="subtitle">Le code ICD-10-CM dépend de la présence et de la sévérité d'un trouble d'usage de phencyclidine comorbide</p>
   <p style="margin-top: 10px;"><strong>Sélectionner la comorbidité :</strong></p>
   <label><input type="radio" name="comorbidite" value="Sans trouble d'usage de phencyclidine"/> <strong>Sans trouble d'usage de phencyclidine comorbide</strong></label>
   <label><input type="radio" name="comorbidite" value="Avec trouble d'usage de phencyclidine léger"/> <strong>Avec trouble d'usage de phencyclidine léger comorbide</strong></label>
   <label><input type="radio" name="comorbidite" value="Avec trouble d'usage de phencyclidine modéré"/> <strong>Avec trouble d'usage de phencyclidine modéré comorbide</strong></label>
   <label><input type="radio" name="comorbidite" value="Avec trouble d'usage de phencyclidine sévère"/> <strong>Avec trouble d'usage de phencyclidine sévère comorbide</strong></label>
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
+</fieldset>
+
+<!-- Diagnostic différentiel -->
+<fieldset id="diagnostic-differentiel">
+  <legend>Diagnostic différentiel</legend>
+  <p class="subtitle">Cocher les troubles à différencier de l'intoxication à la phencyclidine</p>
+  
+  <label><input type="checkbox" name="diff_medical" value="Conditions médicales - Distinction avec effets physiologiques directs d'autres conditions"/> Conditions médicales - Distinction avec effets physiologiques directs d'autres conditions</label>
+  
+  <label><input type="checkbox" name="diff_substance" value="Intoxication avec autre substance - Distinction avec intoxication par autres dissociatifs ou hallucinogènes"/> Intoxication avec autre substance - Distinction avec intoxication par autres dissociatifs ou hallucinogènes</label>
+  
+  <label><input type="checkbox" name="diff_psychotic" value="Troubles psychotiques - Distinction avec troubles psychotiques primaires"/> Troubles psychotiques - Distinction avec troubles psychotiques primaires</label>
+  
+  <label><input type="checkbox" name="diff_mania" value="Épisode maniaque - Distinction avec épisode maniaque ou hypomaniaque"/> Épisode maniaque - Distinction avec épisode maniaque ou hypomaniaque</label>
+  
+  <label><input type="checkbox" name="diff_delirium" value="Delirium - Distinction avec delirium induit par substance"/> Delirium - Distinction avec delirium induit par substance</label>
+  
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset id="comorbidite-section">
+  <legend>Comorbidité</legend>
+  <p class="subtitle">Cocher les troubles fréquemment comorbides avec l'intoxication à la phencyclidine</p>
+  
+  <label><input type="checkbox" name="comorb_use" value="Trouble d'usage de phencyclidine - Fréquemment comorbide"/> Trouble d'usage de phencyclidine - Fréquemment comorbide</label>
+  
+  <label><input type="checkbox" name="comorb_psychotic" value="Troubles psychotiques induits - Peuvent survenir avec intoxication"/> Troubles psychotiques induits - Peuvent survenir avec intoxication</label>
+  
+  <label><input type="checkbox" name="comorb_other_substance" value="Troubles liés à d'autres substances - Usage simultané fréquent"/> Troubles liés à d'autres substances - Usage simultané fréquent</label>
+  
+  <label><input type="checkbox" name="comorb_mental" value="Troubles mentaux primaires - Peuvent être exacerbés par intoxication"/> Troubles mentaux primaires - Peuvent être exacerbés par intoxication</label>
+  
+  <label><input type="checkbox" name="comorb_medical" value="Conditions médicales - Intoxication peut masquer ou exacerber conditions médicales"/> Conditions médicales - Intoxication peut masquer ou exacerber conditions médicales</label>
+  
 </fieldset>
 
 </form>
 
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:"",critereB:[],exempleB:[],critereC:[],critereD:[],comorbidite:""};
-
-const codes={
-  "Sans trouble d'usage de phencyclidine":"F16.920",
-  "Avec trouble d'usage de phencyclidine léger":"F16.120",
-  "Avec trouble d'usage de phencyclidine modéré":"F16.220",
-  "Avec trouble d'usage de phencyclidine sévère":"F16.220"
-};
-
-function validerCritereA(){
-  const c=document.querySelector("input[name='critereA']:checked");
-  if(c){
-    choix.critereA=c.value;
-    document.getElementById("critereB").classList.remove("hidden");
-  }else alert("Cochez l'option du critère A");
-}
-
-function validerCritereB(){
-  const cb=Array.from(document.querySelectorAll("input[name='critereB']:checked")).map(e=>e.value);
-  const ex=Array.from(document.querySelectorAll("input[name='exempleB']:checked")).map(e=>e.value);
-  if(cb.length>0){
-    choix.critereB=cb;
-    choix.exempleB=ex;
-    document.getElementById("critereC").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère B", confirmButtonColor: "#667eea"});
-}
-
-function validerCritereC(){
-  const c=Array.from(document.querySelectorAll("input[name='critereC']:checked")).map(e=>e.value);
-  if(c.length>=2){
-    choix.critereC=c;
-    document.getElementById("critereD").classList.remove("hidden");
-  }else alert("Au moins 2 des 8 signes/symptômes doivent être cochés (actuellement: "+c.length+"/8)");
-}
-
-function validerCritereD(){
-  const c=Array.from(document.querySelectorAll("input[name='critereD']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereD=c;
-    document.getElementById("comorbidite").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère D", confirmButtonColor: "#667eea"});
-}
-
-function afficherResume(){
-  const co=document.querySelector("input[name='comorbidite']:checked");
-  if(co){
-    choix.comorbidite=co.value;
-    genererResume();
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Sélectionnez la comorbidité", confirmButtonColor: "#667eea"});
-}
-
-function genererResume(){
-  const code=codes[choix.comorbidite];
-  let diag=code+" Intoxication à la Phencyclidine";
-  if(choix.comorbidite!=="Sans trouble d'usage de phencyclidine"){
-    diag+=", "+choix.comorbidite.toLowerCase();
-  }
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Critère A – Usage récent de phencyclidine</h4><ul class='choix-list'><li>✓ "+choix.critereA+"</li></ul>";
-  
-  h+="<h4>Critère B – Changements comportementaux problématiques</h4><ul class='choix-list'>";
-  choix.critereB.forEach(s=>h+="<li>✓ "+s+"</li>");
-  if(choix.exempleB.length>0){
-    h+="<li><strong>Exemples observés :</strong></li>";
-    choix.exempleB.forEach(s=>h+="<li style='margin-left:20px;'>✓ "+s+"</li>");
-  }
-  h+="</ul>";
-  
-  h+="<h4>Critère C – Signes ou symptômes physiques (≥2/8 dans 1h)</h4><ul class='choix-list'>";
-  choix.critereC.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère D – Non attribuable à autre condition</h4><ul class='choix-list'>";
-  choix.critereD.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Comorbidité</h4><ul class='choix-list'><li>✓ "+choix.comorbidite+"</li></ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Intoxication à la phencyclidine avec changements comportementaux et signes physiques.";
-  h+="<br/><br/><strong>Critère A :</strong> Usage récent de phencyclidine (ou substance pharmacologiquement similaire).";
-  h+="<br/><br/><strong>Phencyclidine (PCP) :</strong> Aussi connue sous le nom de 'angel dust'. Substances similaires incluent kétamine et autres dissociatifs.";
-  h+="<br/><br/><strong>Critère B :</strong> Changements comportementaux problématiques cliniquement significatifs développés durant/peu après usage.";
-  h+="<br/>Exemples: Belligérance, agressivité, impulsivité, imprévisibilité, agitation psychomotrice, jugement altéré.";
-  h+="<br/><br/><strong>Critère C :</strong> Dans l'heure qui suit, ≥2 des signes/symptômes suivants:";
-  h+="<br/>1. Nystagmus vertical ou horizontal";
-  h+="<br/>2. Hypertension ou tachycardie";
-  h+="<br/>3. Engourdissement ou réactivité diminuée à la douleur";
-  h+="<br/>4. Ataxie";
-  h+="<br/>5. Dysarthrie";
-  h+="<br/>6. Rigidité musculaire";
-  h+="<br/>7. Crises ou coma";
-  h+="<br/>8. Hyperacousie";
-  h+="<br/><br/><strong>Note importante :</strong> Quand la drogue est fumée, 'sniffée' ou utilisée par voie intraveineuse, le début peut être particulièrement rapide.";
-  h+="<br/><br/><strong>Critère D :</strong> Non attribuables à autre condition médicale et non mieux expliqués par autre trouble mental (incluant intoxication avec autre substance).";
-  h+="<br/><br/><strong>Codage ICD-10-CM (dépend de comorbidité) :</strong>";
-  h+="<br/>• <strong>F16.920</strong> : Sans trouble d'usage de phencyclidine comorbide";
-  h+="<br/>• <strong>F16.120</strong> : Avec trouble d'usage de phencyclidine léger comorbide";
-  h+="<br/>• <strong>F16.220</strong> : Avec trouble d'usage de phencyclidine modéré ou sévère comorbide";
-  h+="<br/><br/><strong>Caractéristiques clés :</strong>";
-  h+="<br/>• Changements comportementaux (souvent agressivité, belligérance)";
-  h+="<br/>• Nystagmus (signe caractéristique)";
-  h+="<br/>• Analgésie (réactivité diminuée à la douleur)";
-  h+="<br/>• ≥2 signes physiques requis dans l'heure";
-  h+="<br/>• Début rapide si fumé, sniffé ou IV";
-  h+="<br/><br/><strong>Signes physiques caractéristiques :</strong>";
-  h+="<br/>• Nystagmus (vertical ou horizontal) - très caractéristique du PCP";
-  h+="<br/>• Hypertension, tachycardie";
-  h+="<br/>• Analgésie (insensibilité à la douleur)";
-  h+="<br/>• Ataxie, dysarthrie";
-  h+="<br/>• Rigidité musculaire";
-  h+="<br/><br/><strong>Changements comportementaux typiques :</strong>";
-  h+="<br/>• Belligérance, agressivité (très fréquent)";
-  h+="<br/>• Impulsivité, imprévisibilité";
-  h+="<br/>• Agitation psychomotrice";
-  h+="<br/>• Jugement altéré";
-  h+="<br/>• Comportement violent possible";
-  h+="<br/><br/><strong>Intoxication sévère :</strong>";
-  h+="<br/>• Crises convulsives";
-  h+="<br/>• Coma";
-  h+="<br/>• Risque vital";
-  h+="<br/><br/><strong>Voies d'administration :</strong>";
-  h+="<br/>• Fumée (joint, cigarette)";
-  h+="<br/>• Sniffée (nasale)";
-  h+="<br/>• Intraveineuse";
-  h+="<br/>• Orale (moins fréquent)";
-  h+="<br/><br/><strong>Durée des effets :</strong> 4-6 heures typiquement, peut persister plus longtemps.";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
+<div class="boutons-validation">
+  <button class="btn-valide" onclick="validerFormulaire()">✔️ VALIDE</button>
+  <button class="btn-non-valide" onclick="nonValiderFormulaire()">✘ NON VALIDE</button>
+</div>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 16/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
