--- a/Embedding/Substance_Related_Disorders_out/Substance-Related Disorders/Inhalant-Related Disorders/Inhalant_Intoxication.html
+++ b/Embedding/Substance_Related_Disorders_out/Substance-Related Disorders/Inhalant-Related Disorders/Inhalant_Intoxication.html
@@ -31,40 +31,6 @@
     fieldset { border: 2px solid #8cc63f; padding: 15px; margin-bottom: 20px; background: #ffffff; }
     legend { font-weight: bold; color: #3d7a3b; }
     label { display: block; margin-bottom: 5px; }
-    button {
-      background-color: #8cc63f;
-      color: white;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 4px;
-      margin-top: 10px;
-      cursor: pointer;
-    }
-    button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +55,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -138,17 +79,13 @@
 <!-- Critère A -->
 <fieldset id="critereA">
   <legend>Critère A – Exposition récente aux substances inhalantes</legend>
-  <p class="subtitle">Exposition récente intentionnelle ou non intentionnelle à court terme et à dose élevée aux substances inhalantes, incluant les hydrocarbures volatils tels que le toluène ou l'essence</p>
-  <div class="note-box">
-    <strong>Exemples d'inhalants :</strong> Colles, solvants, peintures en aérosol, essence, diluants, correcteur liquide, gaz propulseurs, etc.
-  </div>
+  <p class="subtitle">Exposition récente intentionnelle ou non intentionnelle à court terme et à dose élevée aux substances inhalantes, incluant les hydrocarbures volatils tels que le toluène ou l'essence. Exemples d'inhalants : Colles, solvants, peintures en aérosol, essence, diluants, correcteur liquide, gaz propulseurs, etc.</p>
   <label><input type="checkbox" name="critereA" value="Exposition récente intentionnelle ou non intentionnelle à court terme et à dose élevée aux substances inhalantes"/> Exposition récente intentionnelle ou non intentionnelle à court terme et à dose élevée aux substances inhalantes</label>
   <label><input type="checkbox" name="critereA" value="Incluant hydrocarbures volatils (toluène, essence, etc.)"/> Incluant les hydrocarbures volatils (tels que le toluène ou l'essence)</label>
-  <button type="button" onclick="validerCritereA()">✔️ Valider le critère A</button>
 </fieldset>
 
 <!-- Critère B -->
-<fieldset id="critereB" class="hidden">
+<fieldset id="critereB">
   <legend>Critère B – Changements comportementaux ou psychologiques problématiques</legend>
   <p class="subtitle">Changements comportementaux ou psychologiques problématiques cliniquement significatifs qui se sont développés durant, ou peu après, l'exposition aux inhalants</p>
   <label><input type="checkbox" name="critereB" value="Changements comportementaux ou psychologiques problématiques cliniquement significatifs"/> Changements comportementaux ou psychologiques problématiques cliniquement significatifs</label>
@@ -159,17 +96,12 @@
   <label><input type="checkbox" name="exempleB" value="Agressivité"/> Agressivité (Assaultiveness)</label>
   <label><input type="checkbox" name="exempleB" value="Apathie"/> Apathie</label>
   <label><input type="checkbox" name="exempleB" value="Jugement altéré"/> Jugement altéré</label>
-  
-  <button type="button" onclick="validerCritereB()">✔️ Valider le critère B</button>
 </fieldset>
 
 <!-- Critère C -->
-<fieldset id="critereC" class="hidden">
+<fieldset id="critereC">
   <legend>Critère C – Signes ou symptômes</legend>
-  <p class="subtitle">Deux (ou plus) des signes ou symptômes suivants se développant durant, ou peu après, l'usage ou l'exposition aux inhalants</p>
-  <div class="warning-box">
-    ⚠️ Au moins 2 des 13 signes/symptômes doivent être présents
-  </div>
+  <p class="subtitle">Deux (ou plus) des signes ou symptômes suivants se développant durant, ou peu après, l'usage ou l'exposition aux inhalants. Au moins 2 des 13 signes/symptômes doivent être présents.</p>
   
   <label><input type="checkbox" name="critereC" value="1. Étourdissements"/> <strong>1.</strong> Étourdissements (Dizziness)</label>
   <label><input type="checkbox" name="critereC" value="2. Nystagmus"/> <strong>2.</strong> Nystagmus</label>
@@ -184,185 +116,72 @@
   <label><input type="checkbox" name="critereC" value="11. Vision floue ou diplopie"/> <strong>11.</strong> Vision floue ou diplopie</label>
   <label><input type="checkbox" name="critereC" value="12. Stupeur ou coma"/> <strong>12.</strong> Stupeur ou coma</label>
   <label><input type="checkbox" name="critereC" value="13. Euphorie"/> <strong>13.</strong> Euphorie</label>
-  
-  <button type="button" onclick="validerCritereC()">✔️ Valider le critère C</button>
 </fieldset>
 
 <!-- Critère D -->
-<fieldset id="critereD" class="hidden">
+<fieldset id="critereD">
   <legend>Critère D – Non attribuable à autre condition</legend>
   <p class="subtitle">Les signes ou symptômes ne sont pas attribuables à une autre condition médicale et ne sont pas mieux expliqués par un autre trouble mental</p>
   <label><input type="checkbox" name="critereD" value="Signes ou symptômes non attribuables à autre condition médicale"/> Les signes ou symptômes ne sont pas attribuables à une autre condition médicale</label>
   <label><input type="checkbox" name="critereD" value="Non mieux expliqués par autre trouble mental, incluant intoxication avec autre substance"/> Ne sont pas mieux expliqués par un autre trouble mental, incluant intoxication avec une autre substance</label>
-  <button type="button" onclick="validerCritereD()">✔️ Valider le critère D</button>
 </fieldset>
 
 <!-- Comorbidité -->
-<fieldset id="comorbidite" class="hidden">
+<fieldset id="comorbidite">
   <legend>Trouble d'usage d'inhalants comorbide</legend>
-  <div class="warning-box">
-    ⚠️ Le code ICD-10-CM dépend de la présence et de la sévérité d'un trouble d'usage d'inhalants comorbide
-  </div>
+  <p class="subtitle">Le code ICD-10-CM dépend de la présence et de la sévérité d'un trouble d'usage d'inhalants comorbide</p>
   <p style="margin-top: 10px;"><strong>Sélectionner la comorbidité :</strong></p>
   <label><input type="radio" name="comorbidite" value="Sans trouble d'usage d'inhalants"/> <strong>Sans trouble d'usage d'inhalants comorbide</strong></label>
   <label><input type="radio" name="comorbidite" value="Avec trouble d'usage d'inhalants léger"/> <strong>Avec trouble d'usage d'inhalants léger comorbide</strong></label>
   <label><input type="radio" name="comorbidite" value="Avec trouble d'usage d'inhalants modéré"/> <strong>Avec trouble d'usage d'inhalants modéré comorbide</strong></label>
   <label><input type="radio" name="comorbidite" value="Avec trouble d'usage d'inhalants sévère"/> <strong>Avec trouble d'usage d'inhalants sévère comorbide</strong></label>
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
+</fieldset>
+
+<!-- Diagnostic différentiel -->
+<fieldset id="diagnostic-differentiel">
+  <legend>Diagnostic différentiel</legend>
+  <p class="subtitle">Cocher les troubles à différencier de l'intoxication aux inhalants</p>
+  
+  <label><input type="checkbox" name="diff_medical" value="Intoxication due à autre condition médicale - Distinction avec effets physiologiques directs d'autres conditions"/> Intoxication due à autre condition médicale - Distinction avec effets physiologiques directs d'autres conditions</label>
+  
+  <label><input type="checkbox" name="diff_substance" value="Intoxication avec autre substance - Distinction avec intoxication par autres substances psychoactives"/> Intoxication avec autre substance - Distinction avec intoxication par autres substances psychoactives</label>
+  
+  <label><input type="checkbox" name="diff_delirium" value="Delirium - Distinction avec intoxication aux inhalants simple"/> Delirium - Distinction avec intoxication aux inhalants simple</label>
+  
+  <label><input type="checkbox" name="diff_other" value="Autres troubles mentaux - Distinction avec troubles mentaux primaires présentant des symptômes similaires"/> Autres troubles mentaux - Distinction avec troubles mentaux primaires présentant des symptômes similaires</label>
+  
+  <label><input type="checkbox" name="diff_accident" value="Exposition accidentelle - Distinction avec exposition accidentelle sans syndrome d'intoxication"/> Exposition accidentelle - Distinction avec exposition accidentelle sans syndrome d'intoxication</label>
+  
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset id="comorbidite-section">
+  <legend>Comorbidité</legend>
+  <p class="subtitle">Cocher les troubles fréquemment comorbides avec l'intoxication aux inhalants</p>
+  
+  <label><input type="checkbox" name="comorb_use" value="Trouble d'usage d'inhalants - Fréquemment comorbide"/> Trouble d'usage d'inhalants - Fréquemment comorbide</label>
+  
+  <label><input type="checkbox" name="comorb_other_substance" value="Troubles liés à d'autres substances - Usage simultané fréquent"/> Troubles liés à d'autres substances - Usage simultané fréquent</label>
+  
+  <label><input type="checkbox" name="comorb_mental" value="Troubles mentaux primaires - Peuvent être exacerbés par intoxication"/> Troubles mentaux primaires - Peuvent être exacerbés par intoxication</label>
+  
+  <label><input type="checkbox" name="comorb_medical" value="Conditions médicales - Intoxication peut masquer ou exacerber conditions médicales"/> Conditions médicales - Intoxication peut masquer ou exacerber conditions médicales</label>
+  
+  <label><input type="checkbox" name="comorb_neurological" value="Troubles neurologiques - Inhalants peuvent causer dommages neurologiques permanents"/> Troubles neurologiques - Inhalants peuvent causer dommages neurologiques permanents</label>
+  
 </fieldset>
 
 </form>
 
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:[],critereB:[],exempleB:[],critereC:[],critereD:[],comorbidite:""};
-
-const codes={
-  "Sans trouble d'usage d'inhalants":"F18.920",
-  "Avec trouble d'usage d'inhalants léger":"F18.120",
-  "Avec trouble d'usage d'inhalants modéré":"F18.220",
-  "Avec trouble d'usage d'inhalants sévère":"F18.220"
-};
-
-function validerCritereA(){
-  const c=Array.from(document.querySelectorAll("input[name='critereA']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereA=c;
-    document.getElementById("critereB").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère A", confirmButtonColor: "#667eea"});
-}
-
-function validerCritereB(){
-  const cb=Array.from(document.querySelectorAll("input[name='critereB']:checked")).map(e=>e.value);
-  const ex=Array.from(document.querySelectorAll("input[name='exempleB']:checked")).map(e=>e.value);
-  if(cb.length>0){
-    choix.critereB=cb;
-    choix.exempleB=ex;
-    document.getElementById("critereC").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère B", confirmButtonColor: "#667eea"});
-}
-
-function validerCritereC(){
-  const c=Array.from(document.querySelectorAll("input[name='critereC']:checked")).map(e=>e.value);
-  if(c.length>=2){
-    choix.critereC=c;
-    document.getElementById("critereD").classList.remove("hidden");
-  }else alert("Au moins 2 des 13 signes/symptômes doivent être cochés (actuellement: "+c.length+"/13)");
-}
-
-function validerCritereD(){
-  const c=Array.from(document.querySelectorAll("input[name='critereD']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereD=c;
-    document.getElementById("comorbidite").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère D", confirmButtonColor: "#667eea"});
-}
-
-function afficherResume(){
-  const co=document.querySelector("input[name='comorbidite']:checked");
-  if(co){
-    choix.comorbidite=co.value;
-    genererResume();
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Sélectionnez la comorbidité", confirmButtonColor: "#667eea"});
-}
-
-function genererResume(){
-  const code=codes[choix.comorbidite];
-  let diag=code+" Intoxication aux Inhalants";
-  if(choix.comorbidite!=="Sans trouble d'usage d'inhalants"){
-    diag+=", "+choix.comorbidite.toLowerCase();
-  }
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Critère A – Exposition récente aux substances inhalantes</h4><ul class='choix-list'>";
-  choix.critereA.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère B – Changements comportementaux/psychologiques problématiques</h4><ul class='choix-list'>";
-  choix.critereB.forEach(s=>h+="<li>✓ "+s+"</li>");
-  if(choix.exempleB.length>0){
-    h+="<li><strong>Exemples observés :</strong></li>";
-    choix.exempleB.forEach(s=>h+="<li style='margin-left:20px;'>✓ "+s+"</li>");
-  }
-  h+="</ul>";
-  
-  h+="<h4>Critère C – Signes ou symptômes (≥2/13)</h4><ul class='choix-list'>";
-  choix.critereC.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère D – Non attribuable à autre condition</h4><ul class='choix-list'>";
-  choix.critereD.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Comorbidité</h4><ul class='choix-list'><li>✓ "+choix.comorbidite+"</li></ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Intoxication aux inhalants avec changements comportementaux/psychologiques et signes physiques.";
-  h+="<br/><br/><strong>Critère A :</strong> Exposition récente intentionnelle ou non intentionnelle à court terme et à dose élevée aux substances inhalantes, incluant hydrocarbures volatils (toluène, essence).";
-  h+="<br/><br/><strong>Exemples d'inhalants :</strong> Colles, solvants, peintures en aérosol, essence, diluants, correcteur liquide, gaz propulseurs, désodorisants, etc.";
-  h+="<br/><br/><strong>Critère B :</strong> Changements comportementaux ou psychologiques problématiques cliniquement significatifs développés durant/peu après exposition.";
-  h+="<br/>Exemples: Belligérance, agressivité, apathie, jugement altéré.";
-  h+="<br/><br/><strong>Critère C :</strong> ≥2 des signes/symptômes suivants durant/peu après usage ou exposition:";
-  h+="<br/>1. Étourdissements";
-  h+="<br/>2. Nystagmus";
-  h+="<br/>3. Incoordination";
-  h+="<br/>4. Parole indistincte";
-  h+="<br/>5. Démarche instable";
-  h+="<br/>6. Léthargie";
-  h+="<br/>7. Réflexes déprimés";
-  h+="<br/>8. Retard psychomoteur";
-  h+="<br/>9. Tremblements";
-  h+="<br/>10. Faiblesse musculaire généralisée";
-  h+="<br/>11. Vision floue ou diplopie";
-  h+="<br/>12. Stupeur ou coma";
-  h+="<br/>13. Euphorie";
-  h+="<br/><br/><strong>Critère D :</strong> Non attribuables à autre condition médicale et non mieux expliqués par autre trouble mental (incluant intoxication avec autre substance).";
-  h+="<br/><br/><strong>Codage ICD-10-CM (dépend de comorbidité) :</strong>";
-  h+="<br/>• <strong>F18.920</strong> : Sans trouble d'usage d'inhalants comorbide";
-  h+="<br/>• <strong>F18.120</strong> : Avec trouble d'usage d'inhalants léger comorbide";
-  h+="<br/>• <strong>F18.220</strong> : Avec trouble d'usage d'inhalants modéré ou sévère comorbide";
-  h+="<br/><br/><strong>Caractéristiques clés :</strong>";
-  h+="<br/>• Exposition à court terme et dose élevée";
-  h+="<br/>• Peut être intentionnelle ou non intentionnelle";
-  h+="<br/>• Hydrocarbures volatils (toluène, essence, etc.)";
-  h+="<br/>• ≥2 signes physiques requis sur 13";
-  h+="<br/>• Début rapide des effets";
-  h+="<br/><br/><strong>Signes physiques typiques :</strong>";
-  h+="<br/>• Étourdissements, incoordination";
-  h+="<br/>• Parole indistincte, démarche instable";
-  h+="<br/>• Nystagmus";
-  h+="<br/>• Léthargie, réflexes déprimés";
-  h+="<br/>• Euphorie initiale";
-  h+="<br/><br/><strong>Intoxication sévère :</strong>";
-  h+="<br/>• Stupeur, coma";
-  h+="<br/>• Faiblesse musculaire généralisée";
-  h+="<br/>• Risque vital (dépression respiratoire, arythmies cardiaques)";
-  h+="<br/><br/><strong>Méthodes d'usage :</strong>";
-  h+="<br/>• 'Sniffing' (inhaler directement)";
-  h+="<br/>• 'Huffing' (respirer à travers tissu imbibé)";
-  h+="<br/>• 'Bagging' (inhaler dans sac)";
-  h+="<br/><br/><strong>Durée des effets :</strong> Minutes à heures, généralement court (15-45 minutes).";
-  h+="<br/><br/><strong>Risques aigus :</strong>";
-  h+="<br/>• Mort subite par inhalation ('sudden sniffing death')";
-  h+="<br/>• Arythmies cardiaques";
-  h+="<br/>• Asphyxie";
-  h+="<br/>• Accidents/blessures (jugement altéré)";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
+<div class="boutons-validation">
+  <button class="btn-valide" onclick="validerFormulaire()">✔️ VALIDE</button>
+  <button class="btn-non-valide" onclick="nonValiderFormulaire()">✘ NON VALIDE</button>
+</div>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 16/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
