--- a/Embedding/Substance_Related_Disorders_out/Substance-Related Disorders/Opioid-Related Disorders/Opioid_Intoxication.html
+++ b/Embedding/Substance_Related_Disorders_out/Substance-Related Disorders/Opioid-Related Disorders/Opioid_Intoxication.html
@@ -31,40 +31,6 @@
     fieldset { border: 2px solid #8cc63f; padding: 15px; margin-bottom: 20px; background: #ffffff; }
     legend { font-weight: bold; color: #3d7a3b; }
     label { display: block; margin-bottom: 5px; }
-    button {
-      background-color: #8cc63f;
-      color: white;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 4px;
-      margin-top: 10px;
-      cursor: pointer;
-    }
-    button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +55,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -138,16 +79,12 @@
 <!-- Critère A -->
 <fieldset id="critereA">
   <legend>Critère A – Usage récent d'un opioïde</legend>
-  <p class="subtitle">Usage récent d'un opioïde</p>
-  <div class="note-box">
-    <strong>Exemples d'opioïdes :</strong> Morphine, héroïne, codéine, oxycodone, hydrocodone, fentanyl, tramadol, méthadone, etc.
-  </div>
+  <p class="subtitle">Usage récent d'un opioïde. Exemples d'opioïdes : Morphine, héroïne, codéine, oxycodone, hydrocodone, fentanyl, tramadol, méthadone, etc.</p>
   <label><input type="checkbox" name="critereA" value="Usage récent d'un opioïde"/> Usage récent d'un opioïde</label>
-  <button type="button" onclick="validerCritereA()">✔️ Valider le critère A</button>
 </fieldset>
 
 <!-- Critère B -->
-<fieldset id="critereB" class="hidden">
+<fieldset id="critereB">
   <legend>Critère B – Changements comportementaux ou psychologiques problématiques</legend>
   <p class="subtitle">Changements comportementaux ou psychologiques problématiques cliniquement significatifs qui se sont développés durant, ou peu après, l'usage d'opioïde</p>
   <label><input type="checkbox" name="critereB" value="Changements comportementaux ou psychologiques problématiques cliniquement significatifs"/> Changements comportementaux ou psychologiques problématiques cliniquement significatifs</label>
@@ -159,17 +96,12 @@
   <label><input type="checkbox" name="exempleB" value="Agitation psychomotrice"/> Agitation psychomotrice</label>
   <label><input type="checkbox" name="exempleB" value="Retard psychomoteur"/> Retard psychomoteur</label>
   <label><input type="checkbox" name="exempleB" value="Jugement altéré"/> Jugement altéré</label>
-  
-  <button type="button" onclick="validerCritereB()">✔️ Valider le critère B</button>
 </fieldset>
 
 <!-- Critère C -->
-<fieldset id="critereC" class="hidden">
+<fieldset id="critereC">
   <legend>Critère C – Constriction pupillaire et autres signes</legend>
-  <p class="subtitle">Constriction pupillaire (ou dilatation pupillaire due à l'anoxie d'une surdose sévère) et un (ou plus) des signes ou symptômes suivants se développant durant, ou peu après, l'usage d'opioïde</p>
-  <div class="warning-box">
-    ⚠️ Constriction pupillaire (myosis) OBLIGATOIRE + au moins 1 des 3 autres signes
-  </div>
+  <p class="subtitle">Constriction pupillaire (ou dilatation pupillaire due à l'anoxie d'une surdose sévère) et un (ou plus) des signes ou symptômes suivants se développant durant, ou peu après, l'usage d'opioïde. Constriction pupillaire (myosis) OBLIGATOIRE + au moins 1 des 3 autres signes.</p>
   
   <p style="margin-top: 10px;"><strong>Signe obligatoire :</strong></p>
   <label><input type="checkbox" name="pupille" value="Constriction pupillaire (myosis)"/> <strong>Constriction pupillaire (myosis)</strong> - signe caractéristique des opioïdes</label>
@@ -179,195 +111,76 @@
   <label><input type="checkbox" name="critereC" value="1. Somnolence ou coma"/> <strong>1.</strong> Somnolence ou coma</label>
   <label><input type="checkbox" name="critereC" value="2. Parole indistincte"/> <strong>2.</strong> Parole indistincte</label>
   <label><input type="checkbox" name="critereC" value="3. Altération de l'attention ou de la mémoire"/> <strong>3.</strong> Altération de l'attention ou de la mémoire</label>
-  
-  <button type="button" onclick="validerCritereC()">✔️ Valider le critère C</button>
 </fieldset>
 
 <!-- Critère D -->
-<fieldset id="critereD" class="hidden">
+<fieldset id="critereD">
   <legend>Critère D – Non attribuable à autre condition</legend>
   <p class="subtitle">Les signes ou symptômes ne sont pas attribuables à une autre condition médicale et ne sont pas mieux expliqués par un autre trouble mental</p>
   <label><input type="checkbox" name="critereD" value="Signes ou symptômes non attribuables à autre condition médicale"/> Les signes ou symptômes ne sont pas attribuables à une autre condition médicale</label>
   <label><input type="checkbox" name="critereD" value="Non mieux expliqués par autre trouble mental, incluant intoxication avec autre substance"/> Ne sont pas mieux expliqués par un autre trouble mental, incluant intoxication avec une autre substance</label>
-  <button type="button" onclick="validerCritereD()">✔️ Valider le critère D</button>
 </fieldset>
 
 <!-- Spécificateurs et comorbidité -->
-<fieldset id="specificateurs" class="hidden">
+<fieldset id="specificateurs">
   <legend>Spécificateurs et comorbidité</legend>
   
   <p style="margin-top: 10px;"><strong>Perturbations perceptuelles :</strong></p>
   <label><input type="checkbox" name="perceptuel" value="Avec perturbations perceptuelles"/> <strong>Avec perturbations perceptuelles :</strong> Ce spécificateur peut être noté dans l'instance rare où des hallucinations avec test de réalité intact ou des illusions auditives, visuelles ou tactiles surviennent en l'absence de delirium</label>
   
   <p style="margin-top: 15px;"><strong>Trouble d'usage d'opioïdes comorbide :</strong></p>
-  <div class="warning-box">
-    ⚠️ Le code ICD-10-CM dépend de la comorbidité ET des perturbations perceptuelles
-  </div>
+  <p class="subtitle">Le code ICD-10-CM dépend de la comorbidité ET des perturbations perceptuelles</p>
   <label><input type="radio" name="comorbidite" value="Sans trouble d'usage d'opioïdes"/> <strong>Sans trouble d'usage d'opioïdes comorbide</strong></label>
   <label><input type="radio" name="comorbidite" value="Avec trouble d'usage d'opioïdes léger"/> <strong>Avec trouble d'usage d'opioïdes léger comorbide</strong></label>
   <label><input type="radio" name="comorbidite" value="Avec trouble d'usage d'opioïdes modéré"/> <strong>Avec trouble d'usage d'opioïdes modéré comorbide</strong></label>
   <label><input type="radio" name="comorbidite" value="Avec trouble d'usage d'opioïdes sévère"/> <strong>Avec trouble d'usage d'opioïdes sévère comorbide</strong></label>
+</fieldset>
+
+<!-- Diagnostic différentiel -->
+<fieldset id="diagnostic-differentiel">
+  <legend>Diagnostic différentiel</legend>
+  <p class="subtitle">Cocher les troubles à différencier de l'intoxication aux opioïdes</p>
   
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
+  <label><input type="checkbox" name="diff_medical" value="Intoxication due à autre condition médicale - Distinction avec effets physiologiques directs d'autres conditions"/> Intoxication due à autre condition médicale - Distinction avec effets physiologiques directs d'autres conditions</label>
+  
+  <label><input type="checkbox" name="diff_substance" value="Intoxication avec autre substance - Distinction avec intoxication par autres substances psychoactives"/> Intoxication avec autre substance - Distinction avec intoxication par autres substances psychoactives</label>
+  
+  <label><input type="checkbox" name="diff_delirium" value="Delirium - Distinction avec intoxication opioïde simple"/> Delirium - Distinction avec intoxication opioïde simple</label>
+  
+  <label><input type="checkbox" name="diff_other" value="Autres troubles mentaux - Distinction avec troubles mentaux primaires présentant des symptômes similaires"/> Autres troubles mentaux - Distinction avec troubles mentaux primaires présentant des symptômes similaires</label>
+  
+  <label><input type="checkbox" name="diff_medical_use" value="Usage médical approprié - Distinction avec usage médical approprié sans syndrome d'intoxication"/> Usage médical approprié - Distinction avec usage médical approprié sans syndrome d'intoxication</label>
+  
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset id="comorbidite-section">
+  <legend>Comorbidité</legend>
+  <p class="subtitle">Cocher les troubles fréquemment comorbides avec l'intoxication aux opioïdes</p>
+  
+  <label><input type="checkbox" name="comorb_use" value="Trouble d'usage d'opioïdes - Fréquemment comorbide"/> Trouble d'usage d'opioïdes - Fréquemment comorbide</label>
+  
+  <label><input type="checkbox" name="comorb_withdrawal" value="Sevrage des opioïdes - Peut survenir après intoxication"/> Sevrage des opioïdes - Peut survenir après intoxication</label>
+  
+  <label><input type="checkbox" name="comorb_other_substance" value="Troubles liés à d'autres substances - Usage simultané fréquent"/> Troubles liés à d'autres substances - Usage simultané fréquent</label>
+  
+  <label><input type="checkbox" name="comorb_mental" value="Troubles mentaux primaires - Peuvent être exacerbés par intoxication"/> Troubles mentaux primaires - Peuvent être exacerbés par intoxication</label>
+  
+  <label><input type="checkbox" name="comorb_medical" value="Conditions médicales - Intoxication peut masquer ou exacerber conditions médicales"/> Conditions médicales - Intoxication peut masquer ou exacerber conditions médicales</label>
+  
 </fieldset>
 
 </form>
 
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:"",critereB:[],exempleB:[],pupille:[],critereC:[],critereD:[],perceptuel:"",comorbidite:""};
-
-const codes={
-  "Sans trouble d'usage d'opioïdes":{sans:"F11.920",avec:"F11.922"},
-  "Avec trouble d'usage d'opioïdes léger":{sans:"F11.120",avec:"F11.122"},
-  "Avec trouble d'usage d'opioïdes modéré":{sans:"F11.220",avec:"F11.222"},
-  "Avec trouble d'usage d'opioïdes sévère":{sans:"F11.220",avec:"F11.222"}
-};
-
-function validerCritereA(){
-  const c=document.querySelector("input[name='critereA']:checked");
-  if(c){
-    choix.critereA=c.value;
-    document.getElementById("critereB").classList.remove("hidden");
-  }else alert("Cochez l'option du critère A");
-}
-
-function validerCritereB(){
-  const cb=Array.from(document.querySelectorAll("input[name='critereB']:checked")).map(e=>e.value);
-  const ex=Array.from(document.querySelectorAll("input[name='exempleB']:checked")).map(e=>e.value);
-  if(cb.length>0){
-    choix.critereB=cb;
-    choix.exempleB=ex;
-    document.getElementById("critereC").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère B", confirmButtonColor: "#667eea"});
-}
-
-function validerCritereC(){
-  const pu=Array.from(document.querySelectorAll("input[name='pupille']:checked")).map(e=>e.value);
-  const cc=Array.from(document.querySelectorAll("input[name='critereC']:checked")).map(e=>e.value);
-  if(pu.length>0&&cc.length>0){
-    choix.pupille=pu;
-    choix.critereC=cc;
-    document.getElementById("critereD").classList.remove("hidden");
-  }else if(pu.length===0){
-    Swal.fire({icon: "warning", title: "Attention", text: "Cochez le signe pupillaire (constriction ou dilatation)", confirmButtonColor: "#667eea"});
-  }else{
-    Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins 1 des 3 signes/symptômes additionnels", confirmButtonColor: "#667eea"});
-  }
-}
-
-function validerCritereD(){
-  const c=Array.from(document.querySelectorAll("input[name='critereD']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereD=c;
-    document.getElementById("specificateurs").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère D", confirmButtonColor: "#667eea"});
-}
-
-function afficherResume(){
-  const co=document.querySelector("input[name='comorbidite']:checked");
-  const pe=document.querySelector("input[name='perceptuel']:checked");
-  if(co){
-    choix.comorbidite=co.value;
-    choix.perceptuel=pe?pe.value:"";
-    genererResume();
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Sélectionnez la comorbidité", confirmButtonColor: "#667eea"});
-}
-
-function genererResume(){
-  const avecPerceptuel=choix.perceptuel!=="";
-  const code=avecPerceptuel?codes[choix.comorbidite].avec:codes[choix.comorbidite].sans;
-  
-  let diag=code+" Intoxication aux Opioïdes";
-  if(avecPerceptuel)diag+=", avec perturbations perceptuelles";
-  if(choix.comorbidite!=="Sans trouble d'usage d'opioïdes"){
-    diag+=", "+choix.comorbidite.toLowerCase();
-  }
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Critère A – Usage récent d'un opioïde</h4><ul class='choix-list'><li>✓ "+choix.critereA+"</li></ul>";
-  
-  h+="<h4>Critère B – Changements comportementaux/psychologiques problématiques</h4><ul class='choix-list'>";
-  choix.critereB.forEach(s=>h+="<li>✓ "+s+"</li>");
-  if(choix.exempleB.length>0){
-    h+="<li><strong>Exemples observés :</strong></li>";
-    choix.exempleB.forEach(s=>h+="<li style='margin-left:20px;'>✓ "+s+"</li>");
-  }
-  h+="</ul>";
-  
-  h+="<h4>Critère C – Constriction pupillaire + autres signes</h4><ul class='choix-list'>";
-  h+="<li><strong>Signe pupillaire (obligatoire) :</strong></li>";
-  choix.pupille.forEach(s=>h+="<li style='margin-left:20px;'>✓ "+s+"</li>");
-  h+="<li><strong>Signes/symptômes additionnels (≥1/3) :</strong></li>";
-  choix.critereC.forEach(s=>h+="<li style='margin-left:20px;'>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère D – Non attribuable à autre condition</h4><ul class='choix-list'>";
-  choix.critereD.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Spécificateurs et comorbidité</h4><ul class='choix-list'>";
-  if(choix.perceptuel)h+="<li>✓ "+choix.perceptuel+"</li>";
-  else h+="<li>✓ Sans perturbations perceptuelles</li>";
-  h+="<li>✓ Comorbidité: "+choix.comorbidite+"</li>";
-  h+="</ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Intoxication aux opioïdes avec changements comportementaux/psychologiques et signes physiques caractéristiques.";
-  h+="<br/><br/><strong>Critère A :</strong> Usage récent d'un opioïde.";
-  h+="<br/><br/><strong>Exemples d'opioïdes :</strong> Morphine, héroïne, codéine, oxycodone, hydrocodone, fentanyl, tramadol, méthadone.";
-  h+="<br/><br/><strong>Critère B :</strong> Changements comportementaux ou psychologiques problématiques cliniquement significatifs développés durant/peu après usage.";
-  h+="<br/>Exemples: Euphorie initiale suivie d'apathie, dysphorie, agitation ou retard psychomoteur, jugement altéré.";
-  h+="<br/><br/><strong>Critère C :</strong> Constriction pupillaire (myosis) OU dilatation pupillaire (anoxie surdose sévère) + ≥1 des signes suivants:";
-  h+="<br/>1. Somnolence ou coma";
-  h+="<br/>2. Parole indistincte";
-  h+="<br/>3. Altération de l'attention ou de la mémoire";
-  h+="<br/><br/><strong>Critère D :</strong> Non attribuables à autre condition médicale et non mieux expliqués par autre trouble mental (incluant intoxication avec autre substance).";
-  h+="<br/><br/><strong>Spécificateur - Avec perturbations perceptuelles :</strong>";
-  h+="<br/>Instance rare où hallucinations avec test de réalité intact OU illusions auditives, visuelles ou tactiles surviennent en absence de delirium.";
-  h+="<br/><br/><strong>Codage ICD-10-CM (dépend de comorbidité ET perturbations perceptuelles) :</strong>";
-  h+="<br/><br/><strong>SANS perturbations perceptuelles :</strong>";
-  h+="<br/>• F11.920 : Sans trouble d'usage d'opioïdes comorbide";
-  h+="<br/>• F11.120 : Avec trouble d'usage d'opioïdes léger comorbide";
-  h+="<br/>• F11.220 : Avec trouble d'usage d'opioïdes modéré ou sévère comorbide";
-  h+="<br/><br/><strong>AVEC perturbations perceptuelles :</strong>";
-  h+="<br/>• F11.922 : Sans trouble d'usage d'opioïdes comorbide";
-  h+="<br/>• F11.122 : Avec trouble d'usage d'opioïdes léger comorbide";
-  h+="<br/>• F11.222 : Avec trouble d'usage d'opioïdes modéré ou sévère comorbide";
-  h+="<br/><br/><strong>Signe caractéristique :</strong>";
-  h+="<br/>• <strong>Myosis (constriction pupillaire)</strong> - signe pathognomonique des opioïdes";
-  h+="<br/>• Exception: Dilatation pupillaire en cas de surdose sévère avec anoxie";
-  h+="<br/><br/><strong>Signes physiques typiques :</strong>";
-  h+="<br/>• Myosis (pupilles en 'tête d'épingle')";
-  h+="<br/>• Somnolence, sédation";
-  h+="<br/>• Parole indistincte";
-  h+="<br/>• Altération cognitive";
-  h+="<br/><br/><strong>Changements psychologiques typiques :</strong>";
-  h+="<br/>• Euphorie initiale ('rush')";
-  h+="<br/>• Suivie d'apathie, détachement";
-  h+="<br/>• Retard psychomoteur";
-  h+="<br/>• Jugement altéré";
-  h+="<br/><br/><strong>Surdose sévère :</strong>";
-  h+="<br/>• Coma";
-  h+="<br/>• Dépression respiratoire (risque vital)";
-  h+="<br/>• Dilatation pupillaire (anoxie)";
-  h+="<br/>• Nécessite naloxone (Narcan) en urgence";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
+<div class="boutons-validation">
+  <button class="btn-valide" onclick="validerFormulaire()">✔️ VALIDE</button>
+  <button class="btn-non-valide" onclick="nonValiderFormulaire()">✘ NON VALIDE</button>
+</div>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 16/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
