--- a/Embedding/Substance_Related_Disorders_out/Substance-Related Disorders/Opioid-Related Disorders/Opioid_Withdrawal.html
+++ b/Embedding/Substance_Related_Disorders_out/Substance-Related Disorders/Opioid-Related Disorders/Opioid_Withdrawal.html
@@ -31,40 +31,6 @@
     fieldset { border: 2px solid #8cc63f; padding: 15px; margin-bottom: 20px; background: #ffffff; }
     legend { font-weight: bold; color: #3d7a3b; }
     label { display: block; margin-bottom: 5px; }
-    button {
-      background-color: #8cc63f;
-      color: white;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 4px;
-      margin-top: 10px;
-      cursor: pointer;
-    }
-    button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +55,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -138,29 +79,17 @@
 <!-- Critère A -->
 <fieldset id="critereA">
   <legend>Critère A – Présence de l'un ou l'autre des éléments suivants</legend>
-  <p class="subtitle">Présence de l'un ou l'autre des éléments suivants</p>
-  <div class="warning-box">
-    ⚠️ Au moins 1 des 2 situations doit être présente
-  </div>
+  <p class="subtitle">Présence de l'un ou l'autre des éléments suivants. Au moins 1 des 2 situations doit être présente. Note: L'antagoniste opioïde (ex: naloxone, naltrexone) peut précipiter un sevrage immédiat chez une personne dépendante aux opioïdes.</p>
   
   <label><input type="checkbox" name="critereA" value="1. Cessation de (ou réduction dans) usage d'opioïdes qui a été lourd et prolongé (plusieurs semaines ou plus)"/> <strong>1.</strong> Cessation de (ou réduction dans) l'usage d'opioïdes qui a été lourd et prolongé (c.-à-d. plusieurs semaines ou plus)</label>
   
   <label><input type="checkbox" name="critereA" value="2. Administration d'un antagoniste opioïde après période d'usage d'opioïdes"/> <strong>2.</strong> Administration d'un antagoniste opioïde après une période d'usage d'opioïdes</label>
-  
-  <div class="note-box">
-    <strong>Note :</strong> L'antagoniste opioïde (ex: naloxone, naltrexone) peut précipiter un sevrage immédiat chez une personne dépendante aux opioïdes.
-  </div>
-  
-  <button type="button" onclick="validerCritereA()">✔️ Valider le critère A</button>
 </fieldset>
 
 <!-- Critère B -->
-<fieldset id="critereB" class="hidden">
+<fieldset id="critereB">
   <legend>Critère B – Signes et symptômes de sevrage</legend>
-  <p class="subtitle">Trois (ou plus) des signes/symptômes suivants se développant dans les minutes à plusieurs jours après le critère A</p>
-  <div class="warning-box">
-    ⚠️ Au moins 3 des 9 signes/symptômes doivent être présents
-  </div>
+  <p class="subtitle">Trois (ou plus) des signes/symptômes suivants se développant dans les minutes à plusieurs jours après le critère A. Au moins 3 des 9 signes/symptômes doivent être présents.</p>
   
   <label><input type="checkbox" name="critereB" value="1. Humeur dysphorique"/> <strong>1.</strong> Humeur dysphorique</label>
   
@@ -179,193 +108,79 @@
   <label><input type="checkbox" name="critereB" value="8. Fièvre"/> <strong>8.</strong> Fièvre</label>
   
   <label><input type="checkbox" name="critereB" value="9. Insomnie"/> <strong>9.</strong> Insomnie</label>
-  
-  <button type="button" onclick="validerCritereB()">✔️ Valider le critère B</button>
 </fieldset>
 
 <!-- Critère C -->
-<fieldset id="critereC" class="hidden">
+<fieldset id="critereC">
   <legend>Critère C – Détresse ou altération cliniquement significative</legend>
   <p class="subtitle">Les signes ou symptômes du critère B causent une détresse ou altération cliniquement significative dans le fonctionnement</p>
   <label><input type="checkbox" name="critereC" value="Signes ou symptômes causent détresse ou altération cliniquement significative dans fonctionnement social, professionnel ou autres domaines importants"/> Les signes ou symptômes causent une détresse ou altération cliniquement significative dans le fonctionnement social, professionnel ou autres domaines importants</label>
-  <button type="button" onclick="validerCritereC()">✔️ Valider le critère C</button>
 </fieldset>
 
 <!-- Critère D -->
-<fieldset id="critereD" class="hidden">
+<fieldset id="critereD">
   <legend>Critère D – Non attribuable à autre condition</legend>
   <p class="subtitle">Les signes ou symptômes ne sont pas attribuables à une autre condition médicale et ne sont pas mieux expliqués par un autre trouble mental</p>
   <label><input type="checkbox" name="critereD" value="Signes ou symptômes non attribuables à autre condition médicale"/> Les signes ou symptômes ne sont pas attribuables à une autre condition médicale</label>
   <label><input type="checkbox" name="critereD" value="Non mieux expliqués par autre trouble mental, incluant intoxication ou sevrage d'autre substance"/> Ne sont pas mieux expliqués par un autre trouble mental, incluant intoxication ou sevrage d'une autre substance</label>
-  <button type="button" onclick="validerCritereD()">✔️ Valider le critère D</button>
 </fieldset>
 
 <!-- Comorbidité -->
-<fieldset id="comorbidite" class="hidden">
+<fieldset id="comorbidite">
   <legend>Trouble d'usage d'opioïdes comorbide</legend>
-  <div class="warning-box">
-    ⚠️ Le code ICD-10-CM dépend de la présence et de la sévérité d'un trouble d'usage d'opioïdes comorbide
-  </div>
+  <p class="subtitle">Le code ICD-10-CM dépend de la présence et de la sévérité d'un trouble d'usage d'opioïdes comorbide</p>
   <p style="margin-top: 10px;"><strong>Sélectionner la comorbidité :</strong></p>
   <label><input type="radio" name="comorbidite" value="Sans trouble d'usage d'opioïdes"/> <strong>Sans trouble d'usage d'opioïdes comorbide</strong> (ex: patient prenant opioïdes uniquement sous supervision médicale appropriée)</label>
   <label><input type="radio" name="comorbidite" value="Avec trouble d'usage d'opioïdes léger"/> <strong>Avec trouble d'usage d'opioïdes léger comorbide</strong></label>
   <label><input type="radio" name="comorbidite" value="Avec trouble d'usage d'opioïdes modéré"/> <strong>Avec trouble d'usage d'opioïdes modéré comorbide</strong></label>
   <label><input type="radio" name="comorbidite" value="Avec trouble d'usage d'opioïdes sévère"/> <strong>Avec trouble d'usage d'opioïdes sévère comorbide</strong></label>
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
+</fieldset>
+
+<!-- Diagnostic différentiel -->
+<fieldset id="diagnostic-differentiel">
+  <legend>Diagnostic différentiel</legend>
+  <p class="subtitle">Cocher les troubles à différencier du sevrage des opioïdes</p>
+  
+  <label><input type="checkbox" name="diff_medical" value="Sevrage dû à autre condition médicale - Distinction avec effets physiologiques directs d'autres conditions"/> Sevrage dû à autre condition médicale - Distinction avec effets physiologiques directs d'autres conditions</label>
+  
+  <label><input type="checkbox" name="diff_substance" value="Sevrage d'autre substance - Distinction avec sevrage d'autres substances psychoactives"/> Sevrage d'autre substance - Distinction avec sevrage d'autres substances psychoactives</label>
+  
+  <label><input type="checkbox" name="diff_intoxication" value="Intoxication aux opioïdes - Distinction avec sevrage basée sur symptômes"/> Intoxication aux opioïdes - Distinction avec sevrage basée sur symptômes</label>
+  
+  <label><input type="checkbox" name="diff_other" value="Autres troubles mentaux - Distinction avec troubles mentaux primaires présentant des symptômes similaires"/> Autres troubles mentaux - Distinction avec troubles mentaux primaires présentant des symptômes similaires</label>
+  
+  <label><input type="checkbox" name="diff_medical_use" value="Usage médical approprié - Distinction avec usage médical approprié sans syndrome de sevrage"/> Usage médical approprié - Distinction avec usage médical approprié sans syndrome de sevrage</label>
+  
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset id="comorbidite-section">
+  <legend>Comorbidité</legend>
+  <p class="subtitle">Cocher les troubles fréquemment comorbides avec le sevrage des opioïdes</p>
+  
+  <label><input type="checkbox" name="comorb_use" value="Trouble d'usage d'opioïdes - Fréquemment comorbide"/> Trouble d'usage d'opioïdes - Fréquemment comorbide</label>
+  
+  <label><input type="checkbox" name="comorb_intoxication" value="Intoxication aux opioïdes - Peut précéder le sevrage"/> Intoxication aux opioïdes - Peut précéder le sevrage</label>
+  
+  <label><input type="checkbox" name="comorb_other_substance" value="Troubles liés à d'autres substances - Usage simultané fréquent"/> Troubles liés à d'autres substances - Usage simultané fréquent</label>
+  
+  <label><input type="checkbox" name="comorb_mental" value="Troubles mentaux primaires - Peuvent être exacerbés par sevrage"/> Troubles mentaux primaires - Peuvent être exacerbés par sevrage</label>
+  
+  <label><input type="checkbox" name="comorb_medical" value="Conditions médicales - Sevrage peut masquer ou exacerber conditions médicales"/> Conditions médicales - Sevrage peut masquer ou exacerber conditions médicales</label>
+  
 </fieldset>
 
 </form>
 
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:[],critereB:[],critereC:"",critereD:[],comorbidite:""};
-
-const codes={
-  "Sans trouble d'usage d'opioïdes":"F11.93",
-  "Avec trouble d'usage d'opioïdes léger":"F11.13",
-  "Avec trouble d'usage d'opioïdes modéré":"F11.23",
-  "Avec trouble d'usage d'opioïdes sévère":"F11.23"
-};
-
-function validerCritereA(){
-  const c=Array.from(document.querySelectorAll("input[name='critereA']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereA=c;
-    document.getElementById("critereB").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère A", confirmButtonColor: "#667eea"});
-}
-
-function validerCritereB(){
-  const c=Array.from(document.querySelectorAll("input[name='critereB']:checked")).map(e=>e.value);
-  if(c.length>=3){
-    choix.critereB=c;
-    document.getElementById("critereC").classList.remove("hidden");
-  }else alert("Au moins 3 des 9 signes/symptômes doivent être cochés (actuellement: "+c.length+"/9)");
-}
-
-function validerCritereC(){
-  const c=document.querySelector("input[name='critereC']:checked");
-  if(c){
-    choix.critereC=c.value;
-    document.getElementById("critereD").classList.remove("hidden");
-  }else alert("Cochez l'option du critère C");
-}
-
-function validerCritereD(){
-  const c=Array.from(document.querySelectorAll("input[name='critereD']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereD=c;
-    document.getElementById("comorbidite").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère D", confirmButtonColor: "#667eea"});
-}
-
-function afficherResume(){
-  const co=document.querySelector("input[name='comorbidite']:checked");
-  if(co){
-    choix.comorbidite=co.value;
-    genererResume();
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Sélectionnez la comorbidité", confirmButtonColor: "#667eea"});
-}
-
-function genererResume(){
-  const code=codes[choix.comorbidite];
-  const nbSymptomes=choix.critereB.length;
-  let diag=code+" Sevrage des Opioïdes";
-  if(choix.comorbidite!=="Sans trouble d'usage d'opioïdes"){
-    diag+=", "+choix.comorbidite.toLowerCase();
-  }
-  diag+=" ("+nbSymptomes+" symptômes)";
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Critère A – Présence de l'un ou l'autre</h4><ul class='choix-list'>";
-  choix.critereA.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère B – Signes et symptômes de sevrage (≥3/9)</h4>";
-  h+="<p><strong>Nombre de signes/symptômes: "+nbSymptomes+"/9</strong></p>";
-  h+="<ul class='choix-list'>";
-  choix.critereB.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère C – Détresse ou altération cliniquement significative</h4><ul class='choix-list'><li>✓ "+choix.critereC+"</li></ul>";
-  
-  h+="<h4>Critère D – Non attribuable à autre condition</h4><ul class='choix-list'>";
-  choix.critereD.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Comorbidité</h4><ul class='choix-list'><li>✓ "+choix.comorbidite+"</li></ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Sevrage des opioïdes suite à cessation/réduction d'usage lourd et prolongé ou administration d'antagoniste.";
-  h+="<br/><br/><strong>Critère A :</strong> Présence de l'un ou l'autre:";
-  h+="<br/>1. Cessation de (ou réduction dans) usage d'opioïdes qui a été lourd et prolongé (plusieurs semaines ou plus)";
-  h+="<br/>2. Administration d'un antagoniste opioïde (naloxone, naltrexone) après période d'usage d'opioïdes";
-  h+="<br/><br/><strong>Critère B :</strong> ≥3 des signes/symptômes suivants dans minutes à plusieurs jours après critère A:";
-  h+="<br/>1. Humeur dysphorique";
-  h+="<br/>2. Nausée ou vomissement";
-  h+="<br/>3. Douleurs musculaires";
-  h+="<br/>4. Larmoiement ou rhinorrhée";
-  h+="<br/>5. Dilatation pupillaire, piloérection (chair de poule) ou sudation";
-  h+="<br/>6. Diarrhée";
-  h+="<br/>7. Bâillements";
-  h+="<br/>8. Fièvre";
-  h+="<br/>9. Insomnie";
-  h+="<br/><br/><strong>Critère C :</strong> Signes/symptômes causent détresse ou altération cliniquement significative.";
-  h+="<br/><br/><strong>Critère D :</strong> Non attribuables à autre condition médicale et non mieux expliqués par autre trouble mental (incluant intoxication/sevrage autre substance).";
-  h+="<br/><br/><strong>Codage ICD-10-CM (dépend de comorbidité) :</strong>";
-  h+="<br/>• <strong>F11.93</strong> : Sans trouble d'usage d'opioïdes comorbide (ex: usage médical approprié)";
-  h+="<br/>• <strong>F11.13</strong> : Avec trouble d'usage d'opioïdes léger comorbide";
-  h+="<br/>• <strong>F11.23</strong> : Avec trouble d'usage d'opioïdes modéré ou sévère comorbide";
-  h+="<br/><br/><strong>Temporalité :</strong>";
-  h+="<br/>• Développement: Minutes à plusieurs jours après cessation/réduction";
-  h+="<br/>• Usage préalable: Lourd et prolongé (plusieurs semaines ou plus)";
-  h+="<br/>• Sevrage précipité: Immédiat si antagoniste administré";
-  h+="<br/><br/><strong>Symptômes physiques typiques :</strong>";
-  h+="<br/>• Douleurs musculaires ('body aches')";
-  h+="<br/>• Nausée, vomissement, diarrhée";
-  h+="<br/>• Larmoiement, rhinorrhée";
-  h+="<br/>• Dilatation pupillaire (inverse du myosis de l'intoxication)";
-  h+="<br/>• Piloérection (chair de poule)";
-  h+="<br/>• Sudation, fièvre";
-  h+="<br/>• Bâillements";
-  h+="<br/><br/><strong>Symptômes psychologiques typiques :</strong>";
-  h+="<br/>• Humeur dysphorique";
-  h+="<br/>• Anxiété, agitation";
-  h+="<br/>• Insomnie";
-  h+="<br/>• Craving intense";
-  h+="<br/><br/><strong>Évolution temporelle :</strong>";
-  h+="<br/>• Début: 6-12 heures après dernière dose (héroïne, morphine)";
-  h+="<br/>• Pic: 24-72 heures";
-  h+="<br/>• Durée: 5-10 jours typiquement";
-  h+="<br/>• Résolution: Complète en 1-2 semaines";
-  h+="<br/><br/><strong>Variation selon opioïde :</strong>";
-  h+="<br/>• Héroïne: Début rapide (6-12h), durée courte";
-  h+="<br/>• Méthadone: Début retardé (24-48h), durée longue (2-3 semaines)";
-  h+="<br/>• Buprénorphine: Sevrage plus léger";
-  h+="<br/><br/><strong>Sévérité :</strong>";
-  h+="<br/>• Généralement non mortelle (contrairement au sevrage alcool/benzodiazépines)";
-  h+="<br/>• Très inconfortable ('flu-like symptoms')";
-  h+="<br/>• Risque de rechute élevé sans traitement";
-  h+="<br/><br/><strong>Traitement :</strong>";
-  h+="<br/>• Méthadone ou buprénorphine (substitution)";
-  h+="<br/>• Clonidine (symptômes autonomes)";
-  h+="<br/>• Support symptomatique";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
+<div class="boutons-validation">
+  <button class="btn-valide" onclick="validerFormulaire()">✔️ VALIDE</button>
+  <button class="btn-non-valide" onclick="nonValiderFormulaire()">✘ NON VALIDE</button>
+</div>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 16/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
