--- a/Embedding/Substance_Related_Disorders_out/Substance-Related Disorders/Sedative-Hypnotic-or-Anxiolytic-Use-Disorder/Sedative_Hypnotic_or_Anxiolytic_Intoxication.html
+++ b/Embedding/Substance_Related_Disorders_out/Substance-Related Disorders/Sedative-Hypnotic-or-Anxiolytic-Use-Disorder/Sedative_Hypnotic_or_Anxiolytic_Intoxication.html
@@ -31,40 +31,6 @@
     fieldset { border: 2px solid #8cc63f; padding: 15px; margin-bottom: 20px; background: #ffffff; }
     legend { font-weight: bold; color: #3d7a3b; }
     label { display: block; margin-bottom: 5px; }
-    button {
-      background-color: #8cc63f;
-      color: white;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 4px;
-      margin-top: 10px;
-      cursor: pointer;
-    }
-    button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +55,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -138,16 +79,12 @@
 <!-- Critère A -->
 <fieldset id="critereA">
   <legend>Critère A – Usage récent d'un sédatif, hypnotique ou anxiolytique</legend>
-  <p class="subtitle">Usage récent d'un sédatif, hypnotique ou anxiolytique</p>
-  <div class="note-box">
-    <strong>Exemples :</strong> Benzodiazépines (diazépam, alprazolam, lorazépam), barbituriques, Z-drugs (zolpidem, zopiclone), méprobamate, etc.
-  </div>
+  <p class="subtitle">Usage récent d'un sédatif, hypnotique ou anxiolytique. Exemples : Benzodiazépines (diazépam, alprazolam, lorazépam), barbituriques, Z-drugs (zolpidem, zopiclone), méprobamate, etc.</p>
   <label><input type="checkbox" name="critereA" value="Usage récent d'un sédatif, hypnotique ou anxiolytique"/> Usage récent d'un sédatif, hypnotique ou anxiolytique</label>
-  <button type="button" onclick="validerCritereA()">✔️ Valider le critère A</button>
 </fieldset>
 
 <!-- Critère B -->
-<fieldset id="critereB" class="hidden">
+<fieldset id="critereB">
   <legend>Critère B – Changements comportementaux ou psychologiques maladaptatifs</legend>
   <p class="subtitle">Changements comportementaux ou psychologiques maladaptatifs cliniquement significatifs qui se sont développés durant, ou peu après, l'usage de sédatif, hypnotique ou anxiolytique</p>
   <label><input type="checkbox" name="critereB" value="Changements comportementaux ou psychologiques maladaptatifs cliniquement significatifs"/> Changements comportementaux ou psychologiques maladaptatifs cliniquement significatifs</label>
@@ -158,17 +95,12 @@
   <label><input type="checkbox" name="exempleB" value="Comportement agressif"/> Comportement agressif</label>
   <label><input type="checkbox" name="exempleB" value="Labilité de l'humeur"/> Labilité de l'humeur</label>
   <label><input type="checkbox" name="exempleB" value="Jugement altéré"/> Jugement altéré</label>
-  
-  <button type="button" onclick="validerCritereB()">✔️ Valider le critère B</button>
 </fieldset>
 
 <!-- Critère C -->
-<fieldset id="critereC" class="hidden">
+<fieldset id="critereC">
   <legend>Critère C – Signes ou symptômes</legend>
-  <p class="subtitle">Un (ou plus) des signes ou symptômes suivants se développant durant, ou peu après, l'usage de sédatif, hypnotique ou anxiolytique</p>
-  <div class="warning-box">
-    ⚠️ Au moins 1 des 6 signes/symptômes doit être présent
-  </div>
+  <p class="subtitle">Un (ou plus) des signes ou symptômes suivants se développant durant, ou peu après, l'usage de sédatif, hypnotique ou anxiolytique. Au moins 1 des 6 signes/symptômes doit être présent.</p>
   
   <label><input type="checkbox" name="critereC" value="1. Parole indistincte"/> <strong>1.</strong> Parole indistincte (Slurred speech)</label>
   <label><input type="checkbox" name="critereC" value="2. Incoordination"/> <strong>2.</strong> Incoordination</label>
@@ -176,179 +108,72 @@
   <label><input type="checkbox" name="critereC" value="4. Nystagmus"/> <strong>4.</strong> Nystagmus</label>
   <label><input type="checkbox" name="critereC" value="5. Altération de la cognition (attention, mémoire)"/> <strong>5.</strong> Altération de la cognition (ex: attention, mémoire)</label>
   <label><input type="checkbox" name="critereC" value="6. Stupeur ou coma"/> <strong>6.</strong> Stupeur ou coma</label>
-  
-  <button type="button" onclick="validerCritereC()">✔️ Valider le critère C</button>
 </fieldset>
 
 <!-- Critère D -->
-<fieldset id="critereD" class="hidden">
+<fieldset id="critereD">
   <legend>Critère D – Non attribuable à autre condition</legend>
   <p class="subtitle">Les signes ou symptômes ne sont pas attribuables à une autre condition médicale et ne sont pas mieux expliqués par un autre trouble mental</p>
   <label><input type="checkbox" name="critereD" value="Signes ou symptômes non attribuables à autre condition médicale"/> Les signes ou symptômes ne sont pas attribuables à une autre condition médicale</label>
   <label><input type="checkbox" name="critereD" value="Non mieux expliqués par autre trouble mental, incluant intoxication avec autre substance"/> Ne sont pas mieux expliqués par un autre trouble mental, incluant intoxication avec une autre substance</label>
-  <button type="button" onclick="validerCritereD()">✔️ Valider le critère D</button>
 </fieldset>
 
 <!-- Comorbidité -->
-<fieldset id="comorbidite" class="hidden">
+<fieldset id="comorbidite">
   <legend>Trouble d'usage de sédatifs, hypnotiques ou anxiolytiques comorbide</legend>
-  <div class="warning-box">
-    ⚠️ Le code ICD-10-CM dépend de la présence et de la sévérité d'un trouble d'usage comorbide
-  </div>
+  <p class="subtitle">Le code ICD-10-CM dépend de la présence et de la sévérité d'un trouble d'usage comorbide</p>
   <p style="margin-top: 10px;"><strong>Sélectionner la comorbidité :</strong></p>
   <label><input type="radio" name="comorbidite" value="Sans trouble d'usage de sédatifs, hypnotiques ou anxiolytiques"/> <strong>Sans trouble d'usage de sédatifs, hypnotiques ou anxiolytiques comorbide</strong></label>
   <label><input type="radio" name="comorbidite" value="Avec trouble d'usage de sédatifs, hypnotiques ou anxiolytiques léger"/> <strong>Avec trouble d'usage de sédatifs, hypnotiques ou anxiolytiques léger comorbide</strong></label>
   <label><input type="radio" name="comorbidite" value="Avec trouble d'usage de sédatifs, hypnotiques ou anxiolytiques modéré"/> <strong>Avec trouble d'usage de sédatifs, hypnotiques ou anxiolytiques modéré comorbide</strong></label>
   <label><input type="radio" name="comorbidite" value="Avec trouble d'usage de sédatifs, hypnotiques ou anxiolytiques sévère"/> <strong>Avec trouble d'usage de sédatifs, hypnotiques ou anxiolytiques sévère comorbide</strong></label>
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
+</fieldset>
+
+<!-- Diagnostic différentiel -->
+<fieldset id="diagnostic-differentiel">
+  <legend>Diagnostic différentiel</legend>
+  <p class="subtitle">Cocher les troubles à différencier de l'intoxication aux sédatifs, hypnotiques ou anxiolytiques</p>
+  
+  <label><input type="checkbox" name="diff_medical" value="Intoxication due à autre condition médicale - Distinction avec effets physiologiques directs d'autres conditions"/> Intoxication due à autre condition médicale - Distinction avec effets physiologiques directs d'autres conditions</label>
+  
+  <label><input type="checkbox" name="diff_substance" value="Intoxication avec autre substance - Distinction avec intoxication par autres substances psychoactives"/> Intoxication avec autre substance - Distinction avec intoxication par autres substances psychoactives</label>
+  
+  <label><input type="checkbox" name="diff_delirium" value="Delirium - Distinction avec intoxication simple"/> Delirium - Distinction avec intoxication simple</label>
+  
+  <label><input type="checkbox" name="diff_other" value="Autres troubles mentaux - Distinction avec troubles mentaux primaires présentant des symptômes similaires"/> Autres troubles mentaux - Distinction avec troubles mentaux primaires présentant des symptômes similaires</label>
+  
+  <label><input type="checkbox" name="diff_medical_use" value="Usage médical approprié - Distinction avec usage médical approprié sans syndrome d'intoxication"/> Usage médical approprié - Distinction avec usage médical approprié sans syndrome d'intoxication</label>
+  
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset id="comorbidite-section">
+  <legend>Comorbidité</legend>
+  <p class="subtitle">Cocher les troubles fréquemment comorbides avec l'intoxication aux sédatifs, hypnotiques ou anxiolytiques</p>
+  
+  <label><input type="checkbox" name="comorb_use" value="Trouble d'usage de sédatifs, hypnotiques ou anxiolytiques - Fréquemment comorbide"/> Trouble d'usage de sédatifs, hypnotiques ou anxiolytiques - Fréquemment comorbide</label>
+  
+  <label><input type="checkbox" name="comorb_withdrawal" value="Sevrage des sédatifs, hypnotiques ou anxiolytiques - Peut survenir après intoxication"/> Sevrage des sédatifs, hypnotiques ou anxiolytiques - Peut survenir après intoxication</label>
+  
+  <label><input type="checkbox" name="comorb_other_substance" value="Troubles liés à d'autres substances - Usage simultané fréquent"/> Troubles liés à d'autres substances - Usage simultané fréquent</label>
+  
+  <label><input type="checkbox" name="comorb_mental" value="Troubles mentaux primaires - Peuvent être exacerbés par intoxication"/> Troubles mentaux primaires - Peuvent être exacerbés par intoxication</label>
+  
+  <label><input type="checkbox" name="comorb_medical" value="Conditions médicales - Intoxication peut masquer ou exacerber conditions médicales"/> Conditions médicales - Intoxication peut masquer ou exacerber conditions médicales</label>
+  
 </fieldset>
 
 </form>
 
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:"",critereB:[],exempleB:[],critereC:[],critereD:[],comorbidite:""};
-
-const codes={
-  "Sans trouble d'usage de sédatifs, hypnotiques ou anxiolytiques":"F13.920",
-  "Avec trouble d'usage de sédatifs, hypnotiques ou anxiolytiques léger":"F13.120",
-  "Avec trouble d'usage de sédatifs, hypnotiques ou anxiolytiques modéré":"F13.220",
-  "Avec trouble d'usage de sédatifs, hypnotiques ou anxiolytiques sévère":"F13.220"
-};
-
-function validerCritereA(){
-  const c=document.querySelector("input[name='critereA']:checked");
-  if(c){
-    choix.critereA=c.value;
-    document.getElementById("critereB").classList.remove("hidden");
-  }else alert("Cochez l'option du critère A");
-}
-
-function validerCritereB(){
-  const cb=Array.from(document.querySelectorAll("input[name='critereB']:checked")).map(e=>e.value);
-  const ex=Array.from(document.querySelectorAll("input[name='exempleB']:checked")).map(e=>e.value);
-  if(cb.length>0){
-    choix.critereB=cb;
-    choix.exempleB=ex;
-    document.getElementById("critereC").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère B", confirmButtonColor: "#667eea"});
-}
-
-function validerCritereC(){
-  const c=Array.from(document.querySelectorAll("input[name='critereC']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereC=c;
-    document.getElementById("critereD").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Au moins 1 des 6 signes/symptômes doit être coché", confirmButtonColor: "#667eea"});
-}
-
-function validerCritereD(){
-  const c=Array.from(document.querySelectorAll("input[name='critereD']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereD=c;
-    document.getElementById("comorbidite").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère D", confirmButtonColor: "#667eea"});
-}
-
-function afficherResume(){
-  const co=document.querySelector("input[name='comorbidite']:checked");
-  if(co){
-    choix.comorbidite=co.value;
-    genererResume();
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Sélectionnez la comorbidité", confirmButtonColor: "#667eea"});
-}
-
-function genererResume(){
-  const code=codes[choix.comorbidite];
-  let diag=code+" Intoxication aux Sédatifs, Hypnotiques ou Anxiolytiques";
-  if(choix.comorbidite!=="Sans trouble d'usage de sédatifs, hypnotiques ou anxiolytiques"){
-    diag+=", "+choix.comorbidite.toLowerCase();
-  }
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Critère A – Usage récent</h4><ul class='choix-list'><li>✓ "+choix.critereA+"</li></ul>";
-  
-  h+="<h4>Critère B – Changements comportementaux/psychologiques maladaptatifs</h4><ul class='choix-list'>";
-  choix.critereB.forEach(s=>h+="<li>✓ "+s+"</li>");
-  if(choix.exempleB.length>0){
-    h+="<li><strong>Exemples observés :</strong></li>";
-    choix.exempleB.forEach(s=>h+="<li style='margin-left:20px;'>✓ "+s+"</li>");
-  }
-  h+="</ul>";
-  
-  h+="<h4>Critère C – Signes ou symptômes (≥1/6)</h4><ul class='choix-list'>";
-  choix.critereC.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère D – Non attribuable à autre condition</h4><ul class='choix-list'>";
-  choix.critereD.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Comorbidité</h4><ul class='choix-list'><li>✓ "+choix.comorbidite+"</li></ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>Caractéristiques :</strong> Intoxication aux sédatifs, hypnotiques ou anxiolytiques avec changements comportementaux/psychologiques et signes physiques.";
-  h+="<br/><br/><strong>Critère A :</strong> Usage récent d'un sédatif, hypnotique ou anxiolytique.";
-  h+="<br/><br/><strong>Exemples de substances :</strong>";
-  h+="<br/>• <strong>Benzodiazépines:</strong> Diazépam (Valium), alprazolam (Xanax), lorazépam (Ativan), clonazépam (Rivotril)";
-  h+="<br/>• <strong>Z-drugs:</strong> Zolpidem (Stilnox), zopiclone (Imovane), zaleplon";
-  h+="<br/>• <strong>Barbituriques:</strong> Phénobarbital, pentobarbital";
-  h+="<br/>• <strong>Autres:</strong> Méprobamate, GHB (gamma-hydroxybutyrate)";
-  h+="<br/><br/><strong>Critère B :</strong> Changements comportementaux ou psychologiques maladaptatifs cliniquement significatifs développés durant/peu après usage.";
-  h+="<br/>Exemples: Comportement sexuel ou agressif inapproprié, labilité de l'humeur, jugement altéré.";
-  h+="<br/><br/><strong>Critère C :</strong> ≥1 des signes/symptômes suivants durant/peu après usage:";
-  h+="<br/>1. Parole indistincte";
-  h+="<br/>2. Incoordination";
-  h+="<br/>3. Démarche instable";
-  h+="<br/>4. Nystagmus";
-  h+="<br/>5. Altération de la cognition (attention, mémoire)";
-  h+="<br/>6. Stupeur ou coma";
-  h+="<br/><br/><strong>Critère D :</strong> Non attribuables à autre condition médicale et non mieux expliqués par autre trouble mental (incluant intoxication avec autre substance).";
-  h+="<br/><br/><strong>Codage ICD-10-CM (dépend de comorbidité) :</strong>";
-  h+="<br/>• <strong>F13.920</strong> : Sans trouble d'usage comorbide";
-  h+="<br/>• <strong>F13.120</strong> : Avec trouble d'usage léger comorbide";
-  h+="<br/>• <strong>F13.220</strong> : Avec trouble d'usage modéré ou sévère comorbide";
-  h+="<br/><br/><strong>Signes physiques typiques :</strong>";
-  h+="<br/>• Parole indistincte (très fréquent)";
-  h+="<br/>• Incoordination motrice";
-  h+="<br/>• Démarche instable, ataxie";
-  h+="<br/>• Nystagmus";
-  h+="<br/>• Altération cognitive (attention, mémoire)";
-  h+="<br/><br/><strong>Changements comportementaux typiques :</strong>";
-  h+="<br/>• Désinhibition comportementale";
-  h+="<br/>• Comportement inapproprié (sexuel, agressif)";
-  h+="<br/>• Labilité émotionnelle";
-  h+="<br/>• Jugement altéré";
-  h+="<br/>• Sédation, somnolence";
-  h+="<br/><br/><strong>Intoxication sévère :</strong>";
-  h+="<br/>• Stupeur, coma";
-  h+="<br/>• Dépression respiratoire (risque vital)";
-  h+="<br/>• Risque accru si combiné avec alcool ou opioïdes";
-  h+="<br/><br/><strong>Similarité avec intoxication alcoolique :</strong>";
-  h+="<br/>• Présentation clinique similaire";
-  h+="<br/>• Parole indistincte, incoordination, démarche instable";
-  h+="<br/>• Différenciation: Histoire d'usage, tests toxicologiques, absence d'odeur d'alcool";
-  h+="<br/><br/><strong>Durée des effets (variable selon substance) :</strong>";
-  h+="<br/>• Benzodiazépines courte action: 2-6 heures";
-  h+="<br/>• Benzodiazépines longue action: 12-24 heures";
-  h+="<br/>• Z-drugs: 4-8 heures";
-  h+="<br/>• Barbituriques: Variable (4-48 heures)";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
+<div class="boutons-validation">
+  <button class="btn-valide" onclick="validerFormulaire()">✔️ VALIDE</button>
+  <button class="btn-non-valide" onclick="nonValiderFormulaire()">✘ NON VALIDE</button>
+</div>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 16/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
