--- a/Embedding/Substance_Related_Disorders_out/Substance-Related Disorders/Sedative-Hypnotic-or-Anxiolytic-Use-Disorder/Sedative_Hypnotic_or_Anxiolytic_Withdrawal.html
+++ b/Embedding/Substance_Related_Disorders_out/Substance-Related Disorders/Sedative-Hypnotic-or-Anxiolytic-Use-Disorder/Sedative_Hypnotic_or_Anxiolytic_Withdrawal.html
@@ -31,40 +31,6 @@
     fieldset { border: 2px solid #8cc63f; padding: 15px; margin-bottom: 20px; background: #ffffff; }
     legend { font-weight: bold; color: #3d7a3b; }
     label { display: block; margin-bottom: 5px; }
-    button {
-      background-color: #8cc63f;
-      color: white;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 4px;
-      margin-top: 10px;
-      cursor: pointer;
-    }
-    button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,43 +55,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .danger-box {
-      background: #f8d7da;
-      border-left: 4px solid #dc3545;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-      color: #721c24;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -146,21 +79,14 @@
 <!-- Critère A -->
 <fieldset id="critereA">
   <legend>Critère A – Cessation ou réduction d'usage prolongé</legend>
-  <p class="subtitle">Cessation de (ou réduction dans) l'usage de sédatifs, hypnotiques ou anxiolytiques qui a été prolongé</p>
-  <div class="danger-box">
-    ⚠️ URGENCE MÉDICALE : Le sevrage des sédatifs/hypnotiques/anxiolytiques peut être MORTEL (crises convulsives, delirium). Nécessite surveillance médicale étroite.
-  </div>
+  <p class="subtitle">Cessation de (ou réduction dans) l'usage de sédatifs, hypnotiques ou anxiolytiques qui a été prolongé. URGENCE MÉDICALE : Le sevrage des sédatifs/hypnotiques/anxiolytiques peut être MORTEL (crises convulsives, delirium). Nécessite surveillance médicale étroite.</p>
   <label><input type="checkbox" name="critereA" value="Cessation de (ou réduction dans) usage de sédatifs, hypnotiques ou anxiolytiques qui a été prolongé"/> Cessation de (ou réduction dans) l'usage de sédatifs, hypnotiques ou anxiolytiques qui a été prolongé</label>
-  <button type="button" onclick="validerCritereA()">✔️ Valider le critère A</button>
 </fieldset>
 
 <!-- Critère B -->
-<fieldset id="critereB" class="hidden">
+<fieldset id="critereB">
   <legend>Critère B – Signes et symptômes de sevrage</legend>
-  <p class="subtitle">Deux (ou plus) des signes/symptômes suivants se développant dans les plusieurs heures à quelques jours après la cessation de (ou réduction dans) l'usage</p>
-  <div class="warning-box">
-    ⚠️ Au moins 2 des 8 signes/symptômes doivent être présents
-  </div>
+  <p class="subtitle">Deux (ou plus) des signes/symptômes suivants se développant dans les plusieurs heures à quelques jours après la cessation de (ou réduction dans) l'usage. Au moins 2 des 8 signes/symptômes doivent être présents.</p>
   
   <label><input type="checkbox" name="critereB" value="1. Hyperactivité autonome (sudation ou fréquence cardiaque >100 bpm)"/> <strong>1.</strong> Hyperactivité autonome (ex: sudation ou fréquence cardiaque supérieure à 100 bpm)</label>
   
@@ -177,201 +103,83 @@
   <label><input type="checkbox" name="critereB" value="7. Anxiété"/> <strong>7.</strong> Anxiété</label>
   
   <label><input type="checkbox" name="critereB" value="8. Crises grand mal"/> <strong>8.</strong> Crises grand mal (convulsions tonico-cloniques généralisées)</label>
-  
-  <button type="button" onclick="validerCritereB()">✔️ Valider le critère B</button>
 </fieldset>
 
 <!-- Critère C -->
-<fieldset id="critereC" class="hidden">
+<fieldset id="critereC">
   <legend>Critère C – Détresse ou altération cliniquement significative</legend>
   <p class="subtitle">Les signes ou symptômes du critère B causent une détresse ou altération cliniquement significative dans le fonctionnement</p>
   <label><input type="checkbox" name="critereC" value="Signes ou symptômes causent détresse ou altération cliniquement significative dans fonctionnement social, professionnel ou autres domaines importants"/> Les signes ou symptômes causent une détresse ou altération cliniquement significative dans le fonctionnement social, professionnel ou autres domaines importants</label>
-  <button type="button" onclick="validerCritereC()">✔️ Valider le critère C</button>
 </fieldset>
 
 <!-- Critère D -->
-<fieldset id="critereD" class="hidden">
+<fieldset id="critereD">
   <legend>Critère D – Non attribuable à autre condition</legend>
   <p class="subtitle">Les signes ou symptômes ne sont pas attribuables à une autre condition médicale et ne sont pas mieux expliqués par un autre trouble mental</p>
   <label><input type="checkbox" name="critereD" value="Signes ou symptômes non attribuables à autre condition médicale"/> Les signes ou symptômes ne sont pas attribuables à une autre condition médicale</label>
   <label><input type="checkbox" name="critereD" value="Non mieux expliqués par autre trouble mental, incluant intoxication ou sevrage d'autre substance"/> Ne sont pas mieux expliqués par un autre trouble mental, incluant intoxication ou sevrage d'une autre substance</label>
-  <button type="button" onclick="validerCritereD()">✔️ Valider le critère D</button>
 </fieldset>
 
 <!-- Spécificateurs et comorbidité -->
-<fieldset id="specificateurs" class="hidden">
+<fieldset id="specificateurs">
   <legend>Spécificateurs et comorbidité</legend>
   
   <p style="margin-top: 10px;"><strong>Perturbations perceptuelles :</strong></p>
   <label><input type="checkbox" name="perceptuel" value="Avec perturbations perceptuelles"/> <strong>Avec perturbations perceptuelles :</strong> Ce spécificateur peut être noté quand des hallucinations avec test de réalité intact ou des illusions auditives, visuelles ou tactiles surviennent en l'absence de delirium</label>
   
   <p style="margin-top: 15px;"><strong>Trouble d'usage comorbide :</strong></p>
-  <div class="warning-box">
-    ⚠️ Le code ICD-10-CM dépend de la comorbidité ET des perturbations perceptuelles
-  </div>
+  <p class="subtitle">Le code ICD-10-CM dépend de la comorbidité ET des perturbations perceptuelles</p>
   <label><input type="radio" name="comorbidite" value="Sans trouble d'usage"/> <strong>Sans trouble d'usage de sédatifs, hypnotiques ou anxiolytiques comorbide</strong> (ex: patient prenant uniquement sous supervision médicale appropriée)</label>
   <label><input type="radio" name="comorbidite" value="Avec trouble d'usage léger"/> <strong>Avec trouble d'usage de sédatifs, hypnotiques ou anxiolytiques léger comorbide</strong></label>
   <label><input type="radio" name="comorbidite" value="Avec trouble d'usage modéré"/> <strong>Avec trouble d'usage de sédatifs, hypnotiques ou anxiolytiques modéré comorbide</strong></label>
   <label><input type="radio" name="comorbidite" value="Avec trouble d'usage sévère"/> <strong>Avec trouble d'usage de sédatifs, hypnotiques ou anxiolytiques sévère comorbide</strong></label>
+</fieldset>
+
+<!-- Diagnostic différentiel -->
+<fieldset id="diagnostic-differentiel">
+  <legend>Diagnostic différentiel</legend>
+  <p class="subtitle">Cocher les troubles à différencier du sevrage des sédatifs, hypnotiques ou anxiolytiques</p>
   
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
+  <label><input type="checkbox" name="diff_medical" value="Sevrage dû à autre condition médicale - Distinction avec effets physiologiques directs d'autres conditions"/> Sevrage dû à autre condition médicale - Distinction avec effets physiologiques directs d'autres conditions</label>
+  
+  <label><input type="checkbox" name="diff_substance" value="Sevrage d'autre substance - Distinction avec sevrage d'autres substances psychoactives"/> Sevrage d'autre substance - Distinction avec sevrage d'autres substances psychoactives</label>
+  
+  <label><input type="checkbox" name="diff_intoxication" value="Intoxication aux sédatifs, hypnotiques ou anxiolytiques - Distinction avec sevrage basée sur symptômes"/> Intoxication aux sédatifs, hypnotiques ou anxiolytiques - Distinction avec sevrage basée sur symptômes</label>
+  
+  <label><input type="checkbox" name="diff_other" value="Autres troubles mentaux - Distinction avec troubles mentaux primaires présentant des symptômes similaires"/> Autres troubles mentaux - Distinction avec troubles mentaux primaires présentant des symptômes similaires</label>
+  
+  <label><input type="checkbox" name="diff_medical_use" value="Usage médical approprié - Distinction avec usage médical approprié sans syndrome de sevrage"/> Usage médical approprié - Distinction avec usage médical approprié sans syndrome de sevrage</label>
+  
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset id="comorbidite-section">
+  <legend>Comorbidité</legend>
+  <p class="subtitle">Cocher les troubles fréquemment comorbides avec le sevrage des sédatifs, hypnotiques ou anxiolytiques</p>
+  
+  <label><input type="checkbox" name="comorb_use" value="Trouble d'usage de sédatifs, hypnotiques ou anxiolytiques - Fréquemment comorbide"/> Trouble d'usage de sédatifs, hypnotiques ou anxiolytiques - Fréquemment comorbide</label>
+  
+  <label><input type="checkbox" name="comorb_intoxication" value="Intoxication aux sédatifs, hypnotiques ou anxiolytiques - Peut précéder le sevrage"/> Intoxication aux sédatifs, hypnotiques ou anxiolytiques - Peut précéder le sevrage</label>
+  
+  <label><input type="checkbox" name="comorb_other_substance" value="Troubles liés à d'autres substances - Usage simultané fréquent"/> Troubles liés à d'autres substances - Usage simultané fréquent</label>
+  
+  <label><input type="checkbox" name="comorb_mental" value="Troubles mentaux primaires - Peuvent être exacerbés par sevrage"/> Troubles mentaux primaires - Peuvent être exacerbés par sevrage</label>
+  
+  <label><input type="checkbox" name="comorb_medical" value="Conditions médicales - Sevrage peut masquer ou exacerber conditions médicales"/> Conditions médicales - Sevrage peut masquer ou exacerber conditions médicales</label>
+  
 </fieldset>
 
 </form>
 
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:"",critereB:[],critereC:"",critereD:[],perceptuel:"",comorbidite:""};
-
-const codes={
-  "Sans trouble d'usage":{sans:"F13.930",avec:"F13.932"},
-  "Avec trouble d'usage léger":{sans:"F13.130",avec:"F13.132"},
-  "Avec trouble d'usage modéré":{sans:"F13.230",avec:"F13.232"},
-  "Avec trouble d'usage sévère":{sans:"F13.230",avec:"F13.232"}
-};
-
-function validerCritereA(){
-  const c=document.querySelector("input[name='critereA']:checked");
-  if(c){
-    choix.critereA=c.value;
-    document.getElementById("critereB").classList.remove("hidden");
-  }else alert("Cochez l'option du critère A");
-}
-
-function validerCritereB(){
-  const c=Array.from(document.querySelectorAll("input[name='critereB']:checked")).map(e=>e.value);
-  if(c.length>=2){
-    choix.critereB=c;
-    document.getElementById("critereC").classList.remove("hidden");
-  }else alert("Au moins 2 des 8 signes/symptômes doivent être cochés (actuellement: "+c.length+"/8)");
-}
-
-function validerCritereC(){
-  const c=document.querySelector("input[name='critereC']:checked");
-  if(c){
-    choix.critereC=c.value;
-    document.getElementById("critereD").classList.remove("hidden");
-  }else alert("Cochez l'option du critère C");
-}
-
-function validerCritereD(){
-  const c=Array.from(document.querySelectorAll("input[name='critereD']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereD=c;
-    document.getElementById("specificateurs").classList.remove("hidden");
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère D", confirmButtonColor: "#667eea"});
-}
-
-function afficherResume(){
-  const co=document.querySelector("input[name='comorbidite']:checked");
-  const pe=document.querySelector("input[name='perceptuel']:checked");
-  if(co){
-    choix.comorbidite=co.value;
-    choix.perceptuel=pe?pe.value:"";
-    genererResume();
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Sélectionnez la comorbidité", confirmButtonColor: "#667eea"});
-}
-
-function genererResume(){
-  const avecPerceptuel=choix.perceptuel!=="";
-  const code=avecPerceptuel?codes[choix.comorbidite].avec:codes[choix.comorbidite].sans;
-  const nbSymptomes=choix.critereB.length;
-  
-  let diag=code+" Sevrage des Sédatifs, Hypnotiques ou Anxiolytiques";
-  if(avecPerceptuel)diag+=", avec perturbations perceptuelles";
-  if(choix.comorbidite!=="Sans trouble d'usage"){
-    diag+=", "+choix.comorbidite.toLowerCase();
-  }
-  diag+=" ("+nbSymptomes+" symptômes)";
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Critère A – Cessation ou réduction d'usage prolongé</h4><ul class='choix-list'><li>✓ "+choix.critereA+"</li></ul>";
-  
-  h+="<h4>Critère B – Signes et symptômes de sevrage (≥2/8)</h4>";
-  h+="<p><strong>Nombre de signes/symptômes: "+nbSymptomes+"/8</strong></p>";
-  h+="<ul class='choix-list'>";
-  choix.critereB.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère C – Détresse ou altération cliniquement significative</h4><ul class='choix-list'><li>✓ "+choix.critereC+"</li></ul>";
-  
-  h+="<h4>Critère D – Non attribuable à autre condition</h4><ul class='choix-list'>";
-  choix.critereD.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Spécificateurs et comorbidité</h4><ul class='choix-list'>";
-  if(choix.perceptuel)h+="<li>✓ "+choix.perceptuel+"</li>";
-  else h+="<li>✓ Sans perturbations perceptuelles</li>";
-  h+="<li>✓ Comorbidité: "+choix.comorbidite+"</li>";
-  h+="</ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>⚠️ URGENCE MÉDICALE POTENTIELLE :</strong> Le sevrage des sédatifs, hypnotiques ou anxiolytiques peut être MORTEL.";
-  h+="<br/><br/><strong>Caractéristiques :</strong> Sevrage suite à cessation/réduction d'usage prolongé.";
-  h+="<br/><br/><strong>Critère A :</strong> Cessation de (ou réduction dans) usage prolongé.";
-  h+="<br/><br/><strong>Critère B :</strong> ≥2 des signes/symptômes suivants dans plusieurs heures à quelques jours:";
-  h+="<br/>1. Hyperactivité autonome (sudation ou FC >100 bpm)";
-  h+="<br/>2. Tremblements des mains";
-  h+="<br/>3. Insomnie";
-  h+="<br/>4. Nausée ou vomissement";
-  h+="<br/>5. Hallucinations ou illusions transitoires";
-  h+="<br/>6. Agitation psychomotrice";
-  h+="<br/>7. Anxiété";
-  h+="<br/>8. Crises grand mal (URGENCE)";
-  h+="<br/><br/><strong>Critère C :</strong> Détresse ou altération cliniquement significative.";
-  h+="<br/><br/><strong>Critère D :</strong> Non attribuables à autre condition médicale et non mieux expliqués par autre trouble mental.";
-  h+="<br/><br/><strong>Spécificateur - Avec perturbations perceptuelles :</strong>";
-  h+="<br/>Hallucinations avec test de réalité intact OU illusions en absence de delirium.";
-  h+="<br/><br/><strong>Codage ICD-10-CM (dépend de comorbidité ET perturbations perceptuelles) :</strong>";
-  h+="<br/><br/><strong>SANS perturbations perceptuelles :</strong>";
-  h+="<br/>• F13.930 : Sans trouble d'usage comorbide (ex: usage médical approprié)";
-  h+="<br/>• F13.130 : Avec trouble d'usage léger comorbide";
-  h+="<br/>• F13.230 : Avec trouble d'usage modéré ou sévère comorbide";
-  h+="<br/><br/><strong>AVEC perturbations perceptuelles :</strong>";
-  h+="<br/>• F13.932 : Sans trouble d'usage comorbide";
-  h+="<br/>• F13.132 : Avec trouble d'usage léger comorbide";
-  h+="<br/>• F13.232 : Avec trouble d'usage modéré ou sévère comorbide";
-  h+="<br/><br/><strong>⚠️ RISQUES VITAUX :</strong>";
-  h+="<br/>• <strong>Crises convulsives (grand mal)</strong> - Peuvent être fatales";
-  h+="<br/>• <strong>Delirium tremens</strong> - Confusion, hallucinations, instabilité autonome";
-  h+="<br/>• <strong>Arrêt cardiaque</strong>";
-  h+="<br/>• <strong>Hyperthermie maligne</strong>";
-  h+="<br/><br/><strong>Temporalité :</strong>";
-  h+="<br/>• Début: Plusieurs heures à quelques jours après cessation";
-  h+="<br/>• Pic: 2-4 jours (benzodiazépines courte action)";
-  h+="<br/>• Durée: Variable selon substance (jours à semaines)";
-  h+="<br/><br/><strong>Similarité avec sevrage alcoolique :</strong>";
-  h+="<br/>• Présentation clinique très similaire";
-  h+="<br/>• Même mécanisme (dépression GABAergique)";
-  h+="<br/>• Même risque vital (crises, delirium)";
-  h+="<br/><br/><strong>TRAITEMENT URGENT REQUIS :</strong>";
-  h+="<br/>• <strong>Hospitalisation</strong> souvent nécessaire";
-  h+="<br/>• <strong>Substitution</strong> avec benzodiazépine longue action (diazépam, chlordiazépoxide)";
-  h+="<br/>• <strong>Réduction progressive</strong> (sevrage graduel)";
-  h+="<br/>• <strong>Surveillance</strong> signes vitaux, état neurologique";
-  h+="<br/>• <strong>Anticonvulsivants</strong> si nécessaire";
-  h+="<br/>• <strong>Support hydro-électrolytique</strong>";
-  h+="<br/><br/><strong>NE JAMAIS arrêter brutalement :</strong>";
-  h+="<br/>• Benzodiazépines (usage prolongé)";
-  h+="<br/>• Barbituriques";
-  h+="<br/>• Autres sédatifs/hypnotiques";
-  h+="<br/>→ Réduction TOUJOURS progressive sous supervision médicale";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
+<div class="boutons-validation">
+  <button class="btn-valide" onclick="validerFormulaire()">✔️ VALIDE</button>
+  <button class="btn-non-valide" onclick="nonValiderFormulaire()">✘ NON VALIDE</button>
+</div>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 16/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
