--- a/Embedding/Substance_Related_Disorders_out/Substance-Related Disorders/Tobacco-Related Disorders/Tobacco_Withdrawal.html
+++ b/Embedding/Substance_Related_Disorders_out/Substance-Related Disorders/Tobacco-Related Disorders/Tobacco_Withdrawal.html
@@ -31,40 +31,6 @@
     fieldset { border: 2px solid #8cc63f; padding: 15px; margin-bottom: 20px; background: #ffffff; }
     legend { font-weight: bold; color: #3d7a3b; }
     label { display: block; margin-bottom: 5px; }
-    button {
-      background-color: #8cc63f;
-      color: white;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 4px;
-      margin-top: 10px;
-      cursor: pointer;
-    }
-    button:hover { background-color: #76b42f; }
-    .hidden { display: none; }
-    .resume-section {
-      background: #f0f8f0;
-      border-left: 4px solid #8cc63f;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 4px;
-    }
-    .resume-section h4 {
-      margin-top: 0;
-      color: #3d7a3b;
-    }
-    .choix-list {
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-    .choix-list li {
-      padding: 8px;
-      background: white;
-      margin: 5px 0;
-      border-left: 3px solid #8cc63f;
-      padding-left: 10px;
-    }
     .boutons-validation {
       display: flex;
       gap: 10px;
@@ -89,35 +55,10 @@
     .btn-non-valide:hover {
       background-color: #c82333;
     }
-    .resultat-box {
-      margin-top: 30px;
-    }
     .subtitle {
       font-size: 0.9em;
       color: #666;
       font-style: italic;
-    }
-    .note-box {
-      background: #e8f4fd;
-      border-left: 4px solid #2196f3;
-      padding: 10px;
-      margin: 15px 0;
-      font-style: italic;
-    }
-    .warning-box {
-      background: #fff3cd;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 15px 0;
-      font-weight: bold;
-    }
-    .code-section {
-      background: #fff9e6;
-      border-left: 4px solid #ffc107;
-      padding: 10px;
-      margin: 10px 0;
-      font-family: monospace;
-      font-size: 0.85em;
     }
   </style>
 
@@ -140,16 +81,12 @@
   <legend>Critère A – Usage quotidien du tabac</legend>
   <p class="subtitle">Usage quotidien du tabac pendant au moins plusieurs semaines</p>
   <label><input type="checkbox" name="critereA" value="Usage quotidien du tabac pendant au moins plusieurs semaines"/> Usage quotidien du tabac pendant au moins plusieurs semaines</label>
-  <button type="button" onclick="validerCritereA()">✔️ Valider le critère A</button>
 </fieldset>
 
 <!-- Critère B -->
-<fieldset id="critereB" class="hidden">
+<fieldset id="critereB">
   <legend>Critère B – Signes et symptômes de sevrage</legend>
-  <p class="subtitle">Cessation abrupte de l'usage du tabac, ou réduction de la quantité de tabac utilisée, suivie dans les 24 heures par quatre (ou plus) des signes ou symptômes suivants</p>
-  <div class="warning-box">
-    ⚠️ Au moins 4 des 7 signes/symptômes doivent être présents dans les 24 heures
-  </div>
+  <p class="subtitle">Cessation abrupte de l'usage du tabac, ou réduction de la quantité de tabac utilisée, suivie dans les 24 heures par quatre (ou plus) des signes ou symptômes suivants. Au moins 4 des 7 signes/symptômes doivent être présents dans les 24 heures.</p>
   
   <label><input type="checkbox" name="critereB" value="1. Irritabilité, frustration ou colère"/> <strong>1.</strong> Irritabilité, frustration ou colère</label>
   <label><input type="checkbox" name="critereB" value="2. Anxiété"/> <strong>2.</strong> Anxiété</label>
@@ -158,168 +95,68 @@
   <label><input type="checkbox" name="critereB" value="5. Agitation"/> <strong>5.</strong> Agitation (Restlessness)</label>
   <label><input type="checkbox" name="critereB" value="6. Humeur dépressive"/> <strong>6.</strong> Humeur dépressive</label>
   <label><input type="checkbox" name="critereB" value="7. Insomnie"/> <strong>7.</strong> Insomnie</label>
-  
-  <button type="button" onclick="validerCritereB()">✔️ Valider le critère B</button>
 </fieldset>
 
 <!-- Critère C -->
-<fieldset id="critereC" class="hidden">
+<fieldset id="critereC">
   <legend>Critère C – Détresse ou altération cliniquement significative</legend>
   <p class="subtitle">Les signes ou symptômes du critère B causent une détresse ou altération cliniquement significative dans le fonctionnement</p>
   <label><input type="checkbox" name="critereC" value="Signes ou symptômes causent détresse ou altération cliniquement significative dans fonctionnement social, professionnel ou autres domaines importants"/> Les signes ou symptômes causent une détresse ou altération cliniquement significative dans le fonctionnement social, professionnel ou autres domaines importants</label>
-  <button type="button" onclick="validerCritereC()">✔️ Valider le critère C</button>
 </fieldset>
 
 <!-- Critère D -->
-<fieldset id="critereD" class="hidden">
+<fieldset id="critereD">
   <legend>Critère D – Non attribuable à autre condition</legend>
   <p class="subtitle">Les signes ou symptômes ne sont pas attribuables à une autre condition médicale et ne sont pas mieux expliqués par un autre trouble mental</p>
   <label><input type="checkbox" name="critereD" value="Signes ou symptômes non attribuables à autre condition médicale"/> Les signes ou symptômes ne sont pas attribuables à une autre condition médicale</label>
   <label><input type="checkbox" name="critereD" value="Non mieux expliqués par autre trouble mental, incluant intoxication ou sevrage d'autre substance"/> Ne sont pas mieux expliqués par un autre trouble mental, incluant intoxication ou sevrage d'une autre substance</label>
-  <button type="button" onclick="afficherResume()">✔️ Terminer</button>
+</fieldset>
+
+<!-- Diagnostic différentiel -->
+<fieldset id="diagnostic-differentiel">
+  <legend>Diagnostic différentiel</legend>
+  <p class="subtitle">Cocher les troubles à différencier du sevrage du tabac</p>
+  
+  <label><input type="checkbox" name="diff_medical" value="Sevrage dû à autre condition médicale - Distinction avec effets physiologiques directs d'autres conditions"/> Sevrage dû à autre condition médicale - Distinction avec effets physiologiques directs d'autres conditions</label>
+  
+  <label><input type="checkbox" name="diff_substance" value="Sevrage d'autre substance - Distinction avec sevrage d'autres substances psychoactives"/> Sevrage d'autre substance - Distinction avec sevrage d'autres substances psychoactives</label>
+  
+  <label><input type="checkbox" name="diff_use" value="Trouble d'usage du tabac - Distinction avec sevrage basée sur pattern d'usage"/> Trouble d'usage du tabac - Distinction avec sevrage basée sur pattern d'usage</label>
+  
+  <label><input type="checkbox" name="diff_other" value="Autres troubles mentaux - Distinction avec troubles mentaux primaires présentant des symptômes similaires"/> Autres troubles mentaux - Distinction avec troubles mentaux primaires présentant des symptômes similaires</label>
+  
+  <label><input type="checkbox" name="diff_medical_use" value="Usage médical approprié - Distinction avec usage médical approprié sans syndrome de sevrage"/> Usage médical approprié - Distinction avec usage médical approprié sans syndrome de sevrage</label>
+  
+</fieldset>
+
+<!-- Comorbidité -->
+<fieldset id="comorbidite">
+  <legend>Comorbidité</legend>
+  <p class="subtitle">Cocher les troubles fréquemment comorbides avec le sevrage du tabac</p>
+  
+  <label><input type="checkbox" name="comorb_use" value="Trouble d'usage du tabac - Fréquemment comorbide (modéré ou sévère)"/> Trouble d'usage du tabac - Fréquemment comorbide (modéré ou sévère)</label>
+  
+  <label><input type="checkbox" name="comorb_other_substance" value="Troubles liés à d'autres substances - Usage simultané fréquent"/> Troubles liés à d'autres substances - Usage simultané fréquent</label>
+  
+  <label><input type="checkbox" name="comorb_mental" value="Troubles mentaux primaires - Peuvent être exacerbés par sevrage"/> Troubles mentaux primaires - Peuvent être exacerbés par sevrage</label>
+  
+  <label><input type="checkbox" name="comorb_medical" value="Conditions médicales - Sevrage peut masquer ou exacerber conditions médicales"/> Conditions médicales - Sevrage peut masquer ou exacerber conditions médicales</label>
+  
+  <label><input type="checkbox" name="comorb_sleep" value="Troubles du sommeil induits par tabac - Peuvent être comorbides"/> Troubles du sommeil induits par tabac - Peuvent être comorbides</label>
+  
 </fieldset>
 
 </form>
 
-<div id="resultat"></div>
-
-<script>
-let choix={critereA:"",critereB:[],critereC:"",critereD:[]};
-
-function validerCritereA(){
-  const c=document.querySelector("input[name='critereA']:checked");
-  if(c){
-    choix.critereA=c.value;
-    document.getElementById("critereB").classList.remove("hidden");
-  }else alert("Cochez l'option du critère A");
-}
-
-function validerCritereB(){
-  const c=Array.from(document.querySelectorAll("input[name='critereB']:checked")).map(e=>e.value);
-  if(c.length>=4){
-    choix.critereB=c;
-    document.getElementById("critereC").classList.remove("hidden");
-  }else alert("Au moins 4 des 7 signes/symptômes doivent être cochés (actuellement: "+c.length+"/7)");
-}
-
-function validerCritereC(){
-  const c=document.querySelector("input[name='critereC']:checked");
-  if(c){
-    choix.critereC=c.value;
-    document.getElementById("critereD").classList.remove("hidden");
-  }else alert("Cochez l'option du critère C");
-}
-
-function afficherResume(){
-  const c=Array.from(document.querySelectorAll("input[name='critereD']:checked")).map(e=>e.value);
-  if(c.length>0){
-    choix.critereD=c;
-    genererResume();
-  }else Swal.fire({icon: "warning", title: "Attention", text: "Cochez au moins une option du critère D", confirmButtonColor: "#667eea"});
-}
-
-function genererResume(){
-  const code="F17.203";
-  const nbSymptomes=choix.critereB.length;
-  
-  let diag=code+" Sevrage du Tabac ("+nbSymptomes+" symptômes)";
-  
-  let h="<div class='resultat-box'><div class='resume-section'><h3>📋 RÉSUMÉ</h3>";
-  
-  h+="<h4>Critère A – Usage quotidien du tabac</h4><ul class='choix-list'><li>✓ "+choix.critereA+"</li></ul>";
-  
-  h+="<h4>Critère B – Signes et symptômes de sevrage (≥4/7 dans les 24h)</h4>";
-  h+="<p><strong>Nombre de signes/symptômes: "+nbSymptomes+"/7</strong></p>";
-  h+="<ul class='choix-list'>";
-  choix.critereB.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<h4>Critère C – Détresse ou altération cliniquement significative</h4><ul class='choix-list'><li>✓ "+choix.critereC+"</li></ul>";
-  
-  h+="<h4>Critère D – Non attribuable à autre condition</h4><ul class='choix-list'>";
-  choix.critereD.forEach(s=>h+="<li>✓ "+s+"</li>");
-  h+="</ul>";
-  
-  h+="<div class='code-section'><strong>Code:</strong> "+code+"<br/><strong>Diagnostic:</strong> "+diag;
-  h+="<br/><br/><strong>⚠️ PARTICULARITÉ IMPORTANTE :</strong> Le code ICD-10-CM F17.203 indique la présence comorbide d'un trouble d'usage du tabac MODÉRÉ ou SÉVÈRE, reflétant le fait que le sevrage du tabac ne peut survenir qu'en présence d'un trouble d'usage modéré ou sévère.";
-  h+="<br/><br/><strong>Caractéristiques :</strong> Sevrage du tabac suite à cessation abrupte ou réduction après usage quotidien prolongé.";
-  h+="<br/><br/><strong>Critère A :</strong> Usage quotidien du tabac pendant au moins plusieurs semaines.";
-  h+="<br/><br/><strong>Critère B :</strong> Cessation abrupte ou réduction, suivie dans les 24 heures par ≥4 des signes/symptômes suivants:";
-  h+="<br/>1. Irritabilité, frustration ou colère";
-  h+="<br/>2. Anxiété";
-  h+="<br/>3. Difficulté à se concentrer";
-  h+="<br/>4. Appétit augmenté";
-  h+="<br/>5. Agitation";
-  h+="<br/>6. Humeur dépressive";
-  h+="<br/>7. Insomnie";
-  h+="<br/><br/><strong>Critère C :</strong> Détresse ou altération cliniquement significative.";
-  h+="<br/><br/><strong>Critère D :</strong> Non attribuables à autre condition médicale et non mieux expliqués par autre trouble mental.";
-  h+="<br/><br/><strong>Codage ICD-10-CM :</strong>";
-  h+="<br/>• <strong>F17.203</strong> : UNIQUE code pour sevrage du tabac";
-  h+="<br/>• Ce code indique AUTOMATIQUEMENT présence comorbide de trouble d'usage du tabac MODÉRÉ ou SÉVÈRE";
-  h+="<br/>• Le sevrage du tabac ne peut survenir qu'avec trouble d'usage modéré ou sévère";
-  h+="<br/><br/><strong>Symptômes typiques du sevrage du tabac :</strong>";
-  h+="<br/>• <strong>Irritabilité</strong> (très fréquent)";
-  h+="<br/>• <strong>Anxiété</strong>";
-  h+="<br/>• <strong>Difficulté concentration</strong>";
-  h+="<br/>• <strong>Appétit augmenté</strong>, prise de poids";
-  h+="<br/>• <strong>Agitation</strong>";
-  h+="<br/>• <strong>Humeur dépressive</strong>";
-  h+="<br/>• <strong>Insomnie</strong>";
-  h+="<br/><br/><strong>Temporalité :</strong>";
-  h+="<br/>• Début: Dans les 24 heures après cessation/réduction";
-  h+="<br/>• Pic: 2-3 jours";
-  h+="<br/>• Durée: 2-4 semaines (symptômes principaux)";
-  h+="<br/>• Craving peut persister plusieurs mois";
-  h+="<br/><br/><strong>Symptômes physiques additionnels (non dans critères DSM) :</strong>";
-  h+="<br/>• Bradycardie (ralentissement cardiaque)";
-  h+="<br/>• Constipation";
-  h+="<br/>• Toux";
-  h+="<br/>• Étourdissements";
-  h+="<br/>• Maux de tête";
-  h+="<br/><br/><strong>Prise de poids :</strong>";
-  h+="<br/>• Moyenne: 2-5 kg";
-  h+="<br/>• Due à appétit augmenté";
-  h+="<br/>• Métabolisme ralenti";
-  h+="<br/>• Substitution orale";
-  h+="<br/><br/><strong>Traitement du sevrage :</strong>";
-  h+="<br/>• <strong>Substitution nicotinique:</strong>";
-  h+="<br/>&nbsp;&nbsp;- Patchs transdermiques";
-  h+="<br/>&nbsp;&nbsp;- Gommes à mâcher";
-  h+="<br/>&nbsp;&nbsp;- Pastilles";
-  h+="<br/>&nbsp;&nbsp;- Inhalateurs";
-  h+="<br/>&nbsp;&nbsp;- Sprays nasaux";
-  h+="<br/>• <strong>Médicaments:</strong>";
-  h+="<br/>&nbsp;&nbsp;- Varénicline (Champix) - agoniste partiel récepteurs nicotiniques";
-  h+="<br/>&nbsp;&nbsp;- Bupropion (Zyban) - antidépresseur";
-  h+="<br/>• <strong>Support comportemental:</strong>";
-  h+="<br/>&nbsp;&nbsp;- Thérapie cognitivo-comportementale";
-  h+="<br/>&nbsp;&nbsp;- Groupes de soutien";
-  h+="<br/>&nbsp;&nbsp;- Counseling";
-  h+="<br/><br/><strong>Efficacité des traitements :</strong>";
-  h+="<br/>• Substitution nicotinique: Double taux d'abstinence";
-  h+="<br/>• Varénicline: Plus efficace que substitution nicotinique";
-  h+="<br/>• Bupropion: Efficace, surtout si dépression comorbide";
-  h+="<br/>• Combinaison médicaments + support comportemental: Meilleur résultat";
-  h+="<br/><br/><strong>Rechute :</strong>";
-  h+="<br/>• Risque maximal: Première semaine";
-  h+="<br/>• 80% rechutent dans première année sans traitement";
-  h+="<br/>• Tentatives multiples souvent nécessaires";
-  h+="<br/>• Chaque tentative augmente chances de succès futur";
-  h+="</div></div>";
-  
-  h+="<div class='boutons-validation'><button class='btn-valide' onclick='validerFormulaire()'>✔️ VALIDE</button><button class='btn-non-valide' onclick='nonValiderFormulaire()'>✘ NON VALIDE</button></div></div>";
-  document.getElementById("resultat").innerHTML=h;
-}
-</script>
+<div class="boutons-validation">
+  <button class="btn-valide" onclick="validerFormulaire()">✔️ VALIDE</button>
+  <button class="btn-non-valide" onclick="nonValiderFormulaire()">✘ NON VALIDE</button>
+</div>
 
 <footer style="text-align:center; font-size:0.9em; margin-top: 40px; padding-top: 15px; border-top: 1px solid #ccc;">
   <p>CLINIQUE LA VALLÉE – RIAD AL ANDALOUSSE VILLA 39, AV. ABDERRAHIM BOUABID, HAY RIAD 1, Rabat</p>
   <p>Date : 16/10/2025 — <strong style="color:darkred;">DOCUMENT CONFIDENTIEL</strong></p>
 </footer>
-
-
-
 
 <script>
 function validerFormulaire() {
